--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,10 +1,18 @@
 @collection{icushistory,
-    title= {International Conference on the Unity of the Sciences - History},
-    organization= {ICUS},
-    year={2020},
-    url= {https://icus.org/about-2/history/},
-    urldate= {2023-05-08},
-    keywords={primary, moonist}
+  title= {International Conference on the Unity of the Sciences - History},
+  organization= {ICUS},
+  year={2020},
+  url= {https://icus.org/about-2/history/},
+  urldate= {2023-05-08},
+  keywords={primary, moonist}
+}
+
+@Manual{R-viafr,
+  title = {viafr: Interface to the 'VIAF' ('Virtual International Authority File') API},
+  author = {Stefanie Schneider},
+  year = {2022},
+  note = {R package version 0.3.0},
+  url = {https://CRAN.R-project.org/package=viafr},
 }
 
 @Manual{R-usethis,
