--- a/data-raw/R.bib
+++ b/data-raw/R.bib
@@ -61,6 +61,15 @@
   url = {https://usethis.r-lib.org},
 }
 
+@Manual{R-viafr,
+  title = {viafr: Interface to the VIAF (Virtual
+    International Authority File) API},
+  author = {{Stefanie Schneider}},
+  year = {2022},
+  note = {R package version 0.3.0},
+  url = {https://github.com/stefanieschneider/viafr},
+}
+
 @Article{RefManageR2017,
   author = {Mathew William McLean},
   title = {RefManageR: Import and Manage BibTeX and
