--- a/data-raw/gsheets.bib
+++ b/data-raw/gsheets.bib
@@ -41,3 +41,17 @@ year={2023},
 url={https://public.opendatasoft.com/explore/dataset/nobel-prize-laureates/information/?disjunctive.category},
 urldate={2023-09-23}
 }
+@online{viaf20240325,
+author = {OCLC},
+title = {VIAF: The Virtual International Authority File},
+date = {2024-03-25},
+url = {https://viaf.org/},
+urldate = {2024-03-25}
+}
+@inproceedings{conroy2019networks,
+  title={Networks of the Enlightenment},
+  author={Conroy, Melanie},
+  booktitle={The Workshop},
+  pages={80--91},
+  year={2019}
+}
