--- a/inst/extdata/icusbib-raw/icus01.bib
+++ b/inst/extdata/icusbib-raw/icus01.bib
@@ -5,7 +5,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS01,
 title={Moral Orientation of the Sciences},
 titleaddon={First International Conference on Unified Science},
-editora = {Laszlo, Ervin and Haskell, E.F.},
+editora = {Laszlo, Ervin and Haskell, Edward Froelich},
 editoratype = {chairperson},
 shorttitle={ICUS I},
 eventdate={1972-11-23/1972-11-26},
@@ -53,21 +53,21 @@ subtitle={A Conceptual Guideline for Concrete Application}
 
 @InProceedings{ICUS01:C01:G01:S03,
 crossref={ICUS01},
-author={Haskell, Edward},
+author={Haskell, Edward Froelich},
 title={Management by Objectives},
 subtitle={C.U.R.E's Vertical Front in Education and Research}
 }
 
 @InProceedings{ICUS01:C01:G01:S04,
 crossref={ICUS01},
-author={Madden, Carl H.},
+author={Madden, Carl Halford},
 title={Natural Partners},
 subtitle={Industrial Management and Unified Science}
 }
 
 @InProceedings{ICUS01:C01:G01:X05,
 crossref={ICUS01},
-author={Dagum, Camilo and Laszlo, Ervin and Haskell, Edward and Madden, Carl H.},
+author={Dagum, Camilo and Laszlo, Ervin and Haskell, Edward Froelich and Madden, Carl Halford},
 title={Panel discussion}
 }
 
@@ -106,7 +106,7 @@ as Formulated in 1663 and Their Relevance to Unified Science}
 
 @InProceedings{ICUS01:C02:G01:S02,
 crossref={ICUS01},
-author={Cassidy, Harold G.},
+author={Cassidy, Harold Gomes},
 title={Essential Ideas in Unified Science}
 }
 
@@ -119,7 +119,7 @@ subtitle={Estimation of Coaction from Experimental Data}
 
 @InProceedings{ICUS01:C02:G01:X04,
 crossref={ICUS01},
-author={Kurti, Nicholas and Cassidy, Harold G. and Leary, Rolfe A.},
+author={Kurti, Nicholas and Cassidy, Harold Gomes and Leary, Rolfe A.},
 title={Panel discussion}
 }
 
@@ -145,13 +145,13 @@ Principle}
 
 @InProceedings{ICUS01:C02:G02:S02,
 crossref={ICUS01},
-author={Anderson, O. Roger},
+author={Anderson, Orvil Roger},
 title={Educational Advantages of Unified Science}
 }
 
 @InProceedings{ICUS01:C02:G02:X03,
 crossref={ICUS01},
-author={Kurti, Nicholas and Hyde, Gordon and Anderson, O. Roger},
+author={Kurti, Nicholas and Hyde, Gordon and Anderson, Orvil Roger},
 title={Panel discussion}
 }
 
@@ -169,7 +169,7 @@ title={Panel discussion}
 
 @InProceedings{ICUS01:C02:G03:X01,
 crossref={ICUS01},
-author={Yoon, Se Won and Hayashi, Yujiro},
+author={Yoon, Se-won and Hayashi, Yujiro},
 title={Rapporteur's Commentaries}
 }
 
@@ -197,7 +197,7 @@ title={Application of Unisci Tools: Solutions of Key Problems}
 
 @InProceedings{ICUS01:C03:G01:S01,
 crossref={ICUS01},
-author={Quine, Willard V.},
+author={Quine, Willard Van Orman},
 title={Chairman's Statement - Levels of Abstraction}
 }
 
@@ -209,13 +209,13 @@ title={The Specialist as a Moral Problem, and its Solution}
 
 @InProceedings{ICUS01:C03:G01:S03,
 crossref={ICUS01},
-author={Wold, Herman O.},
+author={Wold, Herman Ole Andreaas},
 title={The University in Transition - Currents and Whirlpools}
 }
 
 @InProceedings{ICUS01:C03:G01:X04,
 crossref={ICUS01},
-author={Quine, Willard V. and Sonneman, Ulrich and Wold, Herman O.},
+author={Quine, Willard Van Orman and Sonneman, Ulrich and Wold, Herman Ole Andreaas},
 title={Panel discussion}
 }
 
@@ -246,7 +246,7 @@ subtitle={Cultures, Societies, Personalities}
 
 @InProceedings{ICUS01:C03:G02:X03,
 crossref={ICUS01},
-author={Quine, Willard V. and Lodge, George T. and Arensberg, Conrad M.},
+author={Quine, Willard Van Orman and Lodge, George T. and Arensberg, Conrad M.},
 title={Panel discussion}
 }
 
