--- a/inst/extdata/icusbib-raw/icus02.bib
+++ b/inst/extdata/icusbib-raw/icus02.bib
@@ -5,7 +5,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS02,
 title={Modern Science and Moral Values},
 titleaddon={Second International Conference on the Unity of the Sciences},
-editora = {Sawada, Nobushige and Yosida, N.},
+editora = {Sawada, Nobushige and Yoshida, Natsuhiko},
 editoratype = {chairperson},
 shorttitle={ICUS II},
 eventdate={1973-11-18/1973-11-21},
@@ -47,7 +47,7 @@ title={Science and Philosophy}
   title = {Committee session I},
   level = {3},
   editorctype={organizer},
-  editorc = {Hintikka, J. and Yosida, N.},
+  editorc = {Hintikka, Kaarlo Jaakko Juhani and Yosida, N.},
 }
 
 @InProceedings{ICUS02:C01:G01:S01,
@@ -78,7 +78,7 @@ author={Cassidy, Harold Gomes}
   title = {Committee session II},
   level = {3},
   editorctype={organizer},
-  editorc = {Laszlo, Ervin and Kihara, H.},
+  editorc = {Laszlo, Ervin and Kihara, Hiroji},
 }
 
 @InProceedings{ICUS02:C01:G02:S01,
@@ -91,13 +91,13 @@ author={Stent, Gunther Siegmund}
 crossref={ICUS02},
 title={Modern Science and Moral Values},
 subtitle={Some Lessons of the History of Science},
-author={Jaki, Stanley L.}
+author={Jaki, Stanley Ladislas}
 }
 
 @InProceedings{ICUS02:C01:G02:S03,
 crossref={ICUS02},
 title={The Meaning of Science in Oriental Mind},
-author={Yoon, Se Won}
+author={Yoon, Se-won}
 }
 
 
@@ -110,7 +110,7 @@ author={Yoon, Se Won}
   title = {Committee session III},
   level = {3},
   editorctype={organizer},
-  editorc = {Süssmann, G. and Yamamoto, M.},
+  editorc = {Suessmann, Georg and Yamamoto, Makoto},
 }
 
 @InProceedings{ICUS02:C01:G03:S01,
@@ -123,7 +123,7 @@ author={Laszlo, Ervin}
 @InProceedings{ICUS02:C01:G03:S02,
 crossref={ICUS02},
 title={Modern Science and Moral Values - A Systems View},
-author={Buckley, William F.}
+author={Buckley, Walter Frederick}
 }
 
 @InProceedings{ICUS02:C01:G03:S013,
@@ -142,13 +142,13 @@ author={Taylor, Gordon Ramsay Rattray}
   title = {Committee session IV},
   level = {3},
   editorctype={organizer},
-  editorc = {Ahn, B. U. and Inoue, T.},
+  editorc = {Ahn, Byung Uk and Inoue, Tadashi},
 }
 
 @InProceedings{ICUS02:C01:G04:S01,
 crossref={ICUS02},
 title={Man and City in Plato's Republic},
-author={White, Nicholas P.}
+author={White, Nicholas Perry}
 }
 
 @InProceedings{ICUS02:C01:G04:S02,
@@ -173,13 +173,13 @@ author={Quispel, Gilles}
   title = {Committee session V},
   level = {3},
   editorctype={organizer},
-  editorc = {Yoon, S. W. and Murakami, Y.},
+  editorc = {Yoon, Se-won and Murakami, Yoichiro},
 }
 
 @InProceedings{ICUS02:C01:G05:S01,
 crossref={ICUS02},
 title={The Capture of the Sun},
-author={Mbiti, John S.}
+author={Mbiti, John Samuel}
 }
 
 @InProceedings{ICUS02:C01:G05:S02,
@@ -204,7 +204,7 @@ author={Gerholm, Tor Ragnar}
   title = {Committee session VI},
   level = {3},
   editorctype={organizer},
-  editorc = {Husain, M. and Sakamoto, H.},
+  editorc = {Husain, Mahmud and Sakamoto, Hyakudai},
 }
 
 @InProceedings{ICUS02:C01:G06:S01,
@@ -223,7 +223,7 @@ author={Fujimoto, Takashi}
 @InProceedings{ICUS02:C01:G06:S03,
 crossref={ICUS02},
 title={Unity is Consistency, Coherence and Solidarity of Parts},
-author={S{\"u}ssmann, Georg}
+author={Suessmann, Georg}
 }
 
 
@@ -246,7 +246,7 @@ of R \& D in Science-Technology}
   title = {Committee session I},
   level = {3},
   editorctype={organizer},
-  editorc = {Long, F. A. and Kumon, S.},
+  editorc = {Long, Franklin Asbury and Kumon, Shumpei},
 }
 
 @InProceedings{ICUS02:C02:G01:S01,
@@ -278,7 +278,7 @@ author={Masini, Giancarlo}
   title = {Committee session II},
   level = {3},
   editorctype={organizer},
-  editorc = {Mayo, L. H. and Yoshimura, T.},
+  editorc = {Mayo, Louis Harkey and Yoshimura, Toru},
 }
 
 @InProceedings{ICUS02:C02:G02:S01,
@@ -297,7 +297,7 @@ author={Rotblat, Joseph}
 @InProceedings{ICUS02:C02:G02:S03,
 crossref={ICUS02},
 title={Reorientation of Modern Science},
-author={Wang, Wei-Noon}
+author={Wang, Wei-Nong}
 }
 
 
@@ -310,7 +310,7 @@ author={Wang, Wei-Noon}
   title = {Committee session III},
   level = {3},
   editorctype={organizer},
-  editorc = {Dror, Y. and Yoshimura, T.},
+  editorc = {Dror, Yehezkel and Yoshimura, Toru},
 }
 
 @InProceedings{ICUS02:C02:G03:S01,
@@ -341,7 +341,7 @@ author={Jantsch, Erich}
   title = {Committee session IV},
   level = {3},
   editorctype={organizer},
-  editorc = {Wold, H. and Kumon, S.},
+  editorc = {Wold, Herman Ole Andreaas and Kumon, Shumpei},
 }
 
 @InProceedings{ICUS02:C02:G04:S01,
@@ -373,7 +373,7 @@ author={Strasser, Gabor}
   title = {Committee session V},
   level = {3},
   editorctype={organizer},
-  editorc = {Rosenmayr, L. and Strasser, G.},
+  editorc = {Rosenmayr, L. and Strasser, Gabor},
 }
 
 @InProceedings{ICUS02:C02:G05:S01,
@@ -385,14 +385,14 @@ author={Atsumi, Kazuhiko}
 @InProceedings{ICUS02:C02:G05:S02,
 crossref={ICUS02},
 title={An Anthropocentric View of Science and the Teaching of Science},
-author={Anderson, O. Roger}
+author={Anderson, Orvil Roger}
 }
 
 @InProceedings{ICUS02:C02:G05:S03,
 crossref={ICUS02},
 title={The Role of Vocational Agricultural Education in Developing
 Agricultural Technology in Korea},
-author={Baick, Dai Hyen}
+author={Baick, Daihyen}
 }
 
 
@@ -405,7 +405,7 @@ author={Baick, Dai Hyen}
   title = {Committee session VI},
   level = {3},
   editorctype={organizer},
-  editorc = {Rotblat, J. and Atsumi, K.},
+  editorc = {Rotblat, J. and Atsumi, Kazuhiko},
 }
 
 @InProceedings{ICUS02:C02:G06:S01,
@@ -423,7 +423,7 @@ author={Wold, Herman Ole Andraeas}
 @InProceedings{ICUS02:C02:G06:S03,
 crossref={ICUS02},
 title={An Academic Research in Old Korea},
-author={Choh, Soon Tahk}
+author={Choh, Soon-Tahk}
 }
 
 @InProceedings{ICUS02:P03,
@@ -435,19 +435,19 @@ author={Taylor, Gordon Ramsay Rattray}
 @InProceedings{ICUS02:P04,
 crossref={ICUS02},
 title={Technology and the Future Society},
-author={Coates, Joseph F.}
+author={Coates, Joseph Francis}
 }
 
 @InProceedings{ICUS02:P05,
 crossref={ICUS02},
 title={The Science of Behavior and the Internal Universe},
-author={Gantt, William H.}
+author={Gantt, William Horsley}
 }
 
 @InProceedings{ICUS02:P06,
 crossref={ICUS02},
 title={The Significance and Future of the Scientist's Code},
-author={Courmand, Andr{\'{e}} F.}
+author={Cournand, André Frédréric}
 }
 
 @InProceedings{ICUS02:P07,
