--- a/inst/extdata/icusbib-raw/icus03.bib
+++ b/inst/extdata/icusbib-raw/icus03.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -5,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS03,
 title={Science and Absolute Values},
 titleaddon={Third International Conference on the Unity of the Sciences},
-editora = {Adrian, Edgar Douglas and Mellanby, Kenneth and Jones, Reginald V.},
+editora = {Adrian, Edgar Douglas and Mellanby, Kenneth and Jones, Reginald Victor},
 editoratype = {chairperson},
 shorttitle={ICUS III},
 eventdate={1974-11-21/1974-11-24},
@@ -33,13 +35,13 @@ author={Mellanby, Kenneth}
 @InProceedings{ICUS03:P03,
 crossref={ICUS03},
 title={The values of knowledge},
-author={Libby, Willard F.}
+author={Libby, Willard Frank}
 }
 
 @InProceedings{ICUS03:P04,
 crossref={ICUS03},
 title={Science and higher values},
-author={Martin, A.J.P.}
+author={Martin, Archer John Porter}
 }
 
 
@@ -61,19 +63,19 @@ title={Quality of life: physical, mental and spiritual aspects}
   title = {Session 1},
   level = {3},
   editorctype={organizer},
-  editorc = {Cook, S. L.},
+  editorc = {Cook, Stephen L.},
 }
 
 @InProceedings{ICUS03:C01:G01:S01,
 crossref={ICUS03},
 title={Does the quality of life have to be quantified?},
-author={Ackoff, Russell L.}
+author={Ackoff, Russell Lincoln}
 }
 
 @InProceedings{ICUS03:C01:G01:S02,
 crossref={ICUS03},
 title={The quality of life as seen by an applied scientists},
-author={Thring, M.W.}
+author={Thring, Meredith Wooldridge}
 }
 
 @InProceedings{ICUS03:C01:G01:S03,
@@ -86,13 +88,13 @@ author={Szent-Gy{\"o}rgyi, Albert}
 crossref={ICUS03},
 title={Can science help a social group to clarify and evaluate
 its objectives?},
-author={Goodeve, Charles}
+author={Goodeve, Charles Frederick}
 }
 
 @InProceedings{ICUS03:C01:G01:X05,
 crossref={ICUS03},
 title={Commentary},
-author={Cook, Stephen L. and Pikas, A. and Adrian, Edgar Douglas
+author={Cook, Stephen L. and Pikas, Anatol and Adrian, Edgar Douglas
 and Grano, Olavi J.}
 }
 
@@ -106,19 +108,19 @@ and Grano, Olavi J.}
   title = {Session 2},
   level = {3},
   editorctype={organizer},
-  editorc = {Cook, S. L.},
+  editorc = {Cook, Stephen L.},
 }
 
 @InProceedings{ICUS03:C01:G02:S01,
 crossref={ICUS03},
 title={Valuing ourselves: let man be man},
-author={Cragg, A. Kenneth}
+author={Cragg, Albert Kenneth}
 }
 
 @InProceedings{ICUS03:C01:G02:S02,
 crossref={ICUS03},
 title={Man's dominion and the nature of man},
-author={Dunstan, Gordon R.}
+author={Dunstan, Gordon Reginald}
 }
 
 @InProceedings{ICUS03:C01:G02:S03,
@@ -137,8 +139,8 @@ author={Josephson, Brian D.}
 @InProceedings{ICUS03:C01:G02:X05,
 crossref={ICUS03},
 title={Commentary},
-author={Rosenmayr, Leopold and Cragg, A. Kenneth and Dunstan, Gordon R.
-and Jones, Hardin B.}
+author={Rosenmayr, Leopold and Cragg, Albert Kenneth and Dunstan, Gordon Reginald
+and Jones, Hardin Blair}
 }
 
 
@@ -151,25 +153,25 @@ and Jones, Hardin B.}
   title = {Session 3},
   level = {3},
   editorctype={organizer},
-  editorc = {Cook, S. L.},
+  editorc = {Cook, Stephen L.},
 }
 
 @InProceedings{ICUS03:C01:G03:S01,
 crossref={ICUS03},
 title={Will human life remain an absolute value?},
-author={Forssmann, W.Th.O.}
+author={Forssmann, Werner Theodor Otto}
 }
 
 @InProceedings{ICUS03:C01:G03:S02,
 crossref={ICUS03},
 title={Measurement of health and human life values},
-author={Jones, Hardin B.}
+author={Jones, Hardin Blair}
 }
 
 @InProceedings{ICUS03:C01:G03:S03,
 crossref={ICUS03},
 title={Society, medicine and science},
-author={Raven, R.W.}
+author={Raven, Ronald William}
 }
 
 @InProceedings{ICUS03:C01:G03:X04,
@@ -188,7 +190,7 @@ author={Cori, Carl Ferdinand and Halsbury, Tony and McMichael, John}
   title = {Session 3},
   level = {3},
   editorctype={organizer},
-  editorc = {Cook, S. L.},
+  editorc = {Cook, Stephen L.},
 }
 
 @InProceedings{ICUS03:C01:G04:S01,
@@ -200,7 +202,7 @@ author={Rosenmayr, Leopold and Rosenmayr, H.}
 @InProceedings{ICUS03:C01:G04:S02,
 crossref={ICUS03},
 title={The question of economic growth in a finite world},
-author={Maddox, John}
+author={Maddox, John Royden}
 }
 
 @InProceedings{ICUS03:C01:G04:S03,
@@ -218,7 +220,7 @@ author={Strasser, Gabor}
 @InProceedings{ICUS03:C01:G04:X05,
 crossref={ICUS03},
 title={Commentary},
-author={Covian, Miguel R. and H. {de Jouvenel} and Davies, P.M.C. and Goldsmith, Maurice}
+author={Covian, Miguel Rolando and Jouvenel, Hugues de and Davies, P.M.C. and Goldsmith, Maurice}
 }
 
 
@@ -247,7 +249,7 @@ title={Value change and absolute values}
 @InProceedings{ICUS03:C02:G01:S01,
 crossref={ICUS03},
 title={What science can do},
-author={Coulomb, J.}
+author={Coulomb, Jean}
 }
 
 @InProceedings{ICUS03:C02:G01:S02,
@@ -259,7 +261,7 @@ author={Cantore, Enrico}
 @InProceedings{ICUS03:C02:G01:S03,
 crossref={ICUS03},
 title={Value systems and value change},
-author={Anthony V. S {de Reuck} and Marjorie {de Reuck}}
+author={{de Reuck}, Anthony Vivian Smith  and {de Reuck}, K. Marjorie}
 }
 
 @InProceedings{ICUS03:C02:G01:S04,
@@ -272,7 +274,7 @@ author={Webster, Richard T.}
 @InProceedings{ICUS03:C02:G01:X05,
 crossref={ICUS03},
 title={Commentary},
-author={Cournand, André F. and Chagas, C. and Chance, M.R.A. and Mascall, Eric Lionel}
+author={Cournand, André Frédréric and Chagas, Carlos and Chance, Michael Robin Alexander and Mascall, Eric Lionel}
 }
 
 
@@ -315,7 +317,7 @@ author={Jantsch, Erich}
 @InProceedings{ICUS03:C02:G02:X05,
 crossref={ICUS03},
 title={Commentary},
-author={Ingram, David John Edward and Allegra, L. and Dou, Alberto M. and Smart, Ninian}
+author={Ingram, David John Edward and Allegra, L. and Dou, Alberto and Smart, Roderick Ninian}
 }
 
 
@@ -346,13 +348,13 @@ author={Basile, Joseph}
 @InProceedings{ICUS03:C02:G03:S03,
 crossref={ICUS03},
 title={Does a universal standard of value need to be higher order?},
-author={Smart, Ninian}
+author={Smart, Roderick Ninian}
 }
 
 @InProceedings{ICUS03:C02:G03:X04,
 crossref={ICUS03},
 title={Commentary},
-author={Paelz, Peter and Dickson, Kwesi A. and Moltmann, Jurgen}
+author={Paelz, Peter and Dickson, Kwesi Abotsia and Moltmann, Jurgen}
 }
 
 
@@ -395,7 +397,7 @@ author={Moltmann, Jurgen}
 @InProceedings{ICUS03:C02:G04:X05,
 crossref={ICUS03},
 title={Commentary},
-author={Cantore, Enrico and Webster, R.T. and Jantsch, Erich and Hersch, J.}
+author={Cantore, Enrico and Webster, Richard T. and Jantsch, Erich and Hersch, Jeanne}
 }
 
 
@@ -417,7 +419,7 @@ entryset={ICUS03:C03:G01:S01},
   title = {Session 1},
   level = {3},
   editorctype={organizer},
-  editorc = {Crombie, A. C.},
+  editorc = {Crombie, Alistair Cameron},
 }
 
 @InProceedings{ICUS03:C03:G01:S01,
@@ -429,7 +431,7 @@ entryset={ICUS03:C03:G01:S01},
 @InProceedings{ICUS03:C03:G01:S02,
 crossref={ICUS03},
 title={Doubt and certainty in science},
-author={Hodgson, Peter E.}
+author={Hodgson, Peter Edward}
 }
 
 @InProceedings{ICUS03:C03:G01:S03,
@@ -441,13 +443,13 @@ author={Barker, Eileen V.}
 @InProceedings{ICUS03:C03:G01:S04,
 crossref={ICUS03},
 title={On method in science and religion},
-author={Anderson, O. Roger}
+author={Anderson, Orvil Roger}
 }
 
 @InProceedings{ICUS03:C03:G01:X05,
 crossref={ICUS03},
 title={Commentary},
-author={Kuypers, Karel and Roger, J. and Watkins, J.W.N. and Hilpinen, R.}
+author={Kuypers, Karel and Roger, Jacques and Watkins, John William Nevill and Hilpinen, Risto}
 }
 
 
@@ -460,13 +462,13 @@ author={Kuypers, Karel and Roger, J. and Watkins, J.W.N. and Hilpinen, R.}
   title = {Session 2},
   level = {3},
   editorctype={organizer},
-  editorc = {Crombie, A. C.},
+  editorc = {Crombie, Alistair Cameron},
 }
 
 @InProceedings{ICUS03:C03:G02:S01,
 crossref={ICUS03},
 title={The soluble and the insoluble},
-author={Luria, Salvador E. and Luria, Z.}
+author={Luria, Salvador Edward and Luria, Zella Hurwitz}
 }
 
 @InProceedings{ICUS03:C03:G02:S02,
@@ -478,13 +480,13 @@ author={Stent, Gunther Siegmund}
 @InProceedings{ICUS03:C03:G02:S03,
 crossref={ICUS03},
 title={Hard and soft components in natural and social science},
-author={Groenewold, Hilbrand J.}
+author={Groenewold, Hilbrand Johannes}
 }
 
 @InProceedings{ICUS03:C03:G02:X04,
 crossref={ICUS03},
 title={Commentary},
-author={Riecken, Henry William and Jeuken, M. and Schopper, Erwin K.}
+author={Riecken, Henry William and Jeuken, Marie and Schopper, Erwin}
 }
 
 
@@ -497,13 +499,13 @@ author={Riecken, Henry William and Jeuken, M. and Schopper, Erwin K.}
   title = {Session 3},
   level = {3},
   editorctype={organizer},
-  editorc = {Crombie, A. C.},
+  editorc = {Crombie, Alistair Cameron},
 }
 
 @InProceedings{ICUS03:C03:G03:S01,
 crossref={ICUS03},
 title={The role of information science in the unification of the sciences},
-author={Kitagawa, T.}
+author={Kitagawa, Toshio}
 }
 
 @InProceedings{ICUS03:C03:G03:S02,
@@ -515,13 +517,13 @@ author={Fucks, Wilhelm}
 @InProceedings{ICUS03:C03:G03:S03,
 crossref={ICUS03},
 title={Economic analysis: economic policy and absolute values},
-author={Whitehead, D.H.}
+author={Whitehead, Donald Henry}
 }
 
 @InProceedings{ICUS03:C03:G03:X04,
 crossref={ICUS03},
 title={Commentary},
-author={Buckley, Walter F. and Scorer, Richard S. and Anderson, O. Roger}
+author={Buckley, Walter Frederick and Scorer, Richard Segar and Anderson, Orvil Roger}
 }
 
 
@@ -534,7 +536,7 @@ author={Buckley, Walter F. and Scorer, Richard S. and Anderson, O. Roger}
   title = {Session 4},
   level = {3},
   editorctype={organizer},
-  editorc = {Crombie, A. C.},
+  editorc = {Crombie, Alistair Cameron},
 }
 
 @InProceedings{ICUS03:C03:G04:S01,
@@ -552,19 +554,19 @@ author={Rödding, Walburga}
 @InProceedings{ICUS03:C03:G04:S03,
 crossref={ICUS03},
 title={Science and social control},
-author={Goldsmith, Edward}
+author={Goldsmith, Edward René David}
 }
 
 @InProceedings{ICUS03:C03:G04:S04,
 crossref={ICUS03},
 title={Popular and professional illusions about the scientific method},
-author={Scorer, Richard S.}
+author={Scorer, Richard Segar}
 }
 
 @InProceedings{ICUS03:C03:G04:X05,
 crossref={ICUS03},
 title={Commentary},
-author={Tucker, J. and Beck, A. and Fucks, Wilhelm and Goldsmith, Edward}
+author={Tucker, John and Beck, A. and Fucks, Wilhelm and Goldsmith, Edward René David}
 }
 
 
@@ -592,13 +594,13 @@ title={The idea of the university in a troubled society}
 @InProceedings{ICUS03:C04:G01:S01,
 crossref={ICUS03},
 title={Educational institutions and society in Pakistan},
-author={Husain, M.}
+author={Husain, Mahmud}
 }
 
 @InProceedings{ICUS03:C04:G01:S02,
 crossref={ICUS03},
 title={The political attitudes of university students in Taiwan},
-author={Jiang, Joseph P.}
+author={Jiang, Binglun}
 }
 
 @InProceedings{ICUS03:C04:G01:S03,
@@ -618,7 +620,7 @@ author={Wold, Herman Ole Andreaas}
 @InProceedings{ICUS03:C04:G01:X05,
 crossref={ICUS03},
 title={Commentary},
-author={Pleijel, A. and Pratt, Edward O. and Miyazima, Tatsuoki and Meissner, Werner}
+author={Pleijel, Ake and Pratt, Edward O. and Miyajima, Tatsuoki and Meissner, Werner}
 }
 
 
@@ -637,7 +639,7 @@ author={Pleijel, A. and Pratt, Edward O. and Miyazima, Tatsuoki and Meissner, We
 crossref={ICUS03},
 title={Crisis and confrontation},
 subtitle={some problems in contemporary university education},
-author={Brooks, Peter N.}
+author={Brooks, Peter Newman}
 }
 
 @InProceedings{ICUS03:C04:G02:S02,
@@ -649,7 +651,7 @@ author={Galperin, Charles}
 @InProceedings{ICUS03:C04:G02:X03,
 crossref={ICUS03},
 title={Commentary},
-author={Daugs, D.R. and Wold, Herman Ole Andreaas}
+author={Daugs, Donald Roger and Wold, Herman Ole Andreaas}
 }
 
 
@@ -673,13 +675,13 @@ author={Dror, Yehezkel}
 @InProceedings{ICUS03:C04:G03:S02,
 crossref={ICUS03},
 title={Cognitive limitations and public decision making},
-author={Kahneman, D.}
+author={Kahneman, Daniel}
 }
 
 @InProceedings{ICUS03:C04:G03:X03,
 crossref={ICUS03},
 title={Commentary},
-author={Lievegoed, B.C.J. and Himmelweit, Hilde}
+author={Lievegoed, Bernardus Cornelis Johannes and Himmelweit, Hildegard Therese}
 }
 
 
@@ -698,7 +700,7 @@ author={Lievegoed, B.C.J. and Himmelweit, Hilde}
 crossref={ICUS03},
 title={International education: a search for cultural and conceptual
 isomorphisms},
-author={Taylor, Alastair M.}
+author={Taylor, Alastair MacDonald}
 }
 
 @InProceedings{ICUS03:C04:G04:S02,
@@ -711,7 +713,7 @@ author={Popper, Hans}
 crossref={ICUS03},
 title={The responsibility of scientists and the teachings of oriental
 thought},
-author={Yoon, Se Won}
+author={Yoon, Se-won}
 }
 
 @InProceedings{ICUS03:C04:G04:S03,
@@ -723,25 +725,25 @@ author={Cardwell, Donald Stephen Lowell}
 @InProceedings{ICUS03:C04:G04:X04,
 crossref={ICUS03},
 title={Commentary},
-author={Broady, Maurice and Prickett, S. and Hook, Sidney and Kastler, Alfred}
+author={Broady, Maurice and Prickett, Stephen and Hook, Sidney and Kastler, Alfred}
 }
 
 @InProceedings{ICUS03:P05,
 crossref={ICUS03},
 title={Science and absolute values},
-author={Auger, P.}
+author={Auger, Pierre}
 }
 
 @InProceedings{ICUS03:P06,
 crossref={ICUS03},
 title={Adaptability of the nervous system and its relation to chance,
 purposiveness and causality},
-author={Granit, Ragnar A.}
+author={Granit, Ragnar Arthur}
 }
 
 @InProceedings{ICUS03:P07,
 crossref={ICUS03},
 title={Science and the implications of the paranormal},
-author={Taylor, John G.}
+author={Taylor, John Gerald}
 }
 
