--- a/inst/extdata/icusbib-raw/icus05.bib
+++ b/inst/extdata/icusbib-raw/icus05.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -27,19 +29,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS05:P02,
   crossref = {ICUS05},
   title = {Chairman's Address},
-  author = {John Eccles},
+  author = {Eccles, John Carew},
 }
 
 @InProceedings{ICUS05:P03,
   crossref = {ICUS05},
   title = {Committee I Address},
-  author = {Sontag, Frederick},
+  author = {Sontag, Frederick Earl},
 }
 
 @InProceedings{ICUS05:P04,
   crossref = {ICUS05},
   title = {Committee II Address},
-  author = {Kaplan, Morton A.},
+  author = {Kaplan, Morton Abraham},
 }
 
 @InProceedings{ICUS05:P05,
@@ -51,7 +53,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS05:P06,
   crossref = {ICUS05},
   title = {Committee IV Address},
-  author = {Wigner, Eugene P.},
+  author = {Wigner, Eugene Paul},
 }
 
 @InProceedings{ICUS05:P07,
@@ -63,7 +65,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS05:P08,
   crossref = {ICUS05},
   title = {Concluding Plenary: Topic related to theme of conference},
-  author = {Thorpe, W. H.},
+  author = {Thorpe, William Homan},
 }
 
 @InProceedings{ICUS05:P09,
@@ -81,7 +83,7 @@ icus.data Data Version 0.9.2
   title = {Religion and Philosophy},
   level = {2},
   editorctype={organizer},
-  editorc = {Sontag, Frederick},
+  editorc = {Sontag, Frederick Earl},
 }
 
 @Set{ICUS05:C01:G01,
@@ -99,21 +101,21 @@ icus.data Data Version 0.9.2
   crossref = {ICUS05},
   title = {Great world religions: similarities and differences},
   author = {Parrinder, Geoffrey},
-  commentator = {Kaufmann, Walter},
+  commentator = {Kaufmann, Walter Arnold},
 }
 
 @InProceedings{ICUS05:C01:G01:S02,
   crossref = {ICUS05},
   title = {Christianity as symbolic logic: an explanation of ambiguity},
-  author = {Martin, D. A.},
+  author = {Martin, David Alfred},
   commentator = {Abe, Masao},
 }
 
 @InProceedings{ICUS05:C01:G01:S03,
   crossref = {ICUS05},
   title = {Religious values},
-  author = {Werblowsky, R. J. Zwi},
-  commentator = {Mbiti, John S. and Smart, Ninian},
+  author = {Werblowsky, Raphael Jehudah Zwi},
+  commentator = {Mbiti, John Samuel and Smart, Roderick Ninian},
 }
 
 
@@ -139,14 +141,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS05},
   title = {Is it still possible to elaborate a philosophy, and especially a philosophy of values},
   author = {Dufrenne, Mikel},
-  commentator = {Vivas, Eliseo and Charles, Daniel},
+  commentator = {Vivas, Eliseo and Charles, Daniel Paul},
 }
 
 @InProceedings{ICUS05:C01:G02:S03,
   crossref = {ICUS05},
   title = {The function of reason in Western philosophy, especially in political philosophy},
   author = {Becker, Werner},
-  commentator = {Findlay, John N. and Liu, Shu-hsien},
+  commentator = {Findlay, John Niemeyer and Liu, Shu-hsien},
 }
 
 
@@ -166,7 +168,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS05},
   title = {The elect and the preterite},
   author = {Rubenstein, Richard L.},
-  commentator = {Roth, John K. and Rumscheidt, H. Martin},
+  commentator = {Roth, John King and Rumscheidt, Hans Martin},
 }
 
 @InProceedings{ICUS05:C01:G03:S02,
@@ -179,8 +181,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS05:C01:G03:S03,
   crossref = {ICUS05},
   title = {What do religion, politics, and science each contribute to the creation of a good society},
-  author = {Richardson, Herbert},
-  commentator = {Kliever, Lonnie D. and Alves, Rubern A.},
+  author = {Richardson, Herbert Warren},
+  commentator = {Kliever, Lonnie D. and Alves, Rubern Azevedo},
 }
 
 
@@ -193,7 +195,7 @@ icus.data Data Version 0.9.2
   title = {The Social Sciences and Humanities},
   level = {2},
   editorctype={organizer},
-  editorc = {Kaplan, Morton A.},
+  editorc = {Kaplan, Morton Abraham},
 }
 
 @Set{ICUS05:C02:G01,
@@ -202,13 +204,13 @@ icus.data Data Version 0.9.2
   patterntype = {key},
   settype = {Group},
   title = {The Idea of the Absolute in History, Art and Literature},
-  author = {Segre, Dan V.},
+  author = {Segre, Dan Vittorio},
 }
 
 @InProceedings{ICUS05:C02:G01:S01,
   crossref = {ICUS05},
   title = {Ways, means and the absolute},
-  author = {Segre, Dan V.},
+  author = {Segre, Dan Vittorio},
   commentator = {Handlin, Oscar},
 }
 
@@ -216,21 +218,21 @@ icus.data Data Version 0.9.2
   crossref = {ICUS05},
   title = {The problem of values and the challenge of a world in change},
   author = {Berger, René},
-  commentator = {Pöggeler, Otto and Vernon, Glenn M.},
+  commentator = {Pöggeler, Otto and Vernon, Glenn Morley},
 }
 
 @InProceedings{ICUS05:C02:G01:S03,
   crossref = {ICUS05},
   title = {The logic of poetic symbols in the age of science},
   author = {Rannit, Aleksis},
-  commentator = {Simon, Ulrich and Treadgold, Donald W.},
+  commentator = {Simon, Ulrich Ernst and Treadgold, Donald Warren},
 }
 
 @InProceedings{ICUS05:C02:G01:S04,
   crossref = {ICUS05},
   title = {Meaning, value and personality},
-  author = {Royce, Joseph R.},
-  commentator = {Brody, Eugene B. and Boardman, Harry},
+  author = {Royce, Joseph Russell},
+  commentator = {Brody, Eugene Bloom and Boardman, Harry},
 }
 
 
@@ -250,7 +252,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS05},
   title = {Methodology in the physical and social sciences},
   author = {Handy, Rollo L.},
-  commentator = {{Ben-Dak}, Joseph},
+  commentator = {{Ben-Dak}, Joseph D.},
 }
 
 @InProceedings{ICUS05:C02:G02:S02,
@@ -284,14 +286,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS05},
   title = {Present trends, future dangers and the values of society},
   author = {King, Alexander},
-  commentator = {Madden, Carl H.},
+  commentator = {Madden, Carl Halford},
 }
 
 @InProceedings{ICUS05:C02:G03:S02,
   crossref = {ICUS05},
   title = {Churches and multinationals in the spread of modern education: a third world perspective},
-  author = {Mazrui, Ali A.},
-  commentator = {Gislason, Gylfi P.},
+  author = {Mazrui, Ali Al'Amin},
+  commentator = {Gislason, Gylfi Thorsteinsson},
 }
 
 @InProceedings{ICUS05:C02:G03:S03,
@@ -328,22 +330,22 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS05:C03:G01:S01,
   crossref = {ICUS05},
   title = {The evolutionary process as a mechanism for building self-organizing systems in biology},
-  author = {Schuster, Peter},
-  commentator = {Scheer, Bradley T.},
+  author = {Schuster, Peter Maria},
+  commentator = {Scheer, Bradley Titus},
 }
 
 @InProceedings{ICUS05:C03:G01:S02,
   crossref = {ICUS05},
   title = {How life arose on the earth},
-  author = {Miller, Stanley L.},
-  commentator = {Brasted, Robert C.},
+  author = {Miller, Stanley Lloyd},
+  commentator = {Brasted, Robert Crocker},
 }
 
 @InProceedings{ICUS05:C03:G01:S03,
   crossref = {ICUS05},
   title = {Genetic codes and the laws of evolution as the bases for our understanding the biological nature of man},
   author = {Kimura, Motoo},
-  commentator = {John Eccles and {Villee Jr}, Claude A.},
+  commentator = {Eccles, John Carew and Villee, Claude Alvin},
 }
 
 
@@ -356,28 +358,28 @@ icus.data Data Version 0.9.2
   title = {Neuroscience and absolute values},
   level = {3},
   editorctype={organizer},
-  editorc = {Pribram, Karl H.},
+  editorc = {Pribram, Karl Harry},
 }
 
 @InProceedings{ICUS05:C03:G02:S01,
   crossref = {ICUS05},
   title = {The brain, learning and values},
-  author = {Hyden, Holger},
-  commentator = {Covian, Miguel R. and White, Robert J.},
+  author = {Hydén, Holger},
+  commentator = {Covian, Miguel Rolando and White, Robert Joseph},
 }
 
 @InProceedings{ICUS05:C03:G02:S02,
   crossref = {ICUS05},
   title = {Some effects of the biological state of brain on values associated with mind},
-  author = {McGeer, Patrick L.},
-  commentator = {Lambo, T. A. and Sannangelantonio, Luce},
+  author = {McGeer, Patrick Lucey},
+  commentator = {Lambo, Thomas Adeoye and Sannangelantonio, Luce},
 }
 
 @InProceedings{ICUS05:C03:G02:S03,
   crossref = {ICUS05},
   title = {Brain organization in the construction of values: a sociobiological analysis},
-  author = {Pribram, Karl H.},
-  commentator = {Sperry, Roger W. and Basmajian, John V.},
+  author = {Pribram, Karl Harry},
+  commentator = {Sperry, Roger Wolcott and Basmajian, John Varoujan},
 }
 
 
@@ -390,28 +392,28 @@ icus.data Data Version 0.9.2
   title = {Absolute Values and Human Survival},
   level = {3},
   editorctype={organizer},
-  editorc = {Anderson, O. Roger},
+  editorc = {Anderson, Orvil Roger},
 }
 
 @InProceedings{ICUS05:C03:G03:S01,
   crossref = {ICUS05},
   title = {Ecosystem control and its implications for human values},
-  author = {Anderson, O. Roger},
+  author = {Anderson, Orvil Roger},
   commentator = {Nahvi, Mahmood J. and Maxey, Margaret N.},
 }
 
 @InProceedings{ICUS05:C03:G03:S02,
   crossref = {ICUS05},
   title = {Effects of population growth on the ecosystem},
-  author = {Singer, S. Fred},
-  commentator = {MacVicar, Robert and Hill, Stuart},
+  author = {Singer, Siegfried Fred},
+  commentator = {MacVicar, Robert William and Hill, Stuart B.},
 }
 
 @InProceedings{ICUS05:C03:G03:S03,
   crossref = {ICUS05},
   title = {The impact of nuclear technology on the natural environment and human life},
   author = {Latarjet, Raymond},
-  commentator = {Butler, Gordon C. and Caspari, Ernest W.},
+  commentator = {Butler, Gordon Cecil and Caspari, Ernst Wolfgang},
 }
 
 
@@ -424,7 +426,7 @@ icus.data Data Version 0.9.2
   title = {The Physical Sciences},
   level = {2},
   editorctype={organizer},
-  editorc = {Wigner, Eugene P.},
+  editorc = {Wigner, Eugene Paul},
 }
 
 @Set{ICUS05:C04:G01,
@@ -442,7 +444,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS05},
   title = {Science and values: the cultural importance of the is/ought distinction},
   author = {Radnitzky, Gerard},
-  commentator = {Herzberg, Gerhard and Wold, Herman},
+  commentator = {Herzberg, Gerhard and Wold, Herman Ole Andreaas},
 }
 
 @InProceedings{ICUS05:C04:G01:S02,
@@ -476,7 +478,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS05},
   title = {Unification and fractionation in science: significance and prospects},
   author = {Shapere, Dudley},
-  commentator = {Melvin, Mael A.},
+  commentator = {Melvin, Mael Avrami},
 }
 
 @InProceedings{ICUS05:C04:G02:S02,
@@ -489,8 +491,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS05:C04:G02:S03,
   crossref = {ICUS05},
   title = {Harmonization of science and technology development with different cultural traditions},
-  author = {Cernuschi, Felix},
-  commentator = {{Harun ar Rashid}, A. M. and Yoon, Se-Won},
+  author = {Cernuschi, Félix},
+  commentator = {{Harun ar Rashid}, A.M. and Yoon, Se-won},
 }
 
 
@@ -502,27 +504,27 @@ icus.data Data Version 0.9.2
   title = {The New Physics and Absolute Values},
   level = {3},
   editorctype={organizer},
-  editorc = {Jones, Reginald V.},
+  editorc = {Jones, Reginald Victor},
 }
 
 @InProceedings{ICUS05:C04:G03:S01,
   crossref = {ICUS05},
   title = {How far has twentieth century physics changed man's concept of the universe},
-  author = {Jones, Reginald V.},
-  commentator = {Martin, A. J. P. and Kim, Young-Suh},
+  author = {Jones, Reginald Victor},
+  commentator = {Martin, Archer John Porter and Kim, Young-Suh},
 }
 
 @InProceedings{ICUS05:C04:G03:S02,
   crossref = {ICUS05},
   title = {A consideration of the philosophical implications of the new physics},
   author = {Jammer, Max},
-  commentator = {Daudel, Raymond and Sudarshan, E. C. G.},
+  commentator = {Daudel, Raymond and Sudarshan, Ennackel Chandy George},
 }
 
 @InProceedings{ICUS05:C04:G03:S03,
   crossref = {ICUS05},
   title = {The mechanism of knowledge: limits to prediction},
-  author = {Pringle, J. W. S.},
+  author = {Pringle, John William Sutton},
   commentator = {Josephson, Brian},
 }
 
