--- a/inst/extdata/icusbib-raw/icus12.bib
+++ b/inst/extdata/icusbib-raw/icus12.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -5,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS12,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Twelfth International Conference on the Unity of the Sciences},
-  editora = {Wigner, Eugene P. and Kaplan, Morton A. and Weinberg, Alvin M.},
+  editora = {Wigner, Eugene P. and Kaplan, Morton Abraham and Weinberg, Alvin Martin},
   editoratype = {chairperson},
   shorttitle = {ICUS XII},
   eventdate = {1983-11-24/1983-11-27},
@@ -45,25 +47,25 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:P05,
   crossref = {ICUS12},
   title = {Honorary Chairman's Statement},
-  author = {Wigner, Eugene P.},
+  author = {Wigner, Eugene Paul},
 }
 
 @InProceedings{ICUS12:P06,
   crossref = {ICUS12},
   title = {Organizing Chairman's Statement},
-  author = {Kaplan, Morton A.},
+  author = {Kaplan, Morton Abraham},
 }
 
 @InProceedings{ICUS12:P07,
   crossref = {ICUS12},
   title = {Vice-Chairman's Remarks},
-  author = {Weinberg, Alvin M.},
+  author = {Weinberg, Alvin Martin},
 }
 
 @InProceedings{ICUS12:P08,
   crossref = {ICUS12},
   title = {The Origins \& Effects of Our Morals: A Problem for Science},
-  author = {Hayek, Frederick A.},
+  author = {Hayek, Friedrich August von},
 }
 
 @set{ICUS12:C01,
@@ -92,21 +94,21 @@ icus.data Data Version 0.9.2
   crossref = {ICUS12},
   title = {The unity of science and the dubious credentials of positivism},
   author = {Munz, Peter},
-  commentator = {Kim, Yersu and Sussman, Georg},
+  commentator = {Kim, Yersu and Suessmann, Georg},
 }
 
 @InProceedings{ICUS12:C01:G01:S02,
   crossref = {ICUS12},
   title = {Unity and the history of science},
   author = {Cappelletti, Vincenzo},
-  commentator = {Blackmore, John and Sass, Hans-Martin},
+  commentator = {Blackmore, John Thomas and Sass, Hans-Martin},
 }
 
 @InProceedings{ICUS12:C01:G01:S03,
   crossref = {ICUS12},
   title = {The division of knowledge},
   author = {Bartley, William Warren III},
-  commentator = {Petroni, Angelo and Slade, Ivan},
+  commentator = {Petroni, Angelo Maria and Slade, Ivan},
 }
 
 
@@ -126,7 +128,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C01:G02:S01,
   crossref = {ICUS12},
   title = {Three views concerning the unity of science},
-  author = {Briskman, Laurence},
+  author = {Briskman, Laurence Barry},
   commentator = {Koertge, Norretta},
 }
 
@@ -134,14 +136,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS12},
   title = {The problem of the unity of physics},
   author = {Jammer, Max},
-  commentator = {Kakihana, Hidetake and Kanitscheider, Bernulf and Schopper, Erwin},
+  commentator = {Kakihana, Hidetaka and Kanitscheider, Bernulf and Schopper, Erwin},
 }
 
 @InProceedings{ICUS12:C01:G02:S03,
   crossref = {ICUS12},
   title = {The unity of science in an evolutionary perspective},
   author = {Vollmer, Gerhard},
-  commentator = {Lowenhard, Percy and Wold, Herman},
+  commentator = {Lowenhard, Percy and Wold, Herman Ole Andreaas},
 }
 
 
@@ -161,8 +163,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C01:G03:S01,
   crossref = {ICUS12},
   title = {The idea of a spontaneous order and the unity of the sciences},
-  author = {Gray, John N.},
-  commentator = {Flew, Antony and Lepage, Henri},
+  author = {Gray, John Nicholas},
+  commentator = {Flew, Antony Garrard Newton and Lepage, Henri},
 }
 
 @InProceedings{ICUS12:C01:G03:S02,
@@ -175,7 +177,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C01:G03:S03,
   crossref = {ICUS12},
   title = {The unification of science through the economic approach - fact or fiction?},
-  author = {Moldosfsky, Naomi},
+  author = {Moldofsky, Naomi},
   commentator = {Bernholz, Peter},
 }
 
@@ -209,13 +211,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS12},
   title = {Education, national identity, and the language of African development},
   author = {Owusu, Maxwell K.},
-  commentator = {Mfoulou, Jean and Elahwal, Abdul Karim A.},
+  commentator = {Mfoulou, Jean and Elahwal, Abdel Karim Aly},
 }
 
 @InProceedings{ICUS12:C02:G01:S02,
   crossref = {ICUS12},
   title = {Education, economic mobility and family relationships in Africa},
-  author = {Skinner, Elliott P.},
+  author = {Skinner, Elliott Percival},
   commentator = {James, Abraham L. and {Niangoran-Bouah}, Georges},
 }
 
@@ -243,29 +245,29 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C02:G02:S01,
   crossref = {ICUS12},
   title = {Education and politics},
-  author = {Okoli, F. Ekueme},
-  commentator = {Mazrui, Ali A. and Ndeti, Kivuto},
+  author = {Okoli, Ekwueme Felix},
+  commentator = {Mazrui, Ali Al'Amin and Ndeti, Kivuto},
 }
 
 @InProceedings{ICUS12:C02:G02:S02,
   crossref = {ICUS12},
   title = {Education and the public media},
-  author = {Masmoudi, Mustafa},
-  commentator = {Benaboud, El Mehdi and Randolph, Yaovi},
+  author = {Masmoudi, Mustapha},
+  commentator = {{Ben Aboud}, El Mehdi and Randolph, Yaovi E.},
 }
 
 @InProceedings{ICUS12:C02:G02:S03,
   crossref = {ICUS12},
   title = {Education in the development of endogenous science and technology},
   author = {Njock, G. Edward},
-  commentator = {Bhiday, M. R. and Zapotoczky, Klaus},
+  commentator = {Bhiday, Madhav Ramchandra and Zapotoczky, Klaus},
 }
 
 @InProceedings{ICUS12:C02:G02:S04,
   crossref = {ICUS12},
   title = {Education and moral and ethical values},
   author = {{Byaruhanga-Akiiki}, A. B. T.},
-  commentator = {Dickson, Kwesi A. and Rukare, Enoka H.},
+  commentator = {Dickson, Kwesi Abotsia and Rukare, Enoka H.},
 }
 
 
@@ -286,14 +288,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS12},
   title = {Regional cooperation in higher education in Africa: problems and prospects},
   author = {Mehretu, Assefa},
-  commentator = {Adjangba, A. M. and Okatcha, Frederick M.},
+  commentator = {Adjangba, Anoumou M. and Okatcha, Frederick M.},
 }
 
 @InProceedings{ICUS12:C02:G03:S02,
   crossref = {ICUS12},
   title = {Education and social justice},
   author = {Ajayi, J. F. Ade},
-  commentator = {Bopape, Moses and Sodipo, John O.},
+  commentator = {Bopape, Moses and Sodipo, John Olubi},
 }
 
 @InProceedings{ICUS12:C02:G03:S03,
@@ -332,7 +334,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS12},
   title = {Science and technology: blessing or curse to the arts?},
   author = {Kurti, Nicholas},
-  commentator = {Phillips, N. J.},
+  commentator = {Phillips, Nicholas J.},
 }
 
 @InProceedings{ICUS12:C03:G01:S02,
@@ -366,8 +368,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C03:G02:S01,
   crossref = {ICUS12},
   title = {Music and technology today},
-  author = {Charles, Daniel},
-  commentator = {Maceda, Jose and Yamamoto, Nobuhito},
+  author = {Charles, Daniel Paul},
+  commentator = {Maceda, José Monserrat and Yamamoto, Nobuhito},
 }
 
 @InProceedings{ICUS12:C03:G02:S02,
@@ -387,7 +389,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C03:G02:S04,
   crossref = {ICUS12},
   title = {Social aspects of computer art},
-  author = {Moles, Abraham},
+  author = {Moles, Abraham André},
   commentator = {Hayama, Komei},
 }
 
@@ -415,7 +417,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS12},
   title = {Art and technology in the future},
   author = {Maruyama, Magoroh},
-  commentator = {Rand, George and Berleant, Arnold},
+  commentator = {Rand, George Dutton and Berleant, Arnold},
 }
 
 @InProceedings{ICUS12:C03:G03:S03,
@@ -434,7 +436,7 @@ icus.data Data Version 0.9.2
   title = {Developmental Experiences in East Asia and Latin America},
   level = {2},
   editorctype={organizer},
-  editorc = {King, Alexander and Kim, Ilpyong J.},
+  editorc = {King, Alexander and Kim, Ilpyong John},
 }
 
 @set{ICUS12:C04:G01,
@@ -451,22 +453,22 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C04:G01:S01,
   crossref = {ICUS12},
   title = {Economic development in South Korea},
-  author = {Kuznets, Paul W.},
-  commentator = {Kim, Ung Soo and Koo, Bon Ho},
+  author = {Kuznets, Paul Wolf},
+  commentator = {Kim, Ung-Soo and Koo, Bon Ho},
 }
 
 @InProceedings{ICUS12:C04:G01:S02,
   crossref = {ICUS12},
   title = {Economic development of Taiwan (1950-1980)},
-  author = {Fei, John C. H.},
-  commentator = {Hsiung, James C. and Yamazawa, Ippei},
+  author = {Fei, John Ching-Han},
+  commentator = {Hsiung, James Chieh and Yamazawa, Ippei},
 }
 
 @InProceedings{ICUS12:C04:G01:S03,
   crossref = {ICUS12},
   title = {Indonesia's new order, pancasila, and development},
   author = {Greif, Stuart William},
-  commentator = {Bey, Arifin and Nianggolan, S. C.},
+  commentator = {Bey, Arifin and Nainggolan, Seri Condar},
 }
 
 @InProceedings{ICUS12:C04:G01:S04,
@@ -493,14 +495,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C04:G02:S01,
   crossref = {ICUS12},
   title = {Stagnation and development in Argentina},
-  author = {Catterberg, Edgardo},
+  author = {Catterberg, Edgardo Raúl},
   commentator = {Dagum, Camilo},
 }
 
 @InProceedings{ICUS12:C04:G02:S02,
   crossref = {ICUS12},
   title = {Development strategies in Chile, 1964-1983: the lessons of failure},
-  author = {Sigmund, Paul E.},
+  author = {Sigmund, Paul Eugene},
   commentator = {Fukuchi, Takao and Torre, Armando de la},
 }
 
@@ -528,8 +530,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C04:G03:S01,
   crossref = {ICUS12},
   title = {The study of development in the 1980s},
-  author = {Turner, Frederick C.},
-  commentator = {Guetzkow, Harold},
+  author = {Turner, Frederick Clair},
+  commentator = {Guetzkow, Harold Steere},
 }
 
 
@@ -543,7 +545,7 @@ icus.data Data Version 0.9.2
   title = {The Emotions: Focus on Inter-Male Aggression and Dominance Systems},
   level = {2},
   editorctype={organizer},
-  editorc = {Pribram, Karl H. and McGuinness, Diane},
+  editorc = {Pribram, Karl Harry and McGuinness, Diane},
 }
 
 @set{ICUS12:C05:G01,
@@ -561,14 +563,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS12},
   title = {Some aspects of aggression and reassurance in Macaques},
   author = {Angst, Walter},
-  commentator = {Delgado, Jose M. R. and {Lopez-Mendoza}, Diane},
+  commentator = {Delgado, José Manuel Rodríguez and {Lopez-Mendoza}, Diana},
 }
 
 @InProceedings{ICUS12:C05:G01:S02,
   crossref = {ICUS12},
   title = {Inequality versus equality for coexistence in primate societies},
   author = {Itani, Junichiro},
-  commentator = {Kano, Takayoshi and Trivers, Robert L.},
+  commentator = {Kano, Takayoshi and Trivers, Robert Ludlow},
 }
 
 
@@ -603,7 +605,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS12},
   title = {Lethal dance},
   author = {Meltzoff, Sarah Keene},
-  commentator = {Lancaster, Chet S.},
+  commentator = {Lancaster, Chesley Stevens},
 }
 
 @InProceedings{ICUS12:C05:G02:S04,
@@ -630,7 +632,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C05:G03:S01,
   crossref = {ICUS12},
   title = {Dominance},
-  author = {Moyer, Kenneth E.},
+  author = {Moyer, Kenneth Evan},
 }
 
 @InProceedings{ICUS12:C05:G03:S02,
@@ -642,7 +644,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C05:G03:S03,
   crossref = {ICUS12},
   title = {Aggression and dominance systems: some comments},
-  author = {Schellenberg, James A.},
+  author = {Schellenberg, James Arthur},
 }
 
 
@@ -656,7 +658,7 @@ icus.data Data Version 0.9.2
   title = {Global Environmental Problems},
   level = {2},
   editorctype={organizer},
-  editorc = {Landsberg, Helmut E. and Singer, S. Fred},
+  editorc = {Landsberg, Helmut Erich and Singer, Siegfried Fred},
 }
 
 @set{ICUS12:C06:G01,
@@ -673,22 +675,22 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C06:G01:S01,
   crossref = {ICUS12},
   title = {Carbon dioxide and climate change: implications for mankind's future},
-  author = {Kellogg, William W.},
+  author = {Kellogg, William Welch},
   commentator = {Ellsaesser, Hugh W. and Kondo, Jiro},
 }
 
 @InProceedings{ICUS12:C06:G01:S02,
   crossref = {ICUS12},
   title = {Methane in the atmosphere},
-  author = {Cicerone, Ralph J.},
+  author = {Cicerone, Ralph John},
   commentator = {Watanuki, Kunihiko},
 }
 
 @InProceedings{ICUS12:C06:G01:S03,
   crossref = {ICUS12},
   title = {Mankind's effect on stratospheric ozone},
-  author = {Rowland, F. Sherwood},
-  commentator = {Donahue, Thomas M. and Lacis, Andrew and Rasool, S. Ishtiaque},
+  author = {Rowland, Frank Sherwood},
+  commentator = {Donahue, Thomas M. and Lacis, Andrew Andrejs and Rasool, Saiyed Ichtiaque},
 }
 
 
@@ -715,7 +717,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C06:G02:S02,
   crossref = {ICUS12},
   title = {Worldwide pollution of the oceans},
-  author = {Park, P. Kilho},
+  author = {Park, Paul Kilho},
   commentator = {Norton, Michael G.},
 }
 
@@ -751,20 +753,22 @@ icus.data Data Version 0.9.2
   crossref = {ICUS12},
   title = {Global effects of meteorite impacts and vulcanism},
   author = {Lal, Devendra},
-  commentator = {Goodell, H. Grant and Lacis, Andrew},
+  commentator = {Goodell, Horace Grant and Lacis, Andrew Andrejs},
 }
 
 @InProceedings{ICUS12:C06:G03:S03,
   crossref = {ICUS12},
   title = {The gaia hypothesis: mechanisms and tests},
-  author = {Watson, Andrew J.},
-  commentator = {Hayden, Bruce and Lerman, Abraham},
+  author = {Watson, Andrew James},
+  commentator = {Hayden, Bruce P. and Lerman, Abraham},
 }
 
 @InProceedings{ICUS12:C06:G03:X04,
   crossref = {ICUS12},
   title = {General discussion {Global Environmental Problems}},
-  author = {Ayres, Robert U. and Lyttleton, R. A. and Shim, Chong Supp and Soffen, Gerald A. and {Villee Jr}, Claude A. and Wittwer, Sylvan H.},
+  author = {Ayres, Robert U. and Lyttleton, Raymond Arthur and
+  Shim, Chong Supp and Soffen, Gerald A. and
+  Villee, Claude Alvin and Wittwer, Sylvan Harold},
   commentator = {},
 }
 
