--- a/inst/extdata/icusbib-raw/icus14.bib
+++ b/inst/extdata/icusbib-raw/icus14.bib
@@ -21,7 +21,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:P01,
   crossref = {ICUS14},
   title = {The presumption of reason},
-  author = {Hayek, Frederick A.},
+  author = {Hayek, Friedrich August von},
 }
 
 @InProceedings{ICUS14:P02,
@@ -38,7 +38,7 @@ icus.data Data Version 0.9.2
   title = {Unity of Science: Organization and Change in Complex Systems},
   level = {2},
   editorctype={organizer},
-  editorc = {Weinberg, Alvin M. and Alonso, Marcelo},
+  editorc = {Weinberg, Alvin Martin and Alonso, Marcelo},
 }
 
 @Set{ICUS14:C01:G01,
@@ -55,21 +55,21 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C01:G01:S01,
   crossref = {ICUS14},
   title = {On the origin of order in the universe},
-  author = {Sexl, Roman},
-  commentator = {{von Meyenn}, Karl},
+  author = {Sexl, Roman Ulrich},
+  commentator = {Meyenn,	Karl von},
 }
 
 @InProceedings{ICUS14:C01:G01:S02,
   crossref = {ICUS14},
   title = {Gravitation and the origin of large structure in the universe},
-  author = {Bekenstein, Jacob D.},
+  author = {Bekenstein, Jacob David},
   commentator = {Kurti, Nicholas and Gunzig, Edgar},
 }
 
 @InProceedings{ICUS14:C01:G01:S03,
   crossref = {ICUS14},
   title = {Particle physics and the early universe},
-  author = {Fritzsch, Harold},
+  author = {Fritzsch, Harald},
   commentator = {Yilmaz, Huseyin},
 }
 
@@ -89,14 +89,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C01:G02:S01,
   crossref = {ICUS14},
   title = {Self-organization and evolution through fluctuations and instabilities},
-  author = {Velarde, Manuel G.},
-  commentator = {Romo, Luis A.},
+  author = {Velarde, Manuel García},
+  commentator = {{Romo Saltos}, Luis A.},
 }
 
 @InProceedings{ICUS14:C01:G02:S02,
   crossref = {ICUS14},
   title = {The origin of life: the emergence of organized self-replicating molecular systems},
-  author = {Atalay, Bulent I.},
+  author = {Atalay, Bülent},
   commentator = {Mann, Ady},
 }
 
@@ -123,8 +123,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C01:G03:S02,
   crossref = {ICUS14},
   title = {Organization and change in eukaryotic cells},
-  author = {Claude A. {Villee Jr}},
-  commentator = {Park, Charles},
+  author = {Villee, Claude Alvin},
+  commentator = {Park, Charles Rawlinson},
 }
 
 @InProceedings{ICUS14:C01:G03:S03,
@@ -151,14 +151,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS14},
   title = {Self-organization and technological change in the economic system},
   author = {Ayres, Robert U.},
-  commentator = {{Georgescu-Roegen}, Nicholas and Ollom, John F.},
+  commentator = {{Georgescu-Roegen}, Nicholas and Ollom, John Frederick},
 }
 
 @InProceedings{ICUS14:C01:G04:S02,
   crossref = {ICUS14},
   title = {The evolution of the extended order},
   author = {Radnitzky, Gerard},
-  commentator = {Flew, Antony and Petroni, Angelo M.},
+  commentator = {Flew, Antony Garrard Newton and Petroni, Angelo Maria},
 }
 
 @InProceedings{ICUS14:C01:G04:S03,
@@ -172,18 +172,18 @@ icus.data Data Version 0.9.2
 
 
 @Set{ICUS14:C01:G05,
-  entryset = {ICUS14:C01:G04:S01},
-  pattern = {ICUS14:C01:G04:[S|X]},
+  entryset = {ICUS14:C01:G05:S01},
+  pattern = {ICUS14:C01:G05:[S|X]},
   patterntype = {key},
   settype = {Session},
   title = {General Discussion},
-  moderator = {Weinberg, Alvin M.},
+  moderator = {Weinberg, Alvin Martin},
 }
 
 @InProceedings{ICUS14:C01:G05:S01,
   crossref = {ICUS14},
   title = {(untitled)},
-  author = {Hayek, Frederick A. and Wigner, Eugene P. and Gerholm, Tor Ragnar},
+  author = {Hayek, Friedrich August von and Wigner, Eugene Paul and Gerholm, Tor Ragnar},
 }
 
 
@@ -214,7 +214,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS14},
   title = {The role of mathematics in scientific synthesis and the interpretation of quantum theory},
   author = {Accardi, Luigi},
-  commentator = {Beltrametti, Enrico},
+  commentator = {Beltrametti, Enrico G.},
 }
 
 @InProceedings{ICUS14:C02:G01:S02,
@@ -248,7 +248,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS14},
   title = {Cultural syntheses: epistemological and moral},
   author = {Barker, Eileen V.},
-  commentator = {Elaigwu, J. Isawa},
+  commentator = {Elaigwu, Jonah Isawa},
 }
 
 @InProceedings{ICUS14:C02:G02:S02,
@@ -273,14 +273,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C02:G03:S01,
   crossref = {ICUS14},
   title = {Time, space, technology and collective identity},
-  author = {Segre, Dan V.},
+  author = {Segre, Dan Vittorio},
   commentator = {{De Silva}, Padmasiri},
 }
 
 @InProceedings{ICUS14:C02:G03:S02,
   crossref = {ICUS14},
   title = {Peace as a project of interracial synthesis},
-  author = {Bardis, Panos D.},
+  author = {Bardis, Panos Demetrios},
   commentator = {Gori, Umberto},
 }
 
@@ -315,7 +315,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS14},
   title = {Religion as an experience of synthesis},
   author = {Rubenstein, Richard L.},
-  commentator = {Roth, John K.},
+  commentator = {Roth, John King},
 }
 
 
@@ -334,8 +334,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C02:G05:S01,
   crossref = {ICUS14},
   title = {The special characteristic of the reception of Western culture and the formation of civil society in the three Oriental countries of China, Japan and Korea},
-  author = {Yoon, Se Won},
-  commentator = {Kittrie, Nicholas N.},
+  author = {Yoon, Se-won},
+  commentator = {Kittrie, Nicholas Nehemiah},
 }
 
 
@@ -349,7 +349,7 @@ icus.data Data Version 0.9.2
   title = {Forms and Symbols: The Roots of Behavior},
   level = {2},
   editorctype={organizer},
-  editorc = {Charon, Jean},
+  editorc = {Charon, Jean Émile},
 }
 
 @Set{ICUS14:C03:G01,
@@ -366,7 +366,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C03:G01:S01,
   crossref = {ICUS14},
   title = {Forms, symbols and the structure of the brain},
-  author = {Delgado, Jose M. R.},
+  author = {Delgado, José Manuel Rodríguez},
 }
 
 @InProceedings{ICUS14:C03:G01:S02,
@@ -391,13 +391,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C03:G02:S01,
   crossref = {ICUS14},
   title = {The roots of behavior in contemporary physics},
-  author = {Charon, Jean E.},
+  author = {Charon, Jean Émile},
 }
 
 @InProceedings{ICUS14:C03:G02:S02,
   crossref = {ICUS14},
   title = {The good and the divine},
-  author = {Bonnier, Henri},
+  author = {Bonnier, Henry},
 }
 
 
@@ -478,7 +478,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C04:G01:S01,
   crossref = {ICUS14},
   title = {Moral, scientific and technological values in modernization},
-  author = {Okoko, Olatunde},
+  author = {Oloko, Olatunde},
   commentator = {Tan, Tai Wei and Schleicher, Klaus},
 }
 
@@ -564,7 +564,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS14},
   title = {Moderization and life-long education},
   author = {Dave, Ravindra},
-  commentator = {Wagaw, Teshome G. and Thompson, Henry},
+  commentator = {Wagaw, Teshome G. and Thompson, Henry O.},
 }
 
 
@@ -578,7 +578,7 @@ icus.data Data Version 0.9.2
   title = {The Search for Unifying Global Philosophy},
   level = {2},
   editorctype={organizer},
-  editorc = {Smith, Huston and Foster, Durwood},
+  editorc = {Smith, Huston and Foster, A. Durwood},
 }
 
 @Set{ICUS14:C05:G01,
@@ -595,7 +595,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C05:G01:S01,
   crossref = {ICUS14},
   title = {Neoplatonism as a world philosophy},
-  author = {Harris, R. Blaine},
+  author = {Harris, Ransom Baine},
   commentator = {MacGregor, Geddes},
 }
 
@@ -629,7 +629,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS14},
   title = {The integral philosophy of Sri Aurobindo},
   author = {Basu, Arabinda},
-  commentator = {Crawford, Cromwell},
+  commentator = {Crawford, S. Cromwell},
 }
 
 @InProceedings{ICUS14:C05:G02:S02,
@@ -655,7 +655,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C05:G03:S01,
   crossref = {ICUS14},
   title = {Science and religion with particular reference to P. Teilhard de Chardin},
-  author = {Bonifaxi, Conrad},
+  author = {Bonifazi, Conrad},
   commentator = {David, William},
 }
 
@@ -689,14 +689,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C05:G04:S01,
   crossref = {ICUS14},
   title = {Being and competing religious claims: a Heideggerian view},
-  author = {Long, Eugene T.},
+  author = {Long, Eugene Thomas},
   commentator = {Bolin, Nona R.},
 }
 
 @InProceedings{ICUS14:C05:G04:S02,
   crossref = {ICUS14},
   title = {Ontological and theological bases of pluralism},
-  author = {Scharleman, Robert P.},
+  author = {Scharlemann, Robert Paul},
   commentator = {Sharkey, Paul W.},
 }
 
@@ -724,7 +724,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS14},
   title = {Unification thought as a four-position conceptuality for harmonization},
   author = {Pobanz, Kerry C.},
-  commentator = {Harrison, Frank R. III},
+  commentator = {{Harrison III}, Frank R.},
 }
 
 
@@ -738,7 +738,7 @@ icus.data Data Version 0.9.2
   title = {The Universe and its Origin from Ancient Myth to Present Reality and Fantasy},
   level = {2},
   editorctype={organizer},
-  editorc = {Singer, S. Fred},
+  editorc = {Singer, Siegfried Fred},
 }
 
 @Set{ICUS14:C06:G01,
@@ -763,13 +763,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS14},
   title = {The Velikovsky affair},
   author = {Motz, Lloyd},
-  commentator = {Bauer, Henry H.},
+  commentator = {Bauer, Henry Hermann},
 }
 
 @InProceedings{ICUS14:C06:G01:S03,
   crossref = {ICUS14},
   title = {Astrology and the development of astronomy},
-  author = {Stehling, Kurt R.},
+  author = {Stehling, Kurt Richard},
   commentator = {Tolbert, Charles R.},
 }
 
@@ -788,15 +788,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C06:G02:S01,
   crossref = {ICUS14},
   title = {Cosmology - modern views},
-  author = {Chiu, H. Y.},
-  commentator = {Sebastian {von Hoemer}},
+  author = {Chiu, Hong-yee},
+  commentator = {Hoerner, Sebastian von},
 }
 
 @InProceedings{ICUS14:C06:G02:S02,
   crossref = {ICUS14},
   title = {The origin of the solar system},
-  author = {Lewis, John},
-  commentator = {Lyttleton, R. A.},
+  author = {Lewis, John Simpson},
+  commentator = {Lyttleton, Raymond Arthur},
 }
 
 
@@ -814,15 +814,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS14:C06:G03:S01,
   crossref = {ICUS14},
   title = {Giant comets and their role in history},
-  author = {Clube, Victor},
-  commentator = {William H. {Stiebing Jr}},
+  author = {Clube, Stace Victor Murray},
+  commentator = {{Stiebing Jr}, William Henry},
 }
 
 @InProceedings{ICUS14:C06:G03:S02,
   crossref = {ICUS14},
   title = {Human exploration and development of the solar system: the first steps},
-  author = {O'Leary, Brian},
-  commentator = {Oberg, James E.},
+  author = {O'Leary, Brian Todd},
+  commentator = {Oberg, James Edward},
 }
 
 @InProceedings{ICUS14:C06:G03:S03,
@@ -848,7 +848,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS14},
   title = {UFOs: fantasy or present reality},
   author = {Maccabee, Bruce},
-  commentator = {Oberg, James E.},
+  commentator = {Oberg, James Edward},
 }
 
 
