--- a/inst/extdata/icusbib-raw/icus16.bib
+++ b/inst/extdata/icusbib-raw/icus16.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -5,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS16,
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Sixteenth International Conference on the Unity of the Sciences},
-  editora = {Weinberg, Alvin M. and Gerholm, Tor Ragnar and Fukuda, Nobuyuki},
+  editora = {Weinberg, Alvin Martin and Gerholm, Tor Ragnar and Fukuda, Nobuyuki},
   editoratype = {chairperson},
   shorttitle = {ICUS XVI},
   eventdate = {1987-11-26/1987-11-29},
@@ -21,7 +23,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:P01,
   crossref = {ICUS16},
   title = {The Unification of Knowledge: An Ideal and Its Difficulties},
-  author = {Shils, Edward},
+  author = {Shils, Edward Albert},
 }
 
 @InProceedings{ICUS16:P02,
@@ -38,7 +40,7 @@ icus.data Data Version 0.9.2
   title = {The Unity of the Universe},
   level = {2},
   editorctype={organizer},
-  editorc = {Lyttleton, Raymond A. and Motz, Lloyd},
+  editorc = {Lyttleton, Raymond Arthur and Motz, Lloyd},
 }
 
 @Set{ICUS16:C01:G01,
@@ -67,13 +69,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C01:G01:S03,
   crossref = {ICUS16},
   title = {The anthropic principle as a unifying approach to the universe},
-  author = {Trimble, Virginia},
+  author = {Trimble, Virginia Louise},
 }
 
 @InProceedings{ICUS16:C01:G01:S04,
   crossref = {ICUS16},
   title = {Discussants},
-  author = {Marx, George and Sussman, Georg and Higatsberger, Michael J.},
+  author = {Marx, George and Suessmann, Georg and Higatsberger, Michael J.},
 }
 
 
@@ -91,7 +93,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C01:G02:S01,
   crossref = {ICUS16},
   title = {Large-scale properties of the universe},
-  author = {Ostriker, Jeremiah P.},
+  author = {Ostriker, Jeremiah Paul},
   commentator={Bertola, Francesco}
 }
 
@@ -129,7 +131,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS16},
   title = {Organic molecules and the origin of the solar system},
   author = {Johnson, Fred},
-  commentator={Gornitz, Thomas and A. M. {Perry Jr}}
+  commentator={Görnitz, Thomas and {Perry Jr}, Alfred M.}
 }
 
 
@@ -147,19 +149,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C01:G05:S01,
   crossref = {ICUS16},
   title = {Interstellar dust, comets and panspermia},
-  author = {Wickramasinghe, N. Chandra},
+  author = {Wickramasinghe, Nalin Chandra},
 }
 
 @InProceedings{ICUS16:C01:G05:S02,
   crossref = {ICUS16},
   title = {Life and intelligence in the universe - a cosmic perspective},
-  author = {Papagiannis, Michael},
+  author = {Papagiannis, Michael Demetrius},
 }
 
 @InProceedings{ICUS16:C01:G05:S03,
   crossref = {ICUS16},
   title = {Discussants},
-  author = {Ali, M. Shamsher and Atalay, Bulent I.},
+  author = {Ali, M. Shamsher and Atalay, Bülent},
 }
 
 
@@ -172,7 +174,7 @@ icus.data Data Version 0.9.2
   title = {The Value of Human Life},
   level = {2},
   editorctype={organizer},
-  editorc = {Smart, Ninian and Badham, Paul},
+  editorc = {Smart, Roderick Ninian and Badham, Paul},
 }
 
 @Set{ICUS16:C02:G01,
@@ -196,7 +198,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C02:G01:S02,
   crossref = {ICUS16},
   title = {Technology and the good life},
-  author = {Kegley, Jacquelyn Ann},
+  author = {Kegley, Jacquelyn Ann K.},
   commentator = {Kumar, Krishan},
 }
 
@@ -222,8 +224,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C02:G02:S02,
   crossref = {ICUS16},
   title = {Neurobiological factors in the development of personhood},
-  author = {Delgado, Jose M. R.},
-  commentator = {Rakic, Ljubisav},
+  author = {Delgado, José Manuel Rodríguez},
+  commentator = {Rakic, Ljubisav M.},
 }
 
 
@@ -242,7 +244,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS16},
   title = {Allocating health care resources and the problem of the value of life},
   author = {Kuhse, Helga},
-  commentator = {Sass, Hans Martin},
+  commentator = {Sass, Hans-Martin},
 }
 
 @InProceedings{ICUS16:C02:G03:S02,
@@ -274,8 +276,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C02:G04:S02,
   crossref = {ICUS16},
   title = {Equal value; or equal rights to equal liberties?},
-  author = {Flew, Antony},
-  commentator = {Kozma, Tamas},
+  author = {Flew, Antony Garrard Newton},
+  commentator = {Kozma, Tamás},
 }
 
 
@@ -293,15 +295,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C02:G05:S01,
   crossref = {ICUS16},
   title = {Three views of death and their implications for life},
-  author = {Berger, Arthur S.},
-  commentator = {Lorimer, David and Katoh, Shigeru},
+  author = {Berger, Arthur Seymour},
+  commentator = {Lorimer, David and Kato, Shigeru},
 }
 
 @InProceedings{ICUS16:C02:G05:S02,
   crossref = {ICUS16},
   title = {Issue of life and death in Buddhism},
   author = {Matsunaga, Daigan Lee},
-  commentator = {{Chandra-ngarm}, Saeng},
+  commentator = {{Chandrangarm}, Saeng},
 }
 
 
@@ -319,15 +321,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C02:G06:S01,
   crossref = {ICUS16},
   title = {A Christian understanding of the meaning of life},
-  author = {Davies, David},
-  commentator = {King, Ursula and Hackett, Rosalind},
+  author = {Davies, David Arthur},
+  commentator = {King, Ursula and Hackett, Rosalind I. J.},
 }
 
 @InProceedings{ICUS16:C02:G06:S02,
   crossref = {ICUS16},
   title = {The value of human life: an Islamic perspective},
   author = {Ahmad, Anis},
-  commentator = {Ally, Muhammad Mushuq},
+  commentator = {{Mashuq Ally}, Muhammad},
 }
 
 
@@ -340,7 +342,7 @@ icus.data Data Version 0.9.2
   title = {Towards Ecumenism in World Philosophy},
   level = {2},
   editorctype={organizer},
-  editorc = {Lee, Sang Hun and Foster, A. Durwood},
+  editorc = {Lee, Sang-Hun and Foster, A. Durwood},
 }
 
 @Set{ICUS16:C03:G01,
@@ -357,8 +359,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C03:G01:S01,
   crossref = {ICUS16},
   title = {Steps toward ecumenism in Meister Eckart and Nicholas of Cusa},
-  author = {Emilie {Zum Brunn}},
-  commentator = {Charles, Daniel},
+  author = {{Zum Brunn}, Emilie},
+  commentator = {Charles, Daniel Paul},
 }
 
 @InProceedings{ICUS16:C03:G01:S02,
@@ -402,15 +404,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C03:G03:S01,
   crossref = {ICUS16},
   title = {The Buddha's conceptions of reality and morality},
-  author = {Kalupahana, David},
-  commentator = {Gunaratne, R. David},
+  author = {Kalupahana, David J.},
+  commentator = {Gunaratne, Ranil Dion},
 }
 
 @InProceedings{ICUS16:C03:G03:S02,
   crossref = {ICUS16},
   title = {On the diversity of religions and the reference of religious terms},
   author = {Mavrodes, George I.},
-  commentator = {Carter, Robert E.},
+  commentator = {Carter, Robert Edgar},
 }
 
 
@@ -429,7 +431,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS16},
   title = {Universalism as a meta-philosophy of mankind},
   author = {Kuczynski, Janusz},
-  commentator = {Rayapen, Lewis},
+  commentator = {Rayapen, Lewis C. A.},
 }
 
 
@@ -448,14 +450,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS16},
   title = {Unification thought and a new basis for society},
   author = {Perry, Paul J.},
-  commentator = {Reyes, Ramon},
+  commentator = {Reyes, Ramon Castillo},
 }
 
 @InProceedings{ICUS16:C03:G05:S02,
   crossref = {ICUS16},
   title = {The philosophical multidimensionality of Confucianism},
-  author = {Fu, Charles},
-  commentator = {Chang, Ki Kun},
+  author = {Fu, Charles Wei-hsun},
+  commentator = {Chang, Ki-Kun},
 }
 
 
@@ -492,7 +494,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C04:G01:S02,
   crossref = {ICUS16},
   title = {The economic approach to sociology},
-  author = {Coleman, James S.},
+  author = {Coleman, James Samuel},
   commentator = {Tietzel, Manfred and Weede, Erich H.},
 }
 
@@ -511,7 +513,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C04:G02:S01,
   crossref = {ICUS16},
   title = {The reintegration of political science and economics and the presumed imperialism of economic theory},
-  author = {Ordeshook, Peter},
+  author = {Ordeshook, Peter Carl},
   commentator = {Ostrom, Vincent},
 }
 
@@ -531,7 +533,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS16},
   title = {The law and economic approach},
   author = {Schwartz, Alan},
-  commentator = {Aranson, Peter H. and DeJasay, Anthony},
+  commentator = {Aranson, Peter H. and {De Jasay}, Anthony},
 }
 
 @InProceedings{ICUS16:C04:G03:S02,
@@ -600,7 +602,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C04:G06:S01,
   crossref = {ICUS16},
   title = {How the scientific marketplace works},
-  author = {Weinberg, Alvin M.},
+  author = {Weinberg, Alvin Martin},
 }
 
 @InProceedings{ICUS16:C04:G06:S02,
@@ -714,7 +716,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C05:G03:S03,
   crossref = {ICUS16},
   title = {Discussants},
-  author = {Alpert, Seymoor S. and Daxun, Jin},
+  author = {Alpert, Seymoor S. and Jin, Daxun},
 }
 
 
@@ -732,19 +734,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C05:G04:S01,
   crossref = {ICUS16},
   title = {The Chinese experience in transforming nutrition},
-  author = {Daxun, Jin},
+  author = {Jin, Daxun},
 }
 
 @InProceedings{ICUS16:C05:G04:S02,
   crossref = {ICUS16},
   title = {The human food chain: newer perspectives on food ideologies and food use, globally},
-  author = {Jerome, Norge W.},
+  author = {Jerome, Norge Winifred},
 }
 
 @InProceedings{ICUS16:C05:G04:S03,
   crossref = {ICUS16},
   title = {Discussants},
-  author = {Knappert, Jan and Fleming, James},
+  author = {Knappert, Jan and Fleming, James Rodger},
 }
 
 
@@ -768,7 +770,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C05:G05:S02,
   crossref = {ICUS16},
   title = {And they ate and drank and rejoiced before the Lord},
-  author = {Werblowsky, R. J. Zwi},
+  author = {Werblowsky, Raphael Jehudah Zwi},
 }
 
 @InProceedings{ICUS16:C05:G05:S03,
@@ -792,7 +794,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C05:G06:S01,
   crossref = {ICUS16},
   title = {Ecological aspects of the human food chain},
-  author = {Vallentyne, Jack},
+  author = {Pimentel, David},
+  commentator = {Vallentyne, John R.},
 }
 
 
@@ -805,7 +808,7 @@ icus.data Data Version 0.9.2
   title = {Eastern Approaches to the Unity of Spirit and Matter: Qi and Science},
   level = {2},
   editorctype={organizer},
-  editorc = {Charon, Jean and Nakagawa, Manabu},
+  editorc = {Charon, Jean Émile and Nakagawa, Manabu},
 }
 
 @Set{ICUS16:C06:G01,
@@ -852,7 +855,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C06:G02:S03,
   crossref = {ICUS16},
   title = {Discussants},
-  author = {Dy, Manuel and Lagmay, Alfedo V.},
+  author = {{Dy Jr}, Manuel B. and Lagmay, Alfredo Villagracia},
 }
 
 
@@ -900,7 +903,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C06:G04:S01,
   crossref = {ICUS16},
   title = {Qi and physics},
-  author = {Yoon, Se Won},
+  author = {Yoon, Se-won},
 }
 
 @InProceedings{ICUS16:C06:G04:S02,
@@ -912,7 +915,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C06:G04:S03,
   crossref = {ICUS16},
   title = {Discussants},
-  author = {Ishikawa, Mitsuo and Xu, Lan-Xu},
+  author = {Ishikawa, Mitsuo and Xu, Lanxu},
 }
 
 
@@ -936,13 +939,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C06:G05:S02,
   crossref = {ICUS16},
   title = {Qi and geomancy in Korean thought},
-  author = {Kim, Yong-Woon},
+  author = {Kim, Yong-un},
 }
 
 @InProceedings{ICUS16:C06:G05:S03,
   crossref = {ICUS16},
   title = {Discussants},
-  author = {Lee, Nam Pyo and Sorbom, Per},
+  author = {Lee, Nam-Pyo and Sorbom, Per},
 }
 
 
@@ -960,7 +963,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C06:G06:S01,
   crossref = {ICUS16},
   title = {Summation speech: Analysis and representation of spirit in contemporary physics},
-  author = {Charon, Jean E.},
+  author = {Charon, Jean Émile},
   commentator = {Watanuki, Kunihiko and Yamamoto, Kenzo}
 }
 
@@ -1021,7 +1024,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C07:G01:S03,
   crossref = {ICUS16},
   title = {Scripture, clergy and laymen: Christianity},
-  author = {Crawford, Cromwell},
+  author = {Crawford, S. Cromwell},
 }
 
 @InProceedings{ICUS16:C07:G01:S04,
@@ -1051,7 +1054,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C07:G02:S02,
   crossref = {ICUS16},
   title = {The mystical way to unity: Christianity},
-  author = {Peperzak, Adriaan},
+  author = {Peperzak, Adriaan Theodoor},
 }
 
 @InProceedings{ICUS16:C07:G02:S03,
@@ -1093,19 +1096,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C07:G03:S01,
   crossref = {ICUS16},
   title = {The God-concept and the creed: Judaism},
-  author = {Samuelson, Norbert},
+  author = {Samuelson, Norbert Max},
 }
 
 @InProceedings{ICUS16:C07:G03:S02,
   crossref = {ICUS16},
   title = {The God-concept and the creed: Christianity},
-  author = {Bettis, Joseph},
+  author = {Bettis, Joseph Dabney},
 }
 
 @InProceedings{ICUS16:C07:G03:S03,
   crossref = {ICUS16},
   title = {The God-concept and the creed: Islam},
-  author = {Badr, Gamal M.},
+  author = {Badr, Gamal Moursi},
 }
 
 @InProceedings{ICUS16:C07:G03:S04,
@@ -1141,7 +1144,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C07:G04:S01,
   crossref = {ICUS16},
   title = {My religion and yours: the issue of religio-centrism - Judaism},
-  author = {Stroumsa, Gedaliahu G.},
+  author = {Stroumsa, Gedaliahu A. Guy},
 }
 
 @InProceedings{ICUS16:C07:G04:S02,
@@ -1153,7 +1156,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C07:G04:S03,
   crossref = {ICUS16},
   title = {My religion and yours: the issue of religio-centrism - Islam},
-  author = {Sulaiman, Sadek J.},
+  author = {Sulaiman, Sadek Jawad},
 }
 
 
@@ -1195,13 +1198,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C07:G05:S05,
   crossref = {ICUS16},
   title = {Non-theistic views of monotheism - Confucianist},
-  author = {Hwang, Philip H.},
+  author = {Hwang, Pilho},
 }
 
 @InProceedings{ICUS16:C07:G05:S06,
   crossref = {ICUS16},
   title = {Non-theistic views of monotheism - Hindu},
-  author = {Bhargava, Purushottam L.},
+  author = {Bhargava, Purushottam Lal},
 }
 
 
@@ -1219,7 +1222,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C07:G06:S01,
   crossref = {ICUS16},
   title = {Summation speaker},
-  author = {Rubenstein, Richard},
+  author = {Rubenstein, Richard L.},
 }
 
 
