--- a/inst/extdata/icusbib-raw/icus17.bib
+++ b/inst/extdata/icusbib-raw/icus17.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -5,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS17,
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Seventeenth International Conference on the Unity of the Sciences},
-  editora = {Weinberg, Alvin M. and Higatsberger, Michael and Cappelletti, Vincenzo},
+  editora = {Weinberg, Alvin Martin and Higatsberger, Michael J. and Cappelletti, Vincenzo},
   editoratype = {chairperson},
   shorttitle = {ICUS XVII},
   eventdate = {1988-11-24/1988-11-27},
@@ -21,7 +23,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:P01,
   crossref = {ICUS17},
   title = {Evolution of the Human Brain: Creation of the Conscious Self},
-  author = {Eccles, John},
+  author = {Eccles, John Carew},
 }
 
 @InProceedings{ICUS17:P02,
@@ -58,14 +60,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {The anthropic principle - physical constraints for the evolution of intelligent life: an epistemological assessment},
   author = {Kanitscheider, Bernulf},
-  commentator = {Goernitz, Thomas},
+  commentator = {Görnitz, Thomas},
 }
 
 @InProceedings{ICUS17:C01:G01:S02,
   crossref = {ICUS17},
   title = {The importance of prebiotic porphyrins in biopoisis},
-  author = {{del C. Batlle}, Alcira M. },
-  commentator = {Atalay, Bulent},
+  author = {Batlle, Alcira María del Carmen },
+  commentator = {Atalay, Bülent},
 }
 
 
@@ -109,15 +111,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C01:G03:S01,
   crossref = {ICUS17},
   title = {A model of man},
-  author = {Camilo {Vijil y Tardon}},
-  commentator = {Wilfried {von Studnitz}},
+  author = {{Vijil Tardón}, Camilo},
+  commentator = {Studnitz, Wilfried von},
 }
 
 @InProceedings{ICUS17:C01:G03:S02,
   crossref = {ICUS17},
   title = {Natural selection and the human condition},
-  author = {Harrison, G. Ainsworth},
-  commentator = {Villee, Claude A.},
+  author = {Harrison, Geoffrey Ainsworth},
+  commentator = {Villee, Claude Alvin},
 }
 
 
@@ -143,7 +145,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {Charles Darwin in the teleology of evolution},
   author = {Wells, Jonathan},
-  commentator = {Moss, Scott},
+  commentator = {Moss, Scott J.},
 }
 
 
@@ -162,14 +164,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {The nature and ritual and the place of ritual in human evolution},
   author = {Aijmer, Goran L.},
-  commentator = {Brogger, Jan},
+  commentator = {Brøgger, Jan},
 }
 
 @InProceedings{ICUS17:C01:G05:S02,
   crossref = {ICUS17},
   title = {The evolution of science as an element in the ''rise of the West''},
   author = {Radnitzky, Gerard},
-  commentator = {Flew, Antony},
+  commentator = {Flew, Antony Garrard Newton},
 }
 
 
@@ -194,7 +196,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C01:G06:S02,
   crossref = {ICUS17},
   title = {Conceptual evolution in physics: a case study of the new didactic system: physics in 700 experiments},
-  author = {Higatsberger, Michael},
+  author = {Higatsberger, Michael J.},
   commentator = {Forchheimer, Robert},
 }
 
@@ -208,7 +210,7 @@ icus.data Data Version 0.9.2
   title = {Ethnocentrism vs. World Unity: Impacts on Socialization and Education},
   level = {2},
   editorctype={organizer},
-  editorc = {Kozma, Tamas and Schleicher, Klaus},
+  editorc = {Kozma, Tamás and Schleicher, Klaus},
 }
 
 @Set{ICUS17:C02:G01,
@@ -225,7 +227,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C02:G01:S01,
   crossref = {ICUS17},
   title = {Psychological aspects of ethnic mentality},
-  author = {Illyes, Sandor},
+  author = {Illyés, Sándor},
 }
 
 @InProceedings{ICUS17:C02:G01:S02,
@@ -237,7 +239,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C02:G01:S03,
   crossref = {ICUS17},
   title = {Political socialization and the world citizen},
-  author = {Flouris, George and Spiridakis, John},
+  author = {Flouris, George and Spiridakis, John N.},
 }
 
 @InProceedings{ICUS17:C02:G01:S04,
@@ -261,13 +263,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C02:G02:S01,
   crossref = {ICUS17},
   title = {Ethnocentrism as a social need and disease},
-  author = {Bernardi, Bernard},
+  author = {Bernardi, Bernardo},
 }
 
 @InProceedings{ICUS17:C02:G02:S02,
   crossref = {ICUS17},
   title = {Dimensions of multiculturism: the emergence of a new educational ideology},
-  author = {Kozma, Tamas},
+  author = {Kozma, Tamás},
 }
 
 @InProceedings{ICUS17:C02:G02:S03,
@@ -345,13 +347,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C02:G04:S03,
   crossref = {ICUS17},
   title = {Ethnocentrism in education: the case of Colonial Africa},
-  author = {Ishumi, Abel G.},
+  author = {Ishumi, Abel G. M.},
 }
 
 @InProceedings{ICUS17:C02:G04:S04,
   crossref = {ICUS17},
   title = {Session IV analyst},
-  author = {Knappert, Jan D.},
+  author = {Knappert, Jan},
 }
 
 
@@ -375,13 +377,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C02:G05:S02,
   crossref = {ICUS17},
   title = {Ethnocentrism and multiculturism from a unification perspective},
-  author = {Rayapen, Lewis},
+  author = {Rayapen, Lewis C. A.},
 }
 
 @InProceedings{ICUS17:C02:G05:S03,
   crossref = {ICUS17},
   title = {Mass media and popular culture in the perspective of ethnocentrism},
-  author = {Lee, Nam Pyo},
+  author = {Lee, Nam-Pyo},
 }
 
 @InProceedings{ICUS17:C02:G05:S04,
@@ -411,19 +413,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C02:G06:S02,
   crossref = {ICUS17},
   title = {Education and ethnocentrism: the role and impact of international organizations},
-  author = {Wagaw, Teshome},
+  author = {Wagaw, Teshome G.},
 }
 
 @InProceedings{ICUS17:C02:G06:S03,
   crossref = {ICUS17},
   title = {Internationalizing science teaching by media},
-  author = {Higatsberger, Michael},
+  author = {Higatsberger, Michael J.},
 }
 
 @InProceedings{ICUS17:C02:G06:S04,
   crossref = {ICUS17},
   title = {Session VI analyst},
-  author = {Cuadra, Hector},
+  author = {Cuadra, Héctor},
 }
 
 
@@ -453,15 +455,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C03:G01:S01,
   crossref = {ICUS17},
   title = {Perspectives on the international transfer of science and technology},
-  author = {Fleming, James R.},
-  commentator={Harter, Don},
+  author = {Fleming, James Rodger},
+  commentator={Harter, Donald Alton},
 }
 
 @InProceedings{ICUS17:C03:G01:S02,
   crossref = {ICUS17},
   title = {The geographical unification of the sciences: strengthening the scientific infrastructure in the developing countries},
   author = {Moravcsik, M. J.},
-  commentator={LaTorre, Victor},
+  commentator={Latorre, Victor},
 }
 
 
@@ -486,7 +488,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C03:G02:S02,
   crossref = {ICUS17},
   title = {Transfer of technology},
-  author = {Eduardo {De la Tijera} and Barnes, Francisco},
+  author = {Eduardo {De la Tijera} and {Barnés de Castro}, Francisco José},
   commentator={Afghan, Naim},
 }
 
@@ -512,8 +514,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C03:G03:S02,
   crossref = {ICUS17},
   title = {Astronomy: a planetwide perspective},
-  author = {Wickramashinghe, N. Chandra},
-  commentator={Lyttleton, Raymond A.},
+  author = {Wickramasinghe, Nalin Chandra},
+  commentator={Lyttleton, Raymond Arthur},
 }
 
 
@@ -532,14 +534,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {Nutrition program for pre-school children - and African experiment},
   author = {Eraj, Yusuf Ali},
-  commentator={Jerome, Norge},
+  commentator={Jerome, Norge Winifred},
 }
 
 @InProceedings{ICUS17:C03:G04:S02,
   crossref = {ICUS17},
   title = {Drug policy, medicine and social development},
   author = {Islam, Nurul},
-  commentator={Otero, Efrain},
+  commentator={{Otero Ruiz}, Efrain},
 }
 
 
@@ -558,7 +560,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {Living in harmony with nature - a case study of Japan},
   author = {Miyawaki, Akira},
-  commentator={{Johnson-Marshall}, Percy},
+  commentator={{Johnson-Marshall}, Percy Edwin Alan},
 }
 
 @InProceedings{ICUS17:C03:G05:S02,
@@ -583,8 +585,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C03:G06:S01,
   crossref = {ICUS17},
   title = {Perservation of flora and fauna - a moral responsibility of mankind},
-  author = {Khan, M. Salar},
-  commentator={Reck, Andrew J.},
+  author = {Khan, Mohammad Salar},
+  commentator={Reck, Andrew Joseph},
 }
 
 @InProceedings{ICUS17:C03:G06:S02,
@@ -621,13 +623,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C04:G01:S01,
   crossref = {ICUS17},
   title = {The Hindu attitude to knowledge and nature},
-  author = {Balasubramanian, R.},
+  author = {Balasubramanian, Rajangam},
 }
 
 @InProceedings{ICUS17:C04:G01:S02,
   crossref = {ICUS17},
   title = {Science, spirituality and technology - essential and interdependent},
-  author = {Anantharaman, T. R.},
+  author = {Anantharaman, Tanjore R.},
 }
 
 @InProceedings{ICUS17:C04:G01:S03,
@@ -639,7 +641,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C04:G01:S04,
   crossref = {ICUS17},
   title = {Session I discussion},
-  author = {{de Silva}, M. W. Padmasiri and {Slavinska-Holy}, Nonna and Novak, Phillip},
+  author = {{De Silva}, Padmasiri and {Slavinska-Holy}, Nonna and Novak, Philip},
 }
 
 
@@ -663,25 +665,25 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C04:G02:S02,
   crossref = {ICUS17},
   title = {Between physics and natural history},
-  author = {Nagasaka, Francis G.},
+  author = {Nagasaka, Francis Gen-ichiro},
 }
 
 @InProceedings{ICUS17:C04:G02:S03,
   crossref = {ICUS17},
   title = {Lost science},
-  author = {Sharpe, R. W.},
+  author = {Sharpe, Richard W.},
 }
 
 @InProceedings{ICUS17:C04:G02:S04,
   crossref = {ICUS17},
   title = {A new metaphysics in support of East-West contemporary physics: East-West contributions},
-  author = {Shimmyo, Theodore},
+  author = {Shimmyo, Theodore Tadaaki},
 }
 
 @InProceedings{ICUS17:C04:G02:S05,
   crossref = {ICUS17},
   title = {Session II discussion},
-  author = {Gooding, David and Kim, Yong-Woon and Gunaratne, R. D.},
+  author = {Gooding, David Charles and Kim, Yong-un and Gunaratne, Ranil Dion},
 }
 
 
@@ -711,7 +713,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C04:G03:S03,
   crossref = {ICUS17},
   title = {Is contemporary science religiously different from classical science?},
-  author = {Sudarshan, George},
+  author = {Sudarshan, Ennackel Chandy George},
 }
 
 @InProceedings{ICUS17:C04:G03:S04,
@@ -735,7 +737,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C04:G04:S01,
   crossref = {ICUS17},
   title = {Contribution of East and West to spirit-science unification},
-  author = {Charon, Jean},
+  author = {Charon, Jean Émile},
 }
 
 @InProceedings{ICUS17:C04:G04:S02,
@@ -747,7 +749,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C04:G04:S03,
   crossref = {ICUS17},
   title = {Science and the Siddharta},
-  author = {Lagmay, Alfredo},
+  author = {Lagmay, Alfredo Villagracia},
 }
 
 @InProceedings{ICUS17:C04:G04:S04,
@@ -777,7 +779,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C04:G05:S02,
   crossref = {ICUS17},
   title = {The distance between the laboratory and the monastery},
-  author = {{de Silva}, M. W. Padmasiri},
+  author = {{De Silva}, Padmasiri},
 }
 
 @InProceedings{ICUS17:C04:G05:S03,
@@ -789,7 +791,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C04:G05:S04,
   crossref = {ICUS17},
   title = {Session V discussion},
-  author = {{Dy Jr}, Manuel B. and Tripathi, G. C. and Thompson, Henry O.},
+  author = {{Dy Jr}, Manuel B. and Tripathi, Gaya Charan and Thompson, Henry O.},
 }
 
 
@@ -870,7 +872,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C05:G03:S01,
   crossref = {ICUS17},
   title = {Eco-politics and the global ecumene},
-  author = {Hourani, Ben},
+  author = {Hourani, Benjamin Tamer},
   commentator = {Hautala, Heidi},
 }
 
@@ -878,7 +880,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {Give the future a chance: moving towards an ecological economy},
   author = {Fornallaz, Pierre},
-  commentator = {Weinberg, Alvin},
+  commentator = {Weinberg, Alvin Martin},
 }
 
 
@@ -903,7 +905,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {The eco-integrated global society},
   author = {Laszlo, Ervin},
-  commentator = {Bjork, Sven},
+  commentator = {Björk, Sven},
 }
 
 
@@ -927,13 +929,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C05:G05:S02,
   crossref = {ICUS17},
   title = {Ecological spirituality: its history and meaning},
-  author = {{St. John}, Donald P.},
+  author = {{St. John}, Donald Patrick},
 }
 
 @InProceedings{ICUS17:C05:G05:S03,
   crossref = {ICUS17},
   title = {The way of ecopiety: Confucianism, Taoism and Zen},
-  author = {Jung, Hwa Yol},
+  author = {Jung, Hwa-Yol},
 }
 
 @InProceedings{ICUS17:C05:G05:S04,
@@ -957,8 +959,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C05:G06:S01,
   crossref = {ICUS17},
   title = {Ecological considerations of unification thought},
-  author = {Carlson, David},
-  commentator = {Wilson, Andrew and Foster, A. Durwood},
+  author = {Carlson, David Allen},
+  commentator = {Wilson, Andrew Murray and Foster, A. Durwood},
 }
 
 @InProceedings{ICUS17:C05:G06:S02,
@@ -978,7 +980,7 @@ icus.data Data Version 0.9.2
   title = {Neurobiology in Relation to Global Ideology and Values},
   level = {2},
   editorctype={organizer},
-  editorc = {Mellanby, Kenneth and Delgado, Jose M. R.},
+  editorc = {Mellanby, Kenneth and Delgado, José Manuel Rodríguez},
 }
 
 @Set{ICUS17:C06:G01,
@@ -995,13 +997,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C06:G01:S01,
   crossref = {ICUS17},
   title = {Neurobiology of global ideology and values},
-  author = {Delgado, Jose M. R.},
+  author = {Delgado, José Manuel Rodríguez},
 }
 
 @InProceedings{ICUS17:C06:G01:S02,
   crossref = {ICUS17},
   title = {Regulatory systems and values},
-  author = {Rakic, Ljubisav},
+  author = {Rakic, Ljubisav M.},
 }
 
 @InProceedings{ICUS17:C06:G01:S03,
@@ -1025,13 +1027,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C06:G02:S01,
   crossref = {ICUS17},
   title = {Ethology and social change},
-  author = {Scott, John P.},
+  author = {Scott, John Paul},
 }
 
 @InProceedings{ICUS17:C06:G02:S02,
   crossref = {ICUS17},
   title = {Values in a ''value free'' nature},
-  author = {Mishra, R. K.},
+  author = {Mishra, Ravi Kant},
 }
 
 @InProceedings{ICUS17:C06:G02:S03,
@@ -1061,13 +1063,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C06:G03:S02,
   crossref = {ICUS17},
   title = {New systems of values and ideologies: a general systems approach to find a framework for the future},
-  author = {{Rodriguez-Delgado}, Rafael},
+  author = {{Rodriguez Delgado}, Rafael},
 }
 
 @InProceedings{ICUS17:C06:G03:S03,
   crossref = {ICUS17},
   title = {Sessin III discussant},
-  author = {Colavito, Maria},
+  author = {Colavito, Maria Maddalena},
 }
 
 
@@ -1145,7 +1147,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C06:G06:S01,
   crossref = {ICUS17},
   title = {Session VI discussants},
-  author = {Elzaburu, Fernando and Corson, Samuel},
+  author = {{Elzaburu Márquez}, Fernando de and Corson, Samuel Abraham},
 }
 
 
@@ -1158,7 +1160,7 @@ icus.data Data Version 0.9.2
   title = {The Ethics of Nuclear Deterrence},
   level = {2},
   editorctype={organizer},
-  editorc = {Kaplan, Morton A. and Barkenbus, Jack},
+  editorc = {Kaplan, Morton Abraham and Barkenbus, Jack},
 }
 
 @Set{ICUS17:C07:G01,
@@ -1176,13 +1178,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {The attack on deterrence: reflections on morality},
   author = {Garfinkle, Adam},
-  commentator = {Kaplan, Morton},
+  commentator = {Kaplan, Morton Abraham},
 }
 
 @InProceedings{ICUS17:C07:G01:S02,
   crossref = {ICUS17},
   title = {Deterrence, defense and the sanctification of Hiroshima},
-  author = {Weinberg, Alvin M.},
+  author = {Weinberg, Alvin Martin},
   commentator = {Seitz, Frederick},
 }
 
@@ -1202,7 +1204,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {The ethics of nuclear deterrence: a Roman Catholic viewpoint},
   author = {David, Austin},
-  commentator = {Hamdani, Viqar A.},
+  commentator = {Hamdani, Viqar Ahmed},
 }
 
 @InProceedings{ICUS17:C07:G02:S02,
@@ -1235,7 +1237,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {The nuclear deterrence dilemma: in search of a way out},
   author = {Jacchia, Enrico},
-  commentator = {Satoh, Motoyasu},
+  commentator = {Sato, Motoyasu},
 }
 
 
@@ -1280,14 +1282,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {Morality, ideological struggle and nuclear deterrence},
   author = {Walsh, Thomas G.},
-  commentator = {Smart, Ninian},
+  commentator = {Smart, Roderick Ninian},
 }
 
 @InProceedings{ICUS17:C07:G05:S02,
   crossref = {ICUS17},
   title = {Nuclear deterrence: some ethical and religious issues},
-  author = {Rubenstein, Richard},
-  commentator = {Kegley, Jacqueline Ann},
+  author = {Rubenstein, Richard L.},
+  commentator = {Kegley, Jacquelyn Ann K.},
 }
 
 
@@ -1305,7 +1307,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C07:G06:S01,
   crossref = {ICUS17},
   title = {Transitions to a moral political order},
-  author = {Subrahmanyam, K.},
+  author = {Subrahmanyam, Krishnaswamy},
   commentator = {Menon, P. K.},
 }
 
