--- a/inst/extdata/icusbib-raw/icus20.bib
+++ b/inst/extdata/icusbib-raw/icus20.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -5,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS20,
   title = {Absolute Values and the Unity of the Sciences: The Origin and Human Responsibility},
   titleaddon = {Twentieth International Conference on the Unity of the Sciences},
-  editora = {Gerholm, Tor Ragnar and Yoon, Se Won},
+  editora = {Gerholm, Tor Ragnar and Yoon, Se-won},
   editoratype = {chairperson},
   shorttitle = {ICUS XX},
   eventdate = {1995-08-21/1995-08-25},
@@ -21,7 +23,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:P01,
   crossref = {ICUS20},
   title = {Science and Values},
-  author = {Velihov, Eugene},
+  author = {Velikhov, Evgeniĭ Pavlovich},
 }
 
 @InProceedings{ICUS20:P02,
@@ -40,7 +42,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:P04,
   crossref = {ICUS20},
   title = {The Unity of Man and Science},
-  author = {Barton, D. H. R.},
+  author = {Barton, Derek Harold Richard},
 }
 
 @InProceedings{ICUS20:P05,
@@ -58,7 +60,7 @@ icus.data Data Version 0.9.2
   title = {Scientific Objectivity and Human Values},
   level = {2},
   editorctype={organizer},
-  editorc = {Smart, Ninian and Badham, Paul},
+  editorc = {Smart, Roderick Ninian and Badham, Paul},
 }
 
 @Set{ICUS20:C01:G01,
@@ -76,14 +78,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {Scientific knowledge and human knowledge},
   author = {Golaszewska, Maria},
-  commentator = {James, Gene}
+  commentator = {James, Gene G.}
 }
 
 @InProceedings{ICUS20:C01:G01:S02,
   crossref = {ICUS20},
   title = {Changing levels of scientific control over life and death and their impact on morality and law},
   author = {Davies, Christie},
-  commentator = {Saqeb, Ghulam}
+  commentator = {Saqeb, Ghulam Nabi}
 }
 
 
@@ -102,7 +104,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {Modern scientific world view and value subjectivism},
   author = {James, Gene G.},
-  commentator = {Vejs, Janis and Shah, Mohammed Hazim}
+  commentator = {Vejs, Janis Nameisis and Shah, Mohammed Hazim}
 }
 
 @InProceedings{ICUS20:C01:G02:S02,
@@ -127,7 +129,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C01:G03:S01,
   crossref = {ICUS20},
   title = {Fact, value and the categorical imperative},
-  author = {Vejs, Janis},
+  author = {Vejs, Janis Nameisis},
   commentator = {Liu, Dachun}
 }
 
@@ -135,7 +137,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {Humanism, scientism and human future: a comparison of the philosophy of learning in Wang, Yang-ming and Francis Bacon},
   author = {Yao, Xinzhong},
-  commentator = {Becker, Carl}
+  commentator = {Becker, Carl B.}
 }
 
 
@@ -152,8 +154,8 @@ icus.data Data Version 0.9.2
 
 @InProceedings{ICUS20:C01:G04:S01,
   crossref = {ICUS20},
-  title = {\textit{Veritatis splendor}: the quest for an objective moral order},
-  author = {Coughlan, Michael},
+  title = {Veritatis splendor: the quest for an objective moral order},
+  author = {Coughlan, Michael J.},
   commentator = {Golaszewska, Maria}
 }
 
@@ -179,15 +181,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C01:G05:S01,
   crossref = {ICUS20},
   title = {The effects of human values on scientific objectivity},
-  author = {Becker, Carl},
+  author = {Becker, Carl B.},
   commentator = {Badham, Paul}
 }
 
 @InProceedings{ICUS20:C01:G05:S02,
   crossref = {ICUS20},
   title = {Scientific objectivity and theistic belief},
-  author = {Yaran, Cafer},
-  commentator = {Coughlan, Michael}
+  author = {Yaran, Cafer Sadık},
+  commentator = {Coughlan, Michael J.}
 }
 
 
@@ -205,15 +207,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C01:G06:S01,
   crossref = {ICUS20},
   title = {The Muslim quest for integration of revealed and acquired knowledge},
-  author = {Saqeb, Ghulem},
-  commentator = {Yaran, Cafer and Alavi, Khalid}
+  author = {Saqeb, Ghulam Nabi},
+  commentator = {Yaran, Cafer Sadık and Alavi, Khalid}
 }
 
 @InProceedings{ICUS20:C01:G06:S02,
   crossref = {ICUS20},
   title = {Unificationism and social thought: a complex systems perspective},
   author = {Turfus, Colin},
-  commentator = {Smart, Ninian and Kim, Yong-suk}
+  commentator = {Smart, Roderick Ninian and Kim, Yong-suk}
 }
 
 
@@ -226,7 +228,7 @@ icus.data Data Version 0.9.2
   title = {Genetic Knowledge, Human Values and Human Responsibility},
   level = {2},
   editorctype={organizer},
-  editorc = {Kegley, Jacquelyn Ann},
+  editorc = {Kegley, Jacquelyn Ann K.},
 }
 
 @Set{ICUS20:C02:G01,
@@ -268,7 +270,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C02:G02:S01,
   crossref = {ICUS20},
   title = {Genetic information and genetic essentialism: will we betray science, the individual and the community},
-  author = {Kegley, Jacquelyn Ann},
+  author = {Kegley, Jacquelyn Ann K.},
   commentator = {Hu, Xinhe}
 }
 
@@ -276,7 +278,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {Treatment of genetic disease: who is the patient?},
   author = {Shickle, Darren},
-  commentator = {Kegley, Jacquelyn An}
+  commentator = {Kegley, Jacquelyn Ann K.}
 }
 
 
@@ -321,14 +323,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {Amnniocentesis and gender discrimination in India},
   author = {Kumar, Kusum},
-  commentator = {Blank, Robert}
+  commentator = {Blank, Robert H.}
 }
 
 @InProceedings{ICUS20:C02:G04:S02,
   crossref = {ICUS20},
   title = {The Chinese perspective on the use of genetic knowledge},
   author = {Hu, Xinhe},
-  commentator = {Serour, Gamal}
+  commentator = {Serour, Gamal I.}
 }
 
 
@@ -346,8 +348,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C02:G05:S01,
   crossref = {ICUS20},
   title = {Genetic screening, sickle cell anemia and the African and African-American perspective: the ethics of screening and consulting},
-  author = {Gbadegesin, Segan},
-  commentator = {Phlegar, Jacquelyn Ann}
+  author = {Gbadegesin, Segun},
+  commentator = {Phlegar, Jacquelyn Kegley}
 }
 
 @InProceedings{ICUS20:C02:G05:S02,
@@ -373,13 +375,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {Public policy issues: genetic knowledge and its use},
   author = {Blank, Robert},
-  commentator = {Phlegar, Theodore}
+  commentator = {Phlegar, Theodore Curtis}
 }
 
 @InProceedings{ICUS20:C02:G06:S02,
   crossref = {ICUS20},
   title = {Legal implications of genetic screening and counseling},
-  author = {Phlegar, Theodore and Phlegar, Jacquelyn Ann},
+  author = {Phlegar, Theodore Curtis and Phlegar, Jacquelyn Kegley},
   commentator = {Kumar, Kusum}
 }
 
@@ -410,8 +412,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C03:G01:S01,
   crossref = {ICUS20},
   title = {The cart before the horse: on emergent and constructed orders, and their wherewithal},
-  author = {Anthony {de Jasay}},
-  commentator = {Petroni, Angelo}
+  author = {{De Jasay}, Anthony},
+  commentator = {Petroni, Angelo Maria}
 }
 
 @InProceedings{ICUS20:C03:G01:S02,
@@ -425,7 +427,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {International competition among states: minimal coercion, market regime and innovation: the case of antiquity},
   author = {Bernholz, Peter},
-  commentator = {Flew, Antony and Tullock, Gordon}
+  commentator = {Flew, Antony Garrard Newton and Tullock, Gordon}
 }
 
 
@@ -443,14 +445,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C03:G02:S01,
   crossref = {ICUS20},
   title = {Values, preferences and evolution},
-  author = {Petroni, Angelo M.},
-  commentator = {Flew, Antony}
+  author = {Petroni, Angelo Maria},
+  commentator = {Flew, Antony Garrard Newton}
 }
 
 @InProceedings{ICUS20:C03:G02:S02,
   crossref = {ICUS20},
   title = {Towards a theory of autogovernment},
-  author = {Alberto Benegas {Lynch Jr}},
+  author = {{Benegas Lynch Jr.}, Alberto},
   commentator = {Versailles, David W.}
 }
 
@@ -469,15 +471,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C03:G03:S01,
   crossref = {ICUS20},
   title = {Institutions and the spontaneous evolution of morality},
-  author = {Benson, Bruce L.},
-  commentator = {DeAlessi, Louis}
+  author = {Benson, Bruce Lowell},
+  commentator = {{De Alessi}, Louis}
 }
 
 @InProceedings{ICUS20:C03:G03:S02,
   crossref = {ICUS20},
   title = {Value, efficiency and rules: the limits of economics},
-  author = {DeAlessi, Louis},
-  commentator = {Benson, Bruce L.}
+  author = {{De Alessi}, Louis},
+  commentator = {Benson, Bruce Lowell}
 }
 
 
@@ -496,13 +498,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {The political economy of monarchy and democracy and the idea of a natural order},
   author = {Hoppe, Hans-Hermann},
-  commentator = {Tullock, Gordon and {Lynch Jr}, Alberto Benegas and Petroni, Angelo}
+  commentator = {Tullock, Gordon and {Benegas Lynch Jr.}, Alberto and Petroni, Angelo Maria}
 }
 
 @InProceedings{ICUS20:C03:G04:S02,
   crossref = {ICUS20},
   title = {State welfare and individual de-moralization},
-  author = {Flew, Antony},
+  author = {Flew, Antony Garrard Newton},
   commentator = {Karlson, Nils}
 }
 
@@ -547,13 +549,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {Competitive federalism for the era of globalization},
   author = {Kasper, Wolfgang E.},
-  commentator = {Alberto Benegas {Lynch Jr}}
+  commentator = {{Benegas Lynch Jr.}, Alberto}
 }
 
 @InProceedings{ICUS20:C03:G06:S02,
   crossref = {ICUS20},
   title = {Voluntary and coercive orders in the health care system},
-  author = {Wilfried {von Studnitz}},
+  author = {Studnitz, Wilfried von},
   commentator = {Hoppe, Hans-Hermann}
 }
 
@@ -602,13 +604,13 @@ icus.data Data Version 0.9.2
   title = {Perspectives from History},
   level = {3},
   editorctype={organizer},
-  editorc = {Sudarshan, George},
+  editorc = {Sudarshan, Ennackel Chandy George},
 }
 
 @InProceedings{ICUS20:C04:G02:S01,
   crossref = {ICUS20},
   title = {Unity and interdependence in science and religion: alternatives to despair and deconstruction},
-  author = {Fleming, James},
+  author = {Fleming, James Rodger},
 }
 
 @InProceedings{ICUS20:C04:G02:S02,
@@ -632,13 +634,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C04:G03:S01,
   crossref = {ICUS20},
   title = {Witnessing awareness: nature of creativity},
-  author = {Sudarshan, George},
+  author = {Sudarshan, Ennackel Chandy George},
 }
 
 @InProceedings{ICUS20:C04:G03:S02,
   crossref = {ICUS20},
   title = {Toward a science of the heart: David Bohm's physics and beyond},
-  author = {Keepin, William N.},
+  author = {Keepin, William North},
 }
 
 @InProceedings{ICUS20:C04:G03:X03,
@@ -668,7 +670,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C04:G04:S02,
   crossref = {ICUS20},
   title = {Humility as a scientific principle},
-  author = {Spivak, Dmitri},
+  author = {Spivak, Dmitri Leonidovich},
 }
 
 @InProceedings{ICUS20:C04:G04:X03,
@@ -692,13 +694,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C04:G05:S01,
   crossref = {ICUS20},
   title = {The depths of human understanding: science in the search of meaning},
-  author = {Lagmay, Alfredo},
+  author = {Lagmay, Alfredo Villagracia},
 }
 
 @InProceedings{ICUS20:C04:G05:S02,
   crossref = {ICUS20},
   title = {The sacred, consciousness and values},
-  author = {{Gonzalez-Garcia}, Ana Maria},
+  author = {{González Garza}, Ana Maria},
 }
 
 
@@ -710,7 +712,7 @@ icus.data Data Version 0.9.2
   title = {Other Significant Perspectives},
   level = {3},
   editorctype={organizer},
-  editorc = {Lagmay, Alfredo},
+  editorc = {Lagmay, Alfredo Villagracia},
 }
 
 @InProceedings{ICUS20:C04:G06:S01,
@@ -741,7 +743,7 @@ icus.data Data Version 0.9.2
   title = {Re-visioning the Aging Society: A Global Perspective},
   level = {2},
   editorctype={organizer},
-  editorc = {Moody, Harry R.},
+  editorc = {Moody, Harry Rick},
 }
 
 @Set{ICUS20:C05:G01,
@@ -758,13 +760,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C05:G01:S01,
   crossref = {ICUS20},
   title = {Scenarios for an aging society: choosing our future selves},
-  author = {Moody, Harry R.},
+  author = {Moody, Harry Rick},
 }
 
 @InProceedings{ICUS20:C05:G01:S02,
   crossref = {ICUS20},
   title = {Solidarity with the elderly and the allocation of resources},
-  author = {{ter Meulen}, Ruud H. J.},
+  author = {Meulen, Rudolf Hubertus Jozef ter},
 }
 
 
@@ -782,7 +784,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C05:G02:S01,
   crossref = {ICUS20},
   title = {Geriatric ethics: what we know, what we hope},
-  author = {Wilson, Nancy},
+  author = {Wilson, Nancy Lee},
 }
 
 @InProceedings{ICUS20:C05:G02:S02,
@@ -884,7 +886,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C05:G06:S02,
   crossref = {ICUS20},
   title = {Physical environment and the elderly: public policy issues},
-  author = {Lee, Terrence},
+  author = {Lee, Terence},
 }
 
 @InProceedings{ICUS20:C05:G06:X03,
@@ -903,7 +905,7 @@ icus.data Data Version 0.9.2
   title = {In Pursuit of Beauty: Biological Foundations of Aesthetics},
   level = {2},
   editorctype={organizer},
-  editorc = {Turner, Frederick},
+  editorc = {Turner, Frederick Hodson},
 }
 
 @Set{ICUS20:C06:G01,
@@ -920,13 +922,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C06:G01:S01,
   crossref = {ICUS20},
   title = {Committee introduction},
-  author = {Turner, Frederick and Wijeratne, Bryan},
+  author = {Turner, Frederick Hodson and Wijeratne, Bryan},
 }
 
 @InProceedings{ICUS20:C06:G01:S02,
   crossref = {ICUS20},
   title = {Universals in ritual and human nature},
-  author = {Brögger, Jan},
+  author = {Brøgger, Jan},
 }
 
 @InProceedings{ICUS20:C06:G01:S03,
@@ -974,7 +976,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C06:G03:S01,
   crossref = {ICUS20},
   title = {Tragedy and chaos},
-  author = {Argyros, Alexander},
+  author = {Argyros, Alexander J.},
 }
 
 @InProceedings{ICUS20:C06:G03:S02,
@@ -998,7 +1000,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C06:G04:S01,
   crossref = {ICUS20},
   title = {Can 'teaching' the right brain enhance artistic ability?},
-  author = {Harris, Lauren J.},
+  author = {Harris, Lauren Julius},
 }
 
 @InProceedings{ICUS20:C06:G04:S02,
@@ -1022,7 +1024,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C06:G05:S01,
   crossref = {ICUS20},
   title = {An ecopoetics of beauty and meaning},
-  author = {Turner, Frederick},
+  author = {Turner, Frederick Hodson},
 }
 
 @InProceedings{ICUS20:C06:G05:S02,
@@ -1046,7 +1048,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C06:G06:S01,
   crossref = {ICUS20},
   title = {Biological foundations of aesthetics: an Indian perspective},
-  author = {Vatsyayan, Kapila},
+  author = {Vatsyayan, Kapila Malik},
 }
 
 @InProceedings{ICUS20:C06:G06:S02,
@@ -1058,7 +1060,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C06:G06:X03,
   crossref = {ICUS20},
   title = {Discussion},
-  author = {Graham, Gordon and Wohlmuth, Paul},
+  author = {Graham, Gordon and Wohlmuth, Paul C.},
 }
 
 
@@ -1071,7 +1073,7 @@ icus.data Data Version 0.9.2
   title = {Towards the Harmony of Cultures},
   level = {2},
   editorctype={organizer},
-  editorc = {Lee, Sang Hun and Sontag, Frederick},
+  editorc = {Lee, Sang-Hun and Sontag, Frederick Earl},
 }
 
 @Set{ICUS20:C07:G01,
@@ -1088,7 +1090,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C07:G01:S01,
   crossref = {ICUS20},
   title = {The unity of cultures and absolute values: a unificationist approach},
-  author = {Wilson, Andrew},
+  author = {Wilson, Andrew Murray},
 }
 
 @InProceedings{ICUS20:C07:G01:S02,
@@ -1100,7 +1102,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C07:G01:X03,
   crossref = {ICUS20},
   title = {Discussion},
-  author = {Lee, Hyon Bok},
+  author = {Lee, Hyun-Bok},
 }
 
 
@@ -1118,7 +1120,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C07:G02:S01,
   crossref = {ICUS20},
   title = {Charismatic-messianic capacities to transcend the given world of modernity: the new cultural-political problems in a post-cold war world},
-  author = {Fritzsche, Helmut G.},
+  author = {Fritzsche, Helmut Gottfried},
 }
 
 @InProceedings{ICUS20:C07:G02:S02,
@@ -1154,7 +1156,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C07:G03:S02,
   crossref = {ICUS20},
   title = {Philosophical groundwork for the harmony of cultures},
-  author = {Shimmyo, Theodore T.},
+  author = {Shimmyo, Theodore Tadaaki},
 }
 
 @InProceedings{ICUS20:C07:G03:X03,
@@ -1179,7 +1181,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {Unification blessed marriage: an educational paradigm promoting a harmony of cultures (or... what
   about the kids of the next generation?)},
-  author = {Carlson, David},
+  author = {Carlson, David Allen},
 }
 
 @InProceedings{ICUS20:C07:G04:S02,
@@ -1191,7 +1193,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C07:G04:X03,
   crossref = {ICUS20},
   title = {Discussion},
-  author = {Lewis, Sarah},
+  author = {Lewis, Sarah M.},
 }
 
 
@@ -1221,7 +1223,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C07:G05:X03,
   crossref = {ICUS20},
   title = {Discussion},
-  author = {Seidel, Dietrich},
+  author = {Seidel, Dietrich Friedmar},
 }
 
 
@@ -1239,7 +1241,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C07:G06:S01,
   crossref = {ICUS20},
   title = {Group culture and individual culture},
-  author = {Bauer, Henry H.},
+  author = {Bauer, Henry Hermann},
 }
 
 @InProceedings{ICUS20:C07:G06:S02,
@@ -1251,7 +1253,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C07:G06:X03,
   crossref = {ICUS20},
   title = {Discussion},
-  author = {Tanabe, Jennifer},
+  author = {Tanabe, Jennifer P.},
 }
 
 
@@ -1269,7 +1271,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C07:G07:S01,
   crossref = {ICUS20},
   title = {Summary remarks},
-  author = {Lee, Sang Hun},
+  author = {Lee, Sang-Hun},
 }
 
 
