--- a/inst/extdata/icusbib-raw/icus04.bib
+++ b/inst/extdata/icusbib-raw/icus04.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -27,7 +29,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS04:P02,
   crossref = {ICUS04},
   title = {Honorary Chairman's Address},
-  author = {Robert S. Mullikan},
+  author = {Mulliken, Robert Sanderson},
 }
 
 
@@ -40,7 +42,7 @@ icus.data Data Version 0.9.2
   title = {Unity of Science},
   level = {2},
   editorctype={organizer},
-  editorc = {Eugene P. Wigner and O. Roger Anderson},
+  editorc = {Wigner, Eugene Paul and Anderson, Orvil Roger},
 }
 
 @Set{ICUS04:C01:G01,
@@ -57,15 +59,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS04:C01:G01:S01,
   crossref = {ICUS04},
   title = {The limits of science},
-  author = {Peter E. Hodgson},
+  author = {Hodgson Peter Edward},
   commentator = {Chin-Chi Chao},
 }
 
 @InProceedings{ICUS04:C01:G01:S02,
   crossref = {ICUS04},
   title = {Bridging science and values: a unifying view of mind and brain},
-  author = {Roger Sperry},
-  commentator = {Yoshia Shinagawa and Yasuko Shinagawa},
+  author = {Sperry, Roger Wolcott},
+  commentator = {Yoshiya Shinagawa and Yasuko Shinagawa},
 }
 
 @InProceedings{ICUS04:C01:G01:S03,
@@ -93,21 +95,21 @@ icus.data Data Version 0.9.2
   crossref = {ICUS04},
   title = {The centrality of science and absolute values},
   author = {Ravi Prakash},
-  commentator = {Anne Briscoe},
+  commentator = {Anne M. Briscoe},
 }
 
 @InProceedings{ICUS04:C01:G01:S07,
   crossref = {ICUS04},
   title = {World models: mathematical, neural, political, religious, or simular?},
-  author = {G. Arthur Mihram},
+  author = {Mihram, George Arthur},
   commentator = {Alexander Zucker},
 }
 
 @InProceedings{ICUS04:C01:G01:S08,
   crossref = {ICUS04},
   title = {United, equal, and universal?},
-  author = {Gerholm, Tor Ragnor},
-  commentator = {O. Roger Anderson},
+  author = {Gerholm, Tor Ragnar},
+  commentator = {Anderson, Orvil Roger},
 }
 
 @InProceedings{ICUS04:C01:G01:S09,
@@ -120,7 +122,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS04:C01:G01:S10,
   crossref = {ICUS04},
   title = {Comments on 'the problem of the unity of science'},
-  author = {Ilya Prigogine},
+  author = {Prigogine, Ilya Ramanovich},
   commentator = {Herbert Philipps},
 }
 
@@ -141,29 +143,29 @@ of methodology between the social sciences and the natural sciences?},
 @InProceedings{ICUS04:C01:G02:S01,
   crossref = {ICUS04},
   title = {Conditions for the unification},
-  author = {Alair O. Gomes},
+  author = {Gomes, Alair de Oliveira},
   commentator = {Mogens Blegvad},
 }
 
 @InProceedings{ICUS04:C01:G02:S02,
   crossref = {ICUS04},
   title = {Three ways of knowing and the scientific world view},
-  author = {Joseph R. Royce},
+  author = {Royce, Joseph Russell},
   commentator = {Wei-Kung Wang},
 }
 
 @InProceedings{ICUS04:C01:G02:S03,
   crossref = {ICUS04},
   title = {Studying the lunar-rock scientists},
-  author = {Ian I. Mitroff},
-  commentator = {Erwin K. Schopper},
+  author = {Mitroff, Ian Irving},
+  commentator = {Erwin Schopper},
 }
 
 @InProceedings{ICUS04:C01:G02:S04,
   crossref = {ICUS04},
   title = {On the unification of the social sciences},
-  author = {C. West Churchman},
-  commentator = {Thomas A. Cowan},
+  author = {Churchman, Charles West},
+  commentator = {Cowan, Thomas Anthony},
 }
 
 @InProceedings{ICUS04:C01:G02:S05,
@@ -176,15 +178,15 @@ of methodology between the social sciences and the natural sciences?},
 @InProceedings{ICUS04:C01:G02:S06,
   crossref = {ICUS04},
   title = {On the mutual historical dependence of natural and historical sciences},
-  author = {Kurt Huebner},
-  commentator = {Milton Marney},
+  author = {Kurt Hübner},
+  commentator = {Milton C. Marney},
 }
 
 @InProceedings{ICUS04:C01:G02:S07,
   crossref = {ICUS04},
   title = {Interdisciplinarity and the unity of knowledge with examples from linguistics},
-  author = {Wilhelm Fuchs},
-  commentator = {Geoffrey Vickers},
+  author = {Wilhelm Fucks},
+  commentator = {Vickers, Charles Geoffrey},
 }
 
 @InProceedings{ICUS04:C01:G02:S08,
@@ -218,14 +220,14 @@ of methodology between the social sciences and the natural sciences?},
   crossref = {ICUS04},
   title = {Connections between quantum theory, thermodynamics, cosmology,
 and subjective perception},
-  author = {H. Dieter Zeh},
-  commentator = {Willis E. Lamb},
+  author = {Zeh, Heinz Dieter},
+  commentator = {Lamb, Willis Eugene},
 }
 
 @InProceedings{ICUS04:C01:G03:S02,
   crossref = {ICUS04},
   title = {Are universal legal and moral principles possible?},
-  author = {Joseph C. Smith},
+  author = {Smith, Joseph Carman},
   commentator = {Kristin Shrader-Frechette},
 }
 
@@ -240,14 +242,14 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C01:G03:S04,
   crossref = {ICUS04},
   title = {Is there a non-trivial universal physics?},
-  author = {Irving E. Segal},
+  author = {Segal, Irving Ezra},
   commentator = {George Marx},
 }
 
 @InProceedings{ICUS04:C01:G03:S05,
   crossref = {ICUS04},
   title = {Explicit and implicit semantic content of the genetic information},
-  author = {Gunther Stent},
+  author = {Stent, Gunther Siegmund},
   commentator = {Karel Kuypers},
 }
 
@@ -255,7 +257,7 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {Neurological correlations},
   author = {Gomes, Juan Antonio},
-  commentator = {José Sim~o {da Fonseca}},
+  commentator = {{da Fonseca}, José Simões},
 }
 
 
@@ -285,7 +287,7 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C02:G01:S01,
   crossref = {ICUS04},
   title = {The family in the light of a general model of behavior},
-  author = {Edward Goldsmith},
+  author = {Goldsmith, Edward René David},
   commentator = {Yeshayahu Leibowitz},
 }
 
@@ -293,7 +295,7 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {Evolutionary roots of family ethics and group ethics},
   author = {Theodosius Dobzhansky},
-  commentator = {Thomas Boslooper},
+  commentator = {Thomas David Boslooper},
 }
 
 @InProceedings{ICUS04:C02:G01:S03,
@@ -306,7 +308,7 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C02:G01:S04,
   crossref = {ICUS04},
   title = {Sex differentiation and welfare policy},
-  author = {G. A. Kooy},
+  author = {Kooy, Gerrit Andries},
   commentator = {Betty E. Cogswell},
 }
 
@@ -314,21 +316,21 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {Untitled paper},
   author = {Ingrid B. Rogner},
-  commentator = {Teresa Marciano},
+  commentator = {Teresa D. Marciano},
 }
 
 @InProceedings{ICUS04:C02:G01:S06,
   crossref = {ICUS04},
   title = {Integration of knowledge: research, action and values},
   author = {Pierre {de Bie}},
-  commentator = {Jan Trost and Teresa Marciano},
+  commentator = {Trost, Jan E. and Teresa D. Marciano},
 }
 
 @InProceedings{ICUS04:C02:G01:S07,
   crossref = {ICUS04},
   title = {Legal regulation of personal and family lifestyles},
-  author = {James Ramey},
-  commentator = {E. Terry Prothro},
+  author = {Ramey, James W.},
+  commentator = {Prothro, Edwin Terry},
 }
 
 @InProceedings{ICUS04:C02:G01:S08,
@@ -348,21 +350,21 @@ Copernican assumptions restricting scientific exploration},
   title = {Is religion functional as a source of standard of value today?},
   level = {3},
   editorctype={organizer},
-  editorc = {Frederick Sontag},
+  editorc = {Sontag, Frederick Earl},
 }
 
 @InProceedings{ICUS04:C02:G02:S01,
   crossref = {ICUS04},
   title = {Religion, science and moral principles},
-  author = {Frank Goble},
-  commentator = {R. W. Jackson},
+  author = {Goble, Frank G.},
+  commentator = {Jackson, Ray Weldon},
 }
 
 @InProceedings{ICUS04:C02:G02:S02,
   crossref = {ICUS04},
   title = {The parapsychology of religion: a new branch of inquiry},
-  author = {J. B. Rhine},
-  commentator = {Ninian Smart},
+  author = {Rhine, Joseph Banks},
+  commentator = {Smart, Roderick Ninian},
 }
 
 @InProceedings{ICUS04:C02:G02:S03,
@@ -375,21 +377,21 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C02:G02:S04,
   crossref = {ICUS04},
   title = {Contemporary religious crisis and absolute value},
-  author = {Sebastian A. Matzcak},
-  commentator = {Frederick P. Ferr{\a'e}},
+  author = {Matczak, Sebastian Alexander},
+  commentator = {Ferré, Frederick Pond},
 }
 
 @InProceedings{ICUS04:C02:G02:S05,
   crossref = {ICUS04},
   title = {Art, mysticism, and the detribalization of mankind},
   author = {Ben-Ami Scharfstein},
-  commentator = {Edouard Bon{\a'e}},
+  commentator = {Boné, Edouard},
 }
 
 @InProceedings{ICUS04:C02:G02:S06,
   crossref = {ICUS04},
   title = {Is religion functional as a source of a standard of value today?},
-  author = {William G. Pollard},
+  author = {Pollard, William Grosvenor},
   commentator = {Gerhart Niemeyer},
 }
 
@@ -397,14 +399,14 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {The rational and the irrational OR what is living and what is dead in the philosophy
   of Benedetto Croce},
-  author = {Richard T. Webster},
+  author = {Webster, Richard T.},
 }
 
 @InProceedings{ICUS04:C02:G02:S08,
   crossref = {ICUS04},
   title = {Turbulence, values, and ideals},
-  author = {Fred E. Emery},
-  commentator = {David A. Martin},
+  author = {Emery, Frederick Edmund},
+  commentator = {David Alfred Martin},
 }
 
 @InProceedings{ICUS04:C02:G02:S09,
@@ -429,14 +431,14 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C02:G03:S01,
   crossref = {ICUS04},
   title = {Purpose and mechanism in biology},
-  author = {William H. Thorpe},
-  commentator = {J. V. Klavins},
+  author = {Thorpe, William Homan},
+  commentator = {Klavins, Janis Viliberts},
 }
 
 @InProceedings{ICUS04:C02:G03:S02,
   crossref = {ICUS04},
   title = {Remarks on the bio-cultural origin of morals},
-  author = {Arne F. Petersen},
+  author = {Petersen, Arne Friemuth},
   commentator = {Kurt Baier},
 }
 
@@ -444,21 +446,21 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {Knowledge and value systems in Pakistan},
   author = {Mohammad Ajmal},
-  commentator = {Frederick S. Carney},
+  commentator = {Carney, Frederick Smith},
 }
 
 @InProceedings{ICUS04:C02:G03:S04,
   crossref = {ICUS04},
   title = {Society, the individual, and morality},
   author = {Kwame Gyekye},
-  commentator = {Salustiano {del Campo}},
+  commentator = {{Campo Urbano}, Salustiano del},
 }
 
 @InProceedings{ICUS04:C02:G03:S05,
   crossref = {ICUS04},
   title = {The objectivity and subjectivity of values: a false dichotomy},
-  author = {Paul A. Schilpp},
-  commentator = {Ungku A. Aziz},
+  author = {Schilpp, Paul Arthur},
+  commentator = {{Abdul Aziz},	Ungku},
 }
 
 @InProceedings{ICUS04:C02:G03:S06,
@@ -471,7 +473,7 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C02:G03:S07,
   crossref = {ICUS04},
   title = {The hidden human image and the community of otherness},
-  author = {Maurice S. Friedman},
+  author = {Friedman, Maurice Stanley},
   commentator = {Philip L. Zediker},
 }
 
@@ -485,7 +487,7 @@ Copernican assumptions restricting scientific exploration},
   title = {The University, Research Institutions, and Human Society},
   level = {2},
   editorctype={organizer},
-  editorc = {Alvin M. Weinberg},
+  editorc = {Weinberg, Alvin Martin},
 }
 
 @Set{ICUS04:C03:G01,
@@ -502,8 +504,8 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C03:G01:S01,
   crossref = {ICUS04},
   title = {The university and research institutes in developing countries},
-  author = {F{\a'e}lix Cernuschi},
-  commentator = {Richard F. Ericson},
+  author = {Cernuschi, Félix},
+  commentator = {Ericson, Richard Ferdinand},
 }
 
 @InProceedings{ICUS04:C03:G01:S02,
@@ -517,20 +519,20 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {Peaceful uses of the organized intellect: a United Nations Plan},
   author = {Harold Taylor},
-  commentator = {Althea Simmons},
+  commentator = {Simmons, Althea T. L.},
 }
 
 @InProceedings{ICUS04:C03:G01:S04,
   crossref = {ICUS04},
   title = {The interdisciplinary university and limits to growth},
   author = {Max L. Williams},
-  commentator = {Kwesi A. Dickson},
+  commentator = {Dickson, Kwesi Abotsia},
 }
 
 @InProceedings{ICUS04:C03:G01:S05,
   crossref = {ICUS04},
   title = {From elite to mass-oriented education - quo vadis?},
-  author = {Wold, Herman},
+  author = {Wold, Herman Ole Andreaas},
   commentator = {Werner Meissner},
 }
 
@@ -550,7 +552,7 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C03:G02:S01,
   crossref = {ICUS04},
   title = {Motivation for public support of scientific research: analysis of a debate},
-  author = {Gunnar Anderson},
+  author = {Gunnar Andersson},
   commentator = {Rue Bucher},
 }
 
@@ -558,13 +560,13 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {The development of 'two cultures' in education},
   author = {Rachel Dror},
-  commentator = {E. G. Malherbe},
+  commentator = {Malherbe, Ernst Gideon},
 }
 
 @InProceedings{ICUS04:C03:G02:S03,
   crossref = {ICUS04},
   title = {Sketching the development of mankind and our outlook for the future},
-  author = {Dennis Gabor and George Stroke},
+  author = {Dennis Gabor and Stroke, George Wilhelm},
   commentator = {Olavi J. Grano},
 }
 
@@ -572,20 +574,20 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {The tragedy of consciousness in human research therapy or the impossible dream},
   author = {William Krivit},
-  commentator = {Rubern Alves},
+  commentator = {Alves, Rubern Azevedo},
 }
 
 @InProceedings{ICUS04:C03:G02:S05,
   crossref = {ICUS04},
   title = {Medical research in developing countries},
-  author = {A. O. Lucas},
+  author = {Lucas, Adetokunbo O.},
   commentator = {Jacobo Finkelman},
 }
 
 @InProceedings{ICUS04:C03:G02:S06,
   crossref = {ICUS04},
   title = {Impact of funding sources on scientific research},
-  author = {Florencio A. Medina},
+  author = {Medina, Florencio Albanez},
   commentator = {George E. Assousa},
 }
 
@@ -599,7 +601,7 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C03:G02:S08,
   crossref = {ICUS04},
   title = {True (not berserk) humanitarianism: a positive absolute value that unites religion and science},
-  author = {William Shockley},
+  author = {Shockley, William Bradford},
 }
 
 
@@ -618,21 +620,21 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C03:G03:S01,
   crossref = {ICUS04},
   title = {Ethical considerations in the applications of biology},
-  author = {H. Bentley Glass},
+  author = {Glass, Hiram Bentley},
   commentator = {Everett I. Mendelsohn},
 }
 
 @InProceedings{ICUS04:C03:G03:S02,
   crossref = {ICUS04},
   title = {Science between danger and boredom},
-  author = {Ernst {von Weizsaecker}},
+  author = {Weizsäcker, Ernst Ulrich von},
   commentator = {Helmer H. Dahl},
 }
 
 @InProceedings{ICUS04:C03:G03:S03,
   crossref = {ICUS04},
   title = {Science, technology and humanism},
-  author = {Miguel R. Covian},
+  author = {Covian, Miguel Rolando},
   commentator = {Beatrice Avalos},
 }
 
@@ -646,8 +648,8 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C03:G03:S05,
   crossref = {ICUS04},
   title = {The two possible futures for mankind},
-  author = {M. W. Thring},
-  commentator = {Joseph F. Coates},
+  author = {Thring, Meredith Wooldridge},
+  commentator = {Coates, Joseph Francis},
 }
 
 @InProceedings{ICUS04:C03:G03:S06,
@@ -659,15 +661,15 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C03:G03:S07,
   crossref = {ICUS04},
   title = {The scientists role in disarmament},
-  author = {Charles C. Price},
-  commentator = {Erwin K. Scheuch},
+  author = {Price, Charles Coale},
+  commentator = {Scheuch, Erwin Kurt},
 }
 
 @InProceedings{ICUS04:C03:G03:S08,
   crossref = {ICUS04},
   title = {Ethical regulation of technology},
   author = {Emilio Rosenblueth},
-  commentator = {Shirley B. Johnson},
+  commentator = {{Johnson-Lans}, Shirley B.},
 }
 
 @Set{ICUS04:C04,
@@ -678,7 +680,7 @@ Copernican assumptions restricting scientific exploration},
   title = {The Future World Order},
   level = {2},
   editorctype={organizer},
-  editorc = {Morton A. Kaplan},
+  editorc = {Morton Abraham Kaplan},
 }
 
 @Set{ICUS04:C04:G01,
@@ -696,7 +698,7 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {Differences et interactions culturelles},
   author = {Sory Camara},
-  commentator = {Walter F. Buckley},
+  commentator = {Buckley, Walter Frederick},
 }
 
 @InProceedings{ICUS04:C04:G01:S02,
@@ -709,14 +711,14 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C04:G01:S03,
   crossref = {ICUS04},
   title = {Untitled paper},
-  author = {{Ethelou-Yazzie}},
-  commentator = {Adam Nordwall},
+  author = {Yazzie, Ethelou},
+  commentator = {{Fortunate Eagle}, Adam Nordwall},
 }
 
 @InProceedings{ICUS04:C04:G01:S04,
   crossref = {ICUS04},
   title = {African intellectuals in the 1980's: pilgrim's retreat and patriot's progress},
-  author = {Ali Mazrui},
+  author = {Mazrui, Ali Al'Amin},
 }
 
 @InProceedings{ICUS04:C04:G01:S05,
@@ -729,14 +731,14 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C04:G01:S06,
   crossref = {ICUS04},
   title = {The influence of 'the death of caste' on contemporary man},
-  author = {J. O. Wisdom},
-  commentator = {Se-Won Yoon},
+  author = {Wisdom, John Oulton},
+  commentator = {Yoon, Se-won},
 }
 
 @InProceedings{ICUS04:C04:G01:S07,
   crossref = {ICUS04},
   title = {Untitled paper},
-  author = {Francois {Amon d'Aby}},
+  author = {{Amon d'Aby}, François Joseph},
 }
 
 @InProceedings{ICUS04:C04:G01:S08,
@@ -754,14 +756,14 @@ Copernican assumptions restricting scientific exploration},
   title = {How Can We Resolve Global Economic Inequalities?},
   level = {3},
   editorctype={organizer},
-  editorc = {Morton A. Kaplan},
+  editorc = {Morton Abraham Kaplan},
 }
 
 @InProceedings{ICUS04:C04:G02:S01,
   crossref = {ICUS04},
   title = {Towards resolving global inequalities},
   author = {Mohamed Kassas},
-  commentator = {D. H. Whitehead},
+  commentator = {Whitehead, Donald Henry},
 }
 
 @InProceedings{ICUS04:C04:G02:S02,
@@ -774,14 +776,14 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {Suggestions on certain legal aspects of future world order for a just equilibrium between
   the developing and developed countries},
-  author = {Mahmut T. Birsel},
+  author = {Birsel, Mahmut Tevfik},
   commentator = {Joseph Basile},
 }
 
 @InProceedings{ICUS04:C04:G02:S04,
   crossref = {ICUS04},
   title = {The Americanization of the world: Western perspectives on modernization in developing societies},
-  author = {Samir Khalaf},
+  author = {Samir G. Khalaf},
 }
 
 @InProceedings{ICUS04:C04:G02:S05,
@@ -793,13 +795,13 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C04:G02:S06,
   crossref = {ICUS04},
   title = {Affluence, time, and happiness},
-  author = {Gylfi Gislason},
+  author = {Gislason, Gylfi Thorsteinsson},
 }
 
 @InProceedings{ICUS04:C04:G02:S07,
   crossref = {ICUS04},
   title = {Possible future world orders: some unpleasant scenarios},
-  author = {Yehezkel Dror},
+  author = {Dror, Yehezkel},
 }
 
 @InProceedings{ICUS04:C04:G02:S08,
@@ -832,41 +834,41 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {A preliminary systems philosophical description of valuation},
   author = {Anthony J. {Fedanzo Jr}},
-  commentator = {William Bergman},
+  commentator = {William L. Bergman},
 }
 
 @InProceedings{ICUS04:C04:G03:S03,
   crossref = {ICUS04},
   title = {Outmoded aspirations},
   author = {Thomas E. Jones},
-  commentator = {Helio Jaguaribe},
+  commentator = {Hélio Jaguaribe},
 }
 
 @InProceedings{ICUS04:C04:G03:S04,
   crossref = {ICUS04},
   title = {The morality of limiting growth},
   author = {Edward Walter},
-  commentator = {Richard Coe},
+  commentator = {Coe, Richard M.},
 }
 
 @InProceedings{ICUS04:C04:G03:S05,
   crossref = {ICUS04},
   title = {Evolution - the matrix for human continuity},
-  author = {J. Arnold Roze},
+  author = {Roze, Janis Arnold},
   commentator = {Albert Szent-Gyorgi},
 }
 
 @InProceedings{ICUS04:C04:G03:S06,
   crossref = {ICUS04},
   title = {The next step in societal evolution: some historical precedence},
-  author = {Alistair M. Taylor},
-  commentator = {Lawrence N. Solomon},
+  author = {Taylor, Alastair MacDonald},
+  commentator = {Solomon, Lawrence Norval},
 }
 
 @InProceedings{ICUS04:C04:G03:S07,
   crossref = {ICUS04},
   title = {The potentials for individual and small group responses to global problems},
-  author = {John Rheinfrank},
+  author = {{Rheinfrank III}, John J.},
   commentator = {Hiroshi Motoyama},
 }
 
@@ -880,6 +882,6 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C04:G03:S09,
   crossref = {ICUS04},
   title = {Toward a new humanism: the social principle of man and nature},
-  author = {Hwa-Yol Jung},
-  commentator = {Gabor Strasser},
+  author = {Jung, Hwa-Yol},
+  commentator = {Strasser, Gabor},
 }
