--- a/inst/extdata/icusbib-raw/icus06.bib
+++ b/inst/extdata/icusbib-raw/icus06.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -27,7 +29,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:P02,
   crossref = {ICUS06},
   title = {chairperson's Address},
-  author = {John Eccles},
+  author = {Eccles, John Carew},
 }
 
 @InProceedings{ICUS06:P03,
@@ -51,7 +53,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:P06,
   crossref = {ICUS06},
   title = {Committee IV Address},
-  author = {Wigner, Eugene P.},
+  author = {Wigner, Eugene Paul},
 }
 
 @InProceedings{ICUS06:P07,
@@ -92,7 +94,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS06},
   title = {The conflict of ideology and ecology},
   author = {Shepard, Paul},
-  commentator = {Kvaloy, Signmund},
+  commentator = {Setreng, Sigmund Kvaløy},
 }
 
 @InProceedings{ICUS06:C01:G01:S02,
@@ -119,7 +121,7 @@ icus.data Data Version 0.9.2
   title = {Comparative Religious Responses to Modernization},
   level = {3},
   editorctype={organizer},
-  editorc = {Kaufmann, Walter},
+  editorc = {Kaufmann, Walter Arnold},
 }
 
 @InProceedings{ICUS06:C01:G02:S01,
@@ -139,7 +141,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C01:G02:S03,
   crossref = {ICUS06},
   title = {Modernism and modernization in Buddhism},
-  author = {Werblowsky, R. J. Zwi},
+  author = {Werblowsky, Raphael Jehudah Zwi},
   commentator = {Teshima, Jacob Yuroh},
 }
 
@@ -153,32 +155,32 @@ icus.data Data Version 0.9.2
   title = {Religion and Society},
   level = {3},
   editorctype={organizer},
-  editorc = {Rumscheidt, H. Martin},
+  editorc = {Rumscheidt, Hans Martin},
 }
 
 @InProceedings{ICUS06:C01:G03:S01,
   crossref = {ICUS06},
   title = {Metaphors of kinship},
   author = {Bateson, Mary Catherine},
-  commentator = {Doughery, Jude P. and Lewis, Warren},
+  commentator = {Dougherty, Jude Patrick and Lewis, Warren},
 }
 
 @InProceedings{ICUS06:C01:G03:S02,
   crossref = {ICUS06},
   title = {Authority in a pluralistic world},
   author = {Kliever, Lonnie D.},
-  commentator = {Bettis, Joseph D. and Vahanian, Gabriel},
+  commentator = {Bettis, Joseph Dabney and Vahanian, Gabriel},
 }
 
 @InProceedings{ICUS06:C01:G03:S03,
   crossref = {ICUS06},
   title = {Faith and multiversity},
-  author = {Grand, George B.},
+  author = {Grant, George Parkin},
 }
 
 @InProceedings{ICUS06:C01:G03:X06,
   crossref = {ICUS06},
-  author = {LeMarier, Jean-Guy and Richardson, Herbert},
+  author = {LeMarier, Jean-Guy and Richardson, Herbert Warren},
 }
 
 
@@ -191,7 +193,7 @@ icus.data Data Version 0.9.2
   title = {Religion and Science},
   level = {3},
   editorctype={organizer},
-  editorc = {Ferré, Frederick},
+  editorc = {Ferré, Frederick Pond},
 }
 
 @InProceedings{ICUS06:C01:G04:S01,
@@ -211,8 +213,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C01:G04:S03,
   crossref = {ICUS06},
   title = {Persons in recent thought},
-  author = {Lewis, H.D.},
-  commentator = {Rose, Mary Carman and Scheer, Bradley T.},
+  author = {Lewis, Hywel David},
+  commentator = {Rose, Mary Carman and Scheer, Bradley Titus},
 }
 
 
@@ -236,7 +238,7 @@ icus.data Data Version 0.9.2
   title = {Intercultural Communication in a Changing World},
   level = {3},
   editorctype={organizer},
-  editorc = {Rao, Y. V. L.},
+  editorc = {Rao, Y. V. Lakshmana},
 }
 
 @InProceedings{ICUS06:C02:G01:S01,
@@ -291,7 +293,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C02:G02:X04,
   crossref = {ICUS06},
   title = {Comments on {Values, Policy and the Control of Violence}},
-  author = {Herz, Martin F.},
+  author = {Herz, Martin Florian},
 }
 
 
@@ -304,13 +306,13 @@ icus.data Data Version 0.9.2
   title = {Projecting a New Economic World Order},
   level = {3},
   editorctype={organizer},
-  editorc = {Hauser, Philip M.},
+  editorc = {Hauser, Philip Morris},
 }
 
 @InProceedings{ICUS06:C02:G03:S01,
   crossref = {ICUS06},
   title = {On problematic aspects of the new economic world order},
-  author = {Hauser, Philip M.},
+  author = {Hauser, Philip Morris},
 }
 
 @InProceedings{ICUS06:C02:G03:S02,
@@ -322,13 +324,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C02:G03:S03,
   crossref = {ICUS06},
   title = {Projecting the new economic world order},
-  author = {Lerner, Abba P.},
+  author = {Lerner, Abba Ptachya},
 }
 
 @InProceedings{ICUS06:C02:G03:X04,
   crossref = {ICUS06},
   title = {Comments on {Projecting a New Economic World Order}},
-  author = {Singer, S. Fred},
+  author = {Singer, Siegfried Fred},
 }
 
 
@@ -352,7 +354,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C02:G04:S02,
   crossref = {ICUS06},
   title = {Can democracy promote development?},
-  author = {Gulek, Kasim},
+  author = {Gülek, Kasim},
 }
 
 @InProceedings{ICUS06:C02:G04:S03,
@@ -381,13 +383,13 @@ icus.data Data Version 0.9.2
   title = {The Ethics of Research on Recombinant DNA},
   level = {3},
   editorctype={organizer},
-  editorc = {Villee Jr, Claude A.},
+  editorc = {Villee, Claude Alvin},
 }
 
 @InProceedings{ICUS06:C03:G01:X01,
   crossref = {ICUS06},
   title = {Panel discussion on {The Ethics of Research on Recombinant DNA}},
-  author = {Alexander, Benjamin and Butler, Gordon C. and Caspari, Ernest W. and Newburgh, Robert W.},
+  author = {Alexander, Benjamin Harold and Butler, Gordon Cecil and Caspari, Ernst Wolfgang and Newburgh, Robert Warren},
 }
 
 
@@ -414,13 +416,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS06},
   title = {Medical education in cross-cultural setting},
   author = {Danaraj, T. J.},
-  commentator = {Wescott, Roger W.},
+  commentator = {Wescott, Roger Williams},
 }
 
 @InProceedings{ICUS06:C03:G02:S03,
   crossref = {ICUS06},
   title = {Meeting health care needs at the neighborhood level in the inner city},
-  author = {Karefa-Smart, John},
+  author = {Karefa-Smart, John Albert Musselman},
   commentator = {Wren, George R.},
 }
 
@@ -446,14 +448,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C03:G03:S01,
   crossref = {ICUS06},
   title = {Health care as a global problem: the need for international cooperation - an internatinal view},
-  author = {{Tejada-de-Rivero}, David},
-  commentator = {Sukhatme, P. V. and Rakic, Ljubisav},
+  author = {{Tejada-de-Rivero}, David Alejandro},
+  commentator = {Sukhatme, Pandurang Vasudeo and Rakic, Ljubisav M.},
 }
 
 @InProceedings{ICUS06:C03:G03:S02,
   crossref = {ICUS06},
   title = {Health care in developing countries: a national view},
-  author = {Pratt, E. O.},
+  author = {Pratt, Edward O.},
   commentator = {Akos, Karoly and Gomez, Juan Antonio},
 }
 
@@ -461,7 +463,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS06},
   title = {Health-related research and education as global problems},
   author = {Ambrus, Julian L.},
-  commentator = {Keswani, N. H.},
+  commentator = {Keswani, Nandkumar Hemraj},
 }
 
 
@@ -487,14 +489,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C03:G04:S02,
   crossref = {ICUS06},
   title = {Biological foundation of altruism, dedication and egoism},
-  author = {Barash, David P.},
-  commentator = {Danielli, James F.},
+  author = {Barash, David Philip},
+  commentator = {Danielli, James Frederic},
 }
 
 @InProceedings{ICUS06:C03:G04:S03,
   crossref = {ICUS06},
   title = {The evolution of altruism},
-  author = {Eccles, John},
+  author = {Eccles, John Carew},
   commentator = {Barker, Eileen V.},
 }
 
@@ -508,7 +510,7 @@ icus.data Data Version 0.9.2
   title = {The Physical Sciences},
   level = {2},
   editorctype={organizer},
-  editorc = {Wigner, Eugene P.},
+  editorc = {Wigner, Eugene Paul},
 }
 
 @Set{ICUS06:C04:G01,
@@ -526,14 +528,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS06},
   title = {Physics and the search for the absolute},
   author = {Jammer, Max},
-  commentator = {Yoon, Se-Won},
+  commentator = {Yoon, Se-won},
 }
 
 @InProceedings{ICUS06:C04:G01:S02,
   crossref = {ICUS06},
   title = {Limits of science},
-  author = {Wigner, Eugene P.},
-  commentator = {Margenau, Henry and Shapiro, Maurice M.},
+  author = {Wigner, Eugene Paul},
+  commentator = {Margenau, Henry and Shapiro, Maurice Mandel},
 }
 
 
@@ -552,7 +554,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C04:G02:S01,
   crossref = {ICUS06},
   title = {Overall properties of the universe},
-  author = {Melvin, Mael},
+  author = {Melvin, Mael Avrami},
   commentator = {Motz, Lloyd},
 }
 
@@ -573,20 +575,20 @@ icus.data Data Version 0.9.2
   title = {The Brain-Mind Problem in Relation to the Physical Sciences},
   level = {3},
   editorctype={organizer},
-  editorc = {Pribram, Karl H.},
+  editorc = {Pribram, Karl Harry},
 }
 
 @InProceedings{ICUS06:C04:G03:S01,
   crossref = {ICUS06},
   title = {Some thoughts on the matter of the mind/body problem},
-  author = {Robinson, Daniel H.},
-  commentator = {Covian, Miguel R.},
+  author = {Robinson, Daniel Nicholas},
+  commentator = {Covian, Miguel Rolando},
 }
 
 @InProceedings{ICUS06:C04:G03:S02,
   crossref = {ICUS06},
   title = {A basic difficulty in the mind-brain identity-hypothesis},
-  author = {Watkins, J. W. N.},
+  author = {Watkins, John William Nevill},
   commentator = {Maxwell, Grover},
 }
 
@@ -594,7 +596,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS06},
   title = {Subjective and neuronal time factors in conscious sensory experience, studied in man, and their implications for the mind-brain relationship},
   author = {Libet, Benjamin},
-  commentator = {Madsen, K. B.},
+  commentator = {Madsen, Kristen Bent},
 }
 
 
@@ -614,7 +616,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS06},
   title = {Progress and the limits of science},
   author = {Shapere, Dudley},
-  commentator = {Cernuschi, Felix},
+  commentator = {Cernuschi, Félix},
 }
 
 @InProceedings{ICUS06:C04:G04:S02,
@@ -627,8 +629,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C04:G04:S03,
   crossref = {ICUS06},
   title = {Technology and values in a changing world},
-  author = {Gotterer, Malcom H.},
-  commentator = {Nahvi, Mahnood J. and Young, H. H.},
+  author = {Gotterer, Malcolm H.},
+  commentator = {Nahvi, Mahmood J. and Young, Hewitt Hartley},
 }
 
 
@@ -660,7 +662,7 @@ icus.data Data Version 0.9.2
   title = {Death and the Meaning of Life},
   level = {3},
   editorctype={organizer},
-  editorc = {Hick, John},
+  editorc = {Hick, John Harwood},
 }
 
 @InProceedings{ICUS06:C05:G02:S01,
@@ -678,7 +680,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C05:G02:S03,
   crossref = {ICUS06},
   title = {Death and the meaning of life in the Christian tradition},
-  author = {Clarke, W. Norris},
+  author = {Clarke, William Norris},
 }
 
 
@@ -690,13 +692,13 @@ icus.data Data Version 0.9.2
   title = {The Relationship of Government and Business to the Individual in Democratic and Totalitarian Systems},
   level = {3},
   editorctype={organizer},
-  editorc = {Lamberton, Donald McL.},
+  editorc = {Lamberton, Donald McLean},
 }
 
 @InProceedings{ICUS06:C05:G03:S01,
   crossref = {ICUS06},
   title = {The Relationship of Government and Business to the Individual in Democratic and Totalitarian Systems},
-  author = {Scheuch, Erwin K.},
+  author = {Scheuch, Erwin Kurt},
 }
 
 
@@ -709,19 +711,19 @@ icus.data Data Version 0.9.2
   title = {Ways and Means of Multidisciplinary Studies},
   level = {3},
   editorctype={organizer},
-  editorc = {Jones, Reginald V.},
+  editorc = {Jones, Reginald Victor},
 }
 
 @InProceedings{ICUS06:C05:G04:S01,
   crossref = {ICUS06},
   title = {Ways and Means of Multidisciplinary Studies},
-  author = {Wold, Herman},
+  author = {Wold, Herman Ole Andreaas},
 }
 
 @InProceedings{ICUS06:C05:G04:S03,
   crossref = {ICUS06},
   title = {Interdisciplinary creativity},
-  author = {Michaelis, Anthony R.},
+  author = {Michaelis, Anthony Rowland},
 }
 
 @InProceedings{ICUS06:C05:G04:S03,
@@ -733,7 +735,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C05:G04:S04,
   crossref = {ICUS06},
   title = {Towards a theory of man: a multi-disciplinary, multi-systems, multidimensional approach},
-  author = {Royce, J. R.},
+  author = {Royce, Joseph Russell},
 }
 
 
@@ -745,7 +747,7 @@ icus.data Data Version 0.9.2
   title = {Science as an experience of the absolute: religious and moral implications of research},
   level = {3},
   editorctype={organizer},
-  editorc = {Bardis, Panos D.},
+  editorc = {Bardis, Panos Demetrios},
 }
 
 @InProceedings{ICUS06:C05:G05:S01,
@@ -764,7 +766,7 @@ icus.data Data Version 0.9.2
   title = {The Future of Humanity in a World of Finite Resources},
   level = {3},
   editorctype={organizer},
-  editorc = {Taylor, Alastair M.},
+  editorc = {Taylor, Alastair MacDonald},
 }
 
 @InProceedings{ICUS06:C05:G06:S01,
@@ -783,7 +785,7 @@ icus.data Data Version 0.9.2
   title = {Scientific Research and Enquiry: Ivory Tower or the Market Place, Slaughterhouse or Shangri-La?},
   level = {3},
   editorctype={organizer},
-  editorc = {Butros, Albert},
+  editorc = {Butros, Albert Jamil},
 }
 
 @InProceedings{ICUS06:C05:G07:S01,
@@ -814,7 +816,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C05:G08:S02,
   crossref = {ICUS06},
   title = {Women and the family in the Muslim Middle East: past, present and future},
-  author = {Keddie, Nikki R.},
+  author = {Keddie, Nikki Ragozin},
 }
 
 @InProceedings{ICUS06:C05:G08:X03,
@@ -832,13 +834,13 @@ icus.data Data Version 0.9.2
   title = {How Can Atomic Energy Help Man's Future?},
   level = {3},
   editorctype={organizer},
-  editorc = {Atalay, Bulent},
+  editorc = {Atalay, Bülent},
 }
 
 @InProceedings{ICUS06:C05:G09:S01,
   crossref = {ICUS06},
   title = {How Can atomic energy help man's future?},
-  author = {Cohen, Bernard L.},
+  author = {Cohen, Bernard Leonard},
 }
 
 @InProceedings{ICUS06:C05:G09:S02,
@@ -856,13 +858,13 @@ icus.data Data Version 0.9.2
   title = {Alienation and Identification},
   level = {3},
   editorctype={organizer},
-  editorc = {Segre, Dan V.},
+  editorc = {Segre, Dan Vittorio},
 }
 
 @InProceedings{ICUS06:C05:G10:S01,
   crossref = {ICUS06},
   title = {Alienation and identification},
-  author = {Kaplan, Morton A.},
+  author = {Kaplan, Morton Abraham},
 }
 
 
@@ -881,13 +883,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS06:C05:G11:S01,
   crossref = {ICUS06},
   title = {Systematic Interrelations of Different Types of Value},
-  author = {Findlay, John N.},
+  author = {Findlay, John Niemeyer},
 }
 
 @InProceedings{ICUS06:C05:G11:S02,
   crossref = {ICUS06},
   title = {The systematic interrelation of types of values},
-  author = {Mayntz, Renate V.},
+  author = {Mayntz, Renate},
 }
 
 @InProceedings{ICUS06:C05:G11:S03,
@@ -911,14 +913,14 @@ icus.data Data Version 0.9.2
   title = {The Role of Education in Imparting Values},
   level = {3},
   editorctype={organizer},
-  editorc = {Brasted, Robert C.},
+  editorc = {Brasted, Robert Crocker},
 }
 
 @InProceedings{ICUS06:C05:G12:S01,
   crossref = {ICUS06},
   title = {The Role of Education in Imparting Values},
-  author = {MacVicar, Robert},
-  commentator={Mazrui, Ali A.}
+  author = {MacVicar, Robert William},
+  commentator={Mazrui, Ali Al'Amin}
 }
 
 @InProceedings{ICUS06:C05:G12:X02,
