--- a/inst/extdata/icusbib-raw/icus07.bib
+++ b/inst/extdata/icusbib-raw/icus07.bib
@@ -5,7 +5,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS07,
   title = {The re-evaluation of existing values and the search for absolute values},
   titleaddon = {The Seventh International Conference on the Unity of the Sciences},
-  editora = {Wigner, Eugene P. and Eccles, John Carew},
+  editora = {Wigner, Eugene Paul and Eccles, John Carew},
   editoratype = {chairperson},
   shorttitle = {ICUS VII},
   eventdate = {1978-11-24/1978-11-26},
@@ -27,7 +27,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS07:P02,
   crossref = {ICUS07},
   title = {chairpersonman's Address},
-  author = {Wigner, Eugene P.},
+  author = {Wigner, Eugene Paul},
 }
 
 @InProceedings{ICUS07:P03,
@@ -57,13 +57,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS07:P07,
   crossref = {ICUS07},
   title = {Technology and freedom},
-  author = {Weinberg, Alvin M.},
+  author = {Weinberg, Alvin Martin},
 }
 
 @InProceedings{ICUS07:P08,
   crossref = {ICUS07},
   title = {The brain and the human person},
-  author = {Eccles, John},
+  author = {Eccles, John Carew},
 }
 
 @Set{ICUS07:C01,
@@ -99,7 +99,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS07},
   title = {Marx and the quest for salvation},
   author = {Boutin, Maurice},
-  commentator = {Richardson, Herbert},
+  commentator = {Richardson, Herbert Warren},
 }
 
 @InProceedings{ICUS07:C01:G01:S03,
@@ -126,21 +126,21 @@ icus.data Data Version 0.9.2
   crossref = {ICUS07},
   title = {Effects of consciousness on the physical world - a monistic view},
   author = {Bastin, Ted},
-  commentator = {Sudarshan, George},
+  commentator = {Sudarshan, Ennackel Chandy George},
 }
 
 @InProceedings{ICUS07:C01:G02:S02,
   crossref = {ICUS07},
   title = {Aspects of the religious consciousness},
-  author = {Robinson, Edward A.},
+  author = {Robinson, Edward Armitage},
   commentator = {Hay, David},
 }
 
 @InProceedings{ICUS07:C01:G02:S03,
   crossref = {ICUS07},
   title = {The existence of consciousness},
-  author = {Wigner, Eugene P.},
-  commentator = {Werblowsky, R. J. Zwi},
+  author = {Wigner, Eugene Paul},
+  commentator = {Werblowsky, Raphael Jehudah Zwi},
 }
 
 
@@ -153,13 +153,13 @@ icus.data Data Version 0.9.2
   title = {Death and Suicide in Contemporary Thought},
   level = {3},
   editorctype={organizer},
-  editorc = {Kaufmann, Walter},
+  editorc = {Kaufmann, Walter Arnold},
 }
 
 @InProceedings{ICUS07:C01:G03:S01,
   crossref = {ICUS07},
   title = {The anatomy of death},
-  author = {Smart, Ninian},
+  author = {Smart, Roderick Ninian},
   commentator = {Alvarez, Alfred},
 }
 
@@ -187,28 +187,28 @@ icus.data Data Version 0.9.2
   title = {Freedom and Sources of Authority},
   level = {3},
   editorctype={organizer},
-  editorc = {Dougherty, Jude P.},
+  editorc = {Dougherty, Jude Patrick},
 }
 
 @InProceedings{ICUS07:C01:G04:S01,
   crossref = {ICUS07},
   title = {The reciprocity of liberty and authority},
-  author = {Reck, Andrew J.},
+  author = {Reck, Andrew Joseph},
   commentator = {Barber, Richard L.},
 }
 
 @InProceedings{ICUS07:C01:G04:S02,
   crossref = {ICUS07},
   title = {Freedom and authority},
-  author = {McCool, Gerald},
-  commentator = {Mayer, J. P.},
+  author = {McCool, Gerald A.},
+  commentator = {Mayer, Jacob Peter},
 }
 
 @InProceedings{ICUS07:C01:G04:S03,
   crossref = {ICUS07},
   title = {From authority to absolute dominion in our administrated world},
   author = {Rohmann, Klaus},
-  commentator = {Sontag, Frederick E.},
+  commentator = {Sontag, Frederick Earl},
 }
 
 
@@ -281,7 +281,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS07:C02:G02:S03,
   crossref = {ICUS07},
   title = {Nonviolent resolution of conflict situations},
-  author = {Farmer, James},
+  author = {Farmer, James Leonard},
 }
 
 @InProceedings{ICUS07:C02:G02:X04,
@@ -300,7 +300,7 @@ icus.data Data Version 0.9.2
   title = {Values and Development - Focus on the Middle East},
   level = {3},
   editorctype={organizer},
-  editorc = {Lerner, Abba P.},
+  editorc = {Lerner, Abba Ptachya},
 }
 
 @InProceedings{ICUS07:C02:G03:S01,
@@ -324,7 +324,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS07:C02:G03:S04,
   crossref = {ICUS07},
   title = {The global economic order and poor villages: the issue of mediating structures},
-  author = {Skinner, Elliott P.},
+  author = {Skinner, Elliott Percival},
 }
 
 
@@ -349,19 +349,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS07:C02:G04:S02,
   crossref = {ICUS07},
   title = {(Untitled speech)},
-  author = {Mazrui, Ali A.},
+  author = {Mazrui, Ali Al'Amin},
 }
 
 @InProceedings{ICUS07:C02:G04:S03,
   crossref = {ICUS07},
   title = {(Untitled speech)},
-  author = {Gulek, Kasim},
+  author = {Gülek, Kasim},
 }
 
 @InProceedings{ICUS07:C02:G04:X04,
   crossref = {ICUS07},
   title = {Comments on {World Futures - Which Ways are Forward?}},
-  author = {Herz, Martin F.},
+  author = {Herz, Martin Florian},
 }
 
 
@@ -385,14 +385,14 @@ icus.data Data Version 0.9.2
   title = {Ethical Implications of Biology},
   level = {3},
   editorctype={organizer},
-  editorc = {Berger, René},
+  editorc = {Pringle, John William Sutton},
 }
 
 @InProceedings{ICUS07:C03:G01:S01,
   crossref = {ICUS07},
   title = {Genetics and society},
-  author = {Harrison, G. Ainsworth},
-  commentator = {Baker, Paul T.},
+  author = {Harrison, Geoffrey Ainsworth},
+  commentator = {Baker, Paul Thornell},
 }
 
 @InProceedings{ICUS07:C03:G01:S02,
@@ -405,8 +405,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS07:C03:G01:S03,
   crossref = {ICUS07},
   title = {Behavioral dimensions for the operation of intelligence},
-  author = {Chance, M. R. A.},
-  commentator = {{de Reuck}, Anthony V. S.},
+  author = {Chance, Michael Robin Alexander},
+  commentator = {{de Reuck}, Anthony Vivian Smith},
 }
 
 
@@ -426,7 +426,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS07},
   title = {Global health problems},
   author = {Ambrus, Julian L.},
-  commentator = {{Tejada-de-Rivero}, David},
+  commentator = {{Tejada-de-Rivero}, David Alejandro},
 }
 
 @InProceedings{ICUS07:C03:G02:S02,
@@ -460,20 +460,20 @@ icus.data Data Version 0.9.2
   title = {Evolution of Consciousness},
   level = {3},
   editorctype={organizer},
-  editorc = {Pribram, Karl H.},
+  editorc = {Pribram, Karl Harry},
 }
 
 @InProceedings{ICUS07:C03:G03:S01,
   crossref = {ICUS07},
   title = {Evolution of human consciousness},
-  author = {Jerison, Harry J.},
-  commentator = {Bitterman, M. E.},
+  author = {Jerison, Harry Jacob},
+  commentator = {Bitterman, Morton Edward},
 }
 
 @InProceedings{ICUS07:C03:G03:S02,
   crossref = {ICUS07},
   title = {Experimental transference of consciousness},
-  author = {White, Rober J.},
+  author = {White, Robert Joseph},
   commentator = {Adams, Raymond D.},
   annotation={Cited by francoeur1983teaching and francoeur1984structured as futuristic.\par
   Cases should cover the range of ethical issues encountered
@@ -486,7 +486,7 @@ creative thinking.}}
   crossref = {ICUS07},
   title = {The evolution of sexual consciousness},
   author = {McGuinness, Diane},
-  commentator = {Wescott, Roger ".},
+  commentator = {Wescott, Roger Williams},
 }
 
 
@@ -499,27 +499,27 @@ creative thinking.}}
   title = {Human Evolution},
   level = {3},
   editorctype={organizer},
-  editorc = {{Villee Jr}, Claude A.},
+  editorc = {Villee, Claude Alvin},
 }
 
 @InProceedings{ICUS07:C03:G04:S01,
   crossref = {ICUS07},
   title = {Saltatory events in human evolution},
-  author = {Caspari, Ernst W.},
-  commentator = {Wescott, Roger W.},
+  author = {Caspari, Ernst Wolfgang},
+  commentator = {Wescott, Roger Williams},
 }
 
 @InProceedings{ICUS07:C03:G04:S02,
   crossref = {ICUS07},
   title = {Socio-cultural evolution},
-  author = {Lewis, W. Bennett},
-  commentator = {Doby, John T.},
+  author = {Lewis, Wilfrid Bennett},
+  commentator = {Doby, John Thomas},
 }
 
 @InProceedings{ICUS07:C03:G04:S03,
   crossref = {ICUS07},
   title = {A biotheology of human origins},
-  author = {Scheer, Bradley T.},
+  author = {Scheer, Bradley Titus},
   commentator = {Hamburgh, Max},
 }
 
@@ -557,15 +557,15 @@ creative thinking.}}
 @InProceedings{ICUS07:C04:G01:S02,
   crossref = {ICUS07},
   title = {A physicist's view of living systems},
-  author = {Elsasser, Walter M.},
-  commentator = {Wigner, Eugene P.},
+  author = {Elsasser, Walter Maurice},
+  commentator = {Wigner, Eugene Paul},
 }
 
 @InProceedings{ICUS07:C04:G01:S03,
   crossref = {ICUS07},
   title = {Evolution as a transdisciplinary paradigm},
-  author = {Wescott, Roger W.},
-  commentator = {Bardis, Panos D.},
+  author = {Wescott, Roger Williams},
+  commentator = {Bardis, Panos Demetrios},
 }
 
 
@@ -578,20 +578,20 @@ creative thinking.}}
   title = {Contact with Extraterrestrial Civilizations},
   level = {3},
   editorctype={organizer},
-  editorc = {Atalay, Bulent},
+  editorc = {Atalay, Bülent},
 }
 
 @InProceedings{ICUS07:C04:G02:S01,
   crossref = {ICUS07},
   title = {Need and consequence of contact with extraterrestrial civilizations},
   author = {Marx, George},
-  commentator = {Harrison, Edward R.},
+  commentator = {Harrison, Edward Robert},
 }
 
 @InProceedings{ICUS07:C04:G02:S02,
   crossref = {ICUS07},
   title = {Extraterrestrial intelligence: starmaker or yogic?},
-  author = {Melvin, Mael A.},
+  author = {Melvin, Mael Avrami},
   commentator = {Motz, Lloyd},
 }
 
@@ -620,13 +620,13 @@ creative thinking.}}
   crossref = {ICUS07},
   title = {Cognitive progress: the justificationist, the relativist and the preferentialist views in contemporary philosophy of science},
   author = {Radnitzky, Gerard},
-  commentator = {Dou, Alberto M.},
+  commentator = {Dou, Alberto},
 }
 
 @InProceedings{ICUS07:C04:G03:S03,
   crossref = {ICUS07},
   title = {Moritz Schlick and the repudiation of scientific realism},
-  author = {Watkins, J. W. N.},
+  author = {Watkins, John William Nevill},
   commentator = {Cappelletti, Vincenzo},
 }
 
@@ -646,7 +646,7 @@ creative thinking.}}
 @InProceedings{ICUS07:C04:G04:S01,
   crossref = {ICUS07},
   title = {Science and government},
-  author = {Singer, S. Fred},
+  author = {Singer, Siegfried Fred},
   commentator = {Ne'eman, Yuval},
 }
 
@@ -660,7 +660,7 @@ creative thinking.}}
 @InProceedings{ICUS07:C04:G04:S03,
   crossref = {ICUS07},
   title = {Technology and culture},
-  author = {Mesthene, Emmanuel G.},
+  author = {Mesthene, Emmanuel George},
   commentator = {Urbanski, T.},
 }
 
@@ -674,13 +674,13 @@ creative thinking.}}
   title = {The Complementary Nature of Religion and Science},
   level = {3},
   editorctype={organizer},
-  editorc = {{Hills Jr}, Samuel S.},
+  editorc = {{Hill Jr}, Samuel Smythe},
 }
 
 @InProceedings{ICUS07:C05:G01:S01,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Ferré, Frederick},
+  author = {Ferré, Frederick Pond},
 }
 
 @InProceedings{ICUS07:C05:G01:S02,
@@ -692,7 +692,7 @@ creative thinking.}}
 @InProceedings{ICUS07:C05:G01:S03,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Covian, Miguel R.},
+  author = {Covian, Miguel Rolando},
 }
 
 
@@ -710,7 +710,7 @@ creative thinking.}}
 @InProceedings{ICUS07:C05:G02:S01,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Madsen, K. B.},
+  author = {Madsen, Kristen Bent},
 }
 
 @InProceedings{ICUS07:C05:G02:S02,
@@ -722,7 +722,7 @@ creative thinking.}}
 @InProceedings{ICUS07:C05:G02:S03,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Seifert, Josef},
+  author = {Seifert, Josef M.},
 }
 
 
@@ -734,13 +734,13 @@ creative thinking.}}
   title = {Human Nature and its Mysteries: What We Know and What We Need to Know},
   level = {3},
   editorctype={organizer},
-  editorc = {Capobigri, A. Robert},
+  editorc = {Caponigri, Aloysius Robert},
 }
 
 @InProceedings{ICUS07:C05:G03:S01,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Kaplan, Morton A.},
+  author = {Kaplan, Morton Abraham},
 }
 
 @InProceedings{ICUS07:C05:G03:S02,
@@ -770,7 +770,7 @@ creative thinking.}}
 @InProceedings{ICUS07:C05:G04:S01,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Wold, Herman},
+  author = {Wold, Herman Ole Andreaas},
 }
 
 @InProceedings{ICUS07:C05:G04:S02,
@@ -795,19 +795,19 @@ creative thinking.}}
 @InProceedings{ICUS07:C05:G05:S01,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Lamberton, Donald M.},
+  author = {Lamberton, Donald McLean},
 }
 
 @InProceedings{ICUS07:C05:G05:S02,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Stoessinger, John G.},
+  author = {Stoessinger, John George},
 }
 
 @InProceedings{ICUS07:C05:G05:S03,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Mickelson, Sig},
+  author = {Mickelson, Sigfried},
 }
 
 
@@ -831,7 +831,7 @@ creative thinking.}}
 @InProceedings{ICUS07:C05:G06:S02,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Brasted, Robert C.},
+  author = {Brasted, Robert Crocker},
 }
 
 @InProceedings{ICUS07:C05:G06:S03,
@@ -855,7 +855,7 @@ creative thinking.}}
 @InProceedings{ICUS07:C05:G07:S01,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Butler, Gordon C.},
+  author = {Butler, Gordon Cecil},
 }
 
 @InProceedings{ICUS07:C05:G07:S02,
@@ -879,7 +879,7 @@ creative thinking.}}
   title = {Value Assumptions in Education},
   level = {3},
   editorctype={organizer},
-  editorc = {Lincoln, C. Eric},
+  editorc = {Lincoln, Charles Eric},
 }
 
 @InProceedings{ICUS07:C05:G08:S01,
@@ -891,7 +891,7 @@ creative thinking.}}
 @InProceedings{ICUS07:C05:G08:S02,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Sontag, Frederick E.},
+  author = {Sontag, Frederick Earl},
 }
 
 @InProceedings{ICUS07:C05:G08:S03,
@@ -927,7 +927,7 @@ creative thinking.}}
 @InProceedings{ICUS07:C05:G09:S02,
   crossref = {ICUS07},
   title = {(untitled)},
-  author = {Malik, F. B.},
+  author = {Malik, Fazley Bary},
 }
 
 @InProceedings{ICUS07:C05:G09:S03,
