--- a/inst/extdata/icusbib-raw/icus08.bib
+++ b/inst/extdata/icusbib-raw/icus08.bib
@@ -5,7 +5,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS08,
   title = {The responsibility of the academic community in the search for absolute values},
   titleaddon = {The Eighth International Conference on the Unity of the Sciences},
-  editora = {Wigner, Eugene P. and Eccles, John Carew},
+  editora = {Wigner, Eugene Paul and Eccles, John Carew},
   editoratype = {chairperson},
   shorttitle = {ICUS VIII},
   eventdate = {1979-11-22/1979-11-25},
@@ -27,19 +27,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:P02,
   crossref = {ICUS08},
   title = {Chairman's Address},
-  author = {Wigner, Eugene P. and Eccles, John},
+  author = {Wigner, Eugene Paul and Eccles, John Carew},
 }
 
 @InProceedings{ICUS08:P03,
   crossref = {ICUS08},
   title = {Committee I Address},
-  author = {Kaufmann, Walter},
+  author = {Kaufmann, Walter Arnold},
 }
 
 @InProceedings{ICUS08:P04,
   crossref = {ICUS08},
   title = {Committee II Address},
-  author = {Kaplan, Morton A.},
+  author = {Kaplan, Morton Abraham},
 }
 
 @InProceedings{ICUS08:P05,
@@ -63,7 +63,7 @@ icus.data Data Version 0.9.2
   title = {Values and Consciousness},
   level = {2},
   editorctype={organizer},
-  editorc = {Kaufmann, Walter},
+  editorc = {Kaufmann, Walter Arnold},
 }
 
 @Set{ICUS08:C01:G01,
@@ -74,14 +74,14 @@ icus.data Data Version 0.9.2
   title = {Humanities vs. Social Sciences},
   level = {3},
   editorctype={organizer},
-  editorc = {Kurtz, Paul},
+  editorc = {Kurtz, Paul Winter},
 }
 
 @InProceedings{ICUS08:C01:G01:S01,
   crossref = {ICUS08},
-  title = {Humanism \textit{versus} social science?},
-  author = {Watkins, J. W. N.},
-  commentator = {Bardis, Panos D.},
+  title = {Humanism versus social science?},
+  author = {Watkins, John William Nevill},
+  commentator = {Bardis, Panos Demetrios},
 }
 
 @InProceedings{ICUS08:C01:G01:S02,
@@ -102,28 +102,28 @@ icus.data Data Version 0.9.2
   title = {Can Values Be Absolute?},
   level = {3},
   editorctype={organizer},
-  editorc = {Bartley, W. W. III},
+  editorc = {{Bartley III}, William Warren},
 }
 
 @InProceedings{ICUS08:C01:G02:S01,
   crossref = {ICUS08},
   title = {In what sense can values be absolute?},
-  author = {Hintikka, Jaakko},
-  commentator = {Briskman, Laurence},
+  author = {Hintikka, Kaarlo Jaakko Juhani},
+  commentator = {Briskman, Laurence Barry},
 }
 
 @InProceedings{ICUS08:C01:G02:S02,
   crossref = {ICUS08},
   title = {Being human implies absolute values},
   author = {Settle, Tom},
-  commentator = {Jarvie, I. C.},
+  commentator = {Jarvie, Ian Charles},
 }
 
 @InProceedings{ICUS08:C01:G02:S03,
   crossref = {ICUS08},
   title = {On the making and breaking of traditions in art},
   author = {Scharfstein, Ben-Ami},
-  commentator = {Provence, Merrill and Levinson, Paul},
+  commentator = {Hintikka, {Merrill Bristow (Provence)} and Levinson, Paul},
 }
 
 
@@ -136,34 +136,34 @@ icus.data Data Version 0.9.2
   title = {Brain, Freedom and Responsibility},
   level = {3},
   editorctype={organizer},
-  editorc = {Pribram, Karl H.},
+  editorc = {Pribram, Karl Harry},
 }
 
 @InProceedings{ICUS08:C01:G03:S01,
   crossref = {ICUS08},
   title = {Transmaterial values within the brain},
-  author = {Delgado, José M. R.},
-  commentator = {Palay, Sanford L.},
+  author = {Delgado, José Manuel Rodríguez},
+  commentator = {Palay, Sanford Louis},
 }
 
 @InProceedings{ICUS08:C01:G03:S02,
   crossref = {ICUS08},
   title = {Brain, freedom and moral responsibility},
-  author = {Eccles, John},
+  author = {Eccles, John Carew},
   commentator = {Libet, Benjamin},
 }
 
 @InProceedings{ICUS08:C01:G03:S03,
   crossref = {ICUS08},
   title = {Brain, freedom and responsibility},
-  author = {Pribram, Karl H.},
+  author = {Pribram, Karl Harry},
   commentator = {Seitelberger, Franz},
 }
 
 @InProceedings{ICUS08:C01:G03:X04,
   crossref = {ICUS08},
   title = {Comments on {Brain, freedom and responsibility}},
-  author = {Werblowsky, R. J. Zwi},
+  author = {Werblowsky, Raphael Jehudah Zwi},
 }
 
 
@@ -183,21 +183,21 @@ icus.data Data Version 0.9.2
   crossref = {ICUS08},
   title = {Psychological hedonism},
   author = {Castaneda, Hector-Neri},
-  commentator = {Butler, Clark W.},
+  commentator = {Butler, Clark Wade},
 }
 
 @InProceedings{ICUS08:C01:G04:S02,
   crossref = {ICUS08},
   title = {Happiness and power},
-  author = {Pribram, Karl H.},
+  author = {Pribram, Karl Harry},
   commentator = {Rubenstein, Richard L.},
 }
 
 @InProceedings{ICUS08:C01:G04:S03,
   crossref = {ICUS08},
   title = {What is happiness?},
-  author = {Smart, Ninian},
-  commentator = {Richardson, Herbert},
+  author = {Smart, Roderick Ninian},
+  commentator = {Richardson, Herbert Warren},
 }
 
 
@@ -210,7 +210,7 @@ icus.data Data Version 0.9.2
   title = {Change and Development},
   level = {2},
   editorctype={organizer},
-  editorc = {Kaplan, Morton A.},
+  editorc = {Kaplan, Morton Abraham},
 }
 
 @Set{ICUS08:C02:G01,
@@ -227,7 +227,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C02:G01:S01,
   crossref = {ICUS08},
   title = {General introduction},
-  author = {Kaplan, Morton A.},
+  author = {Kaplan, Morton Abraham},
 }
 
 @InProceedings{ICUS08:C02:G01:S02,
@@ -254,27 +254,27 @@ icus.data Data Version 0.9.2
   title = {Language, Tradition and Cross-Cultural Values},
   level = {3},
   editorctype={organizer},
-  editorc = {Wescott, Roger W.},
+  editorc = {Wescott, Roger Williams},
 }
 
 @InProceedings{ICUS08:C02:G02:S01,
   crossref = {ICUS08},
   title = {English as the world language: problems and perspectives},
   author = {Novak, Richey},
-  commentator = {Makkai, Adam and Lee, Hyun Bok},
+  commentator = {Makkai, Adam and Lee, Hyun-Bok},
 }
 
 @InProceedings{ICUS08:C02:G02:S02,
   crossref = {ICUS08},
   title = {Anthropologists and the rise of a global civilization},
-  author = {Skinner, Elliott P.},
+  author = {Skinner, Elliott Percival},
   commentator = {Prothro, Edwin Terry},
 }
 
 @InProceedings{ICUS08:C02:G02:S03,
   crossref = {ICUS08},
   title = {Appropriating tradition},
-  author = {Dougherty, Jude P.},
+  author = {Dougherty, Jude Patrick},
   commentator = {Rannit, Aleksis and Patai, Raphael},
 }
 
@@ -294,22 +294,22 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C02:G03:S01,
   crossref = {ICUS08},
   title = {Historical aspects of the development of civilization and the changing self-conception of man},
-  author = {Taylor, Alistair M.},
+  author = {Taylor, Alastair MacDonald},
   commentator = {{King-Farlow}, John and Tejera, Victorino},
 }
 
 @InProceedings{ICUS08:C02:G03:S02,
   crossref = {ICUS08},
   title = {Is the scientific enterprise self-refuting?},
-  author = {Flew, Anthony},
-  commentator = {Minogue, Kenneth R. and Kielmansegg, Peter Graf},
+  author = {Flew, Antony Garrard Newton},
+  commentator = {Minogue, Kenneth Robert and Kielmansegg, Peter Graf},
 }
 
 @InProceedings{ICUS08:C02:G03:S03,
   crossref = {ICUS08},
   title = {Ethics and evolution},
   author = {Jantsch, Erich},
-  commentator = {Castaneda, Hector-Neri and Peperzak, Adriaan},
+  commentator = {Castaneda, Hector-Neri and Peperzak, Adriaan Theodoor},
 }
 
 
@@ -336,13 +336,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS08},
   title = {Resources and economic development},
   author = {Scalera, Garrett N.},
-  commentator = {Breytenbach, Willie},
+  commentator = {Breytenbach, Willie J.},
 }
 
 @InProceedings{ICUS08:C02:G04:S03,
   crossref = {ICUS08},
   title = {Economic resources and political development - a North-South equation},
-  author = {Mazrui, Ali A.},
+  author = {Mazrui, Ali Al'Amin},
   commentator = {Donoso, Alvaro},
 }
 
@@ -373,7 +373,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C03:G01:S01,
   crossref = {ICUS08},
   title = {How does material well-being affect 'happiness'?},
-  author = {Krebs, Hans A.},
+  author = {Krebs, Hans Adolf},
   commentator = {Michael, Donald N.},
 }
 
@@ -388,7 +388,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS08},
   title={Material abundance and happiness: a third world perspective},
   author={Castuera, Ignacio},
-  commentator = {Sontag, Frederick E.},
+  commentator = {Sontag, Frederick Earl},
 }
 
 
@@ -407,7 +407,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C03:G02:S01,
   crossref = {ICUS08},
   title = {World population trends},
-  author = {Baum, Sam},
+  author = {Baum, Samuel},
   commentator = {Herr, David},
 }
 
@@ -442,14 +442,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS08},
   title = {Sociobehavioral aspects of health studies},
   author={Akerele, C. O.},
-  commentator = {Chuke, P. O.},
+  commentator = {Chuke, Paul Okwudili},
 }
 
 @InProceedings{ICUS08:C03:G03:S03,
   crossref = {ICUS08},
   title = {Sociobehavioral aspects of health studies},
-  author={Samarawickrama, Gervin},
-  commentator = {Naranjo, Plutarco},
+  author={Samarawickrama, Gervin Panduka},
+  commentator = {{Naranjo Vargas}, Plutarco},
 }
 
 
@@ -462,34 +462,34 @@ icus.data Data Version 0.9.2
   title = {Consequences of World Population Growth},
   level = {3},
   editorctype={organizer},
-  editorc = {Singer, S. Fred},
+  editorc = {Singer, Siegfried Fred},
 }
 
 @InProceedings{ICUS08:C03:G04:S01,
   crossref = {ICUS08},
   title = {The effects of population growth on renewable and other resources},
-  author = {Claude A. Villee Jr},
-  commentator = {Melamed, A. and Galantay, Ervin Y.},
+  author = {Villee, Claude Alvin},
+  commentator = {Melamed, Avraham and Galantay, Ervin Y.},
 }
 
 @InProceedings{ICUS08:C03:G04:S02,
   crossref = {ICUS08},
   title = {Labor, migration, international trade},
-  author = {Demeny, Paul},
+  author = {Demeny, Paul George},
   commentator = {Elahwal, Abdel Karim Aly and Kuroda, Toshio},
 }
 
 @InProceedings{ICUS08:C03:G04:S03,
   crossref = {ICUS08},
   title = {Mechanisms for mediation},
-  author={Stoessinger, John G.},
-  commentator = {Hazleton, Jared},
+  author={Stoessinger, John George},
+  commentator = {Hazleton, Jared E.},
 }
 
 @InProceedings{ICUS08:C03:G04:X04,
   crossref = {ICUS08},
   title = {Comments on {Consequences of World Population Growth}},
-  author = {Weinberg, Alvin M.},
+  author = {Weinberg, Alvin Martin},
 }
 
 
@@ -513,21 +513,21 @@ icus.data Data Version 0.9.2
   title = {Technology and Human Values},
   level = {3},
   editorctype={organizer},
-  editorc = {Ferré, Frederick},
+  editorc = {Ferré, Frederick Pond},
 }
 
 @InProceedings{ICUS08:C04:G01:S01,
   crossref = {ICUS08},
   title = {Hope through post-modern technology},
-  author = {Lewis, W. David},
-  commentator = {Sass, Hans-Martin and Harman, Willis},
+  author = {Lewis, Walter David},
+  commentator = {Sass, Hans-Martin and Harman, Willis W.},
 }
 
 @InProceedings{ICUS08:C04:G01:S02,
   crossref = {ICUS08},
   title = {A theological critique of 'Hope through technology'},
   author = {Vahanian, Gabriel},
-  commentator = {Parsons, Arthur S.},
+  commentator = {Parsons, Arthur Shattuck},
 }
 
 
@@ -574,7 +574,7 @@ icus.data Data Version 0.9.2
   title = {Frontiers of Science and Technology},
   level = {3},
   editorctype={organizer},
-  editorc = {Weinberg, Alvin M.},
+  editorc = {Weinberg, Alvin Martin},
 }
 
 @InProceedings{ICUS08:C04:G03:S01,
@@ -588,7 +588,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS08},
   title = {Frontiers of technology},
   author = {Nilsson, Sam},
-  commentator = {Nicholas {De Claris}},
+  commentator = {DeClaris, Nicholas},
 }
 
 @InProceedings{ICUS08:C04:G03:S03,
@@ -614,7 +614,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C04:G04:S01,
   crossref = {ICUS08},
   title = {Socialism and capitalism - ideology or mechanism? A question of survival?},
-  author = {Lerner, Abba P.},
+  author = {Lerner, Abba Ptachya},
 }
 
 @InProceedings{ICUS08:C04:G04:S02,
@@ -638,7 +638,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C04:G04:X05,
   crossref = {ICUS08},
   title = {Comments on {A Look at the 1990's - What Does the Future Hold?}},
-  author = {{Menke-Gluckert}, P.},
+  author = {{Menke-Gluckert}, Peter},
 }
 
 
@@ -657,7 +657,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C05:G01:S01,
   crossref = {ICUS08},
   title = {Is there life after death?},
-  author = {Kurtz, Paul and Melvin, Mael A. and Ryzl, Milan},
+  author = {Kurtz, Paul Winter and Melvin, Mael Avrami and Ryzl, Milan},
 }
 
 
@@ -675,7 +675,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C05:G02:S01,
   crossref = {ICUS08},
   title = {Preservation of Culture: What are the limits?},
-  author = {Montilus, Guerin C. and Bardis, Panos D. and Jamali, Mohammed Fadhei},
+  author = {Montilus, Guérin Chapsal and Bardis, Panos Demetrios and Jamali, Mohammed Fadhel},
 }
 
 
@@ -687,13 +687,13 @@ icus.data Data Version 0.9.2
   title = {What are the Values Implicit in Economic Development?},
   level = {3},
   editorctype={organizer},
-  editorc = {Lamberton, Donald M.},
+  editorc = {Lamberton, Donald McLean},
 }
 
 @InProceedings{ICUS08:C05:G03:S01,
   crossref = {ICUS08},
   title = {What are the Values Implicit in Economic Development?},
-  author = {Gulek, Kasim and Sanfuentes, Andres and Kim, William S.},
+  author = {Gülek, Kasim and Sanfuentes, Andres and Kim, William S.},
 }
 
 
@@ -711,7 +711,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C05:G04:S01,
   crossref = {ICUS08},
   title = {Normalization of Violence through Mass Communication},
-  author = {Mickelson, Sig and Hart, Henry O. and Karl-Georg {Graf von Stackelberg}},
+  author = {Mickelson, Sigfried and Hart, Henry O. and Stackelberg, Karl-Georg von},
 }
 
 @InProceedings{ICUS08:C05:G04:X02,
@@ -735,7 +735,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C05:G05:S01,
   crossref = {ICUS08},
   title = {Do New Patterns of Wealth Creation Demand New Structures of Society?},
-  author = {Williamson, D. T. N. and Malik, F. B. and Jantsch, Erich},
+  author = {Williamson, D. T. N. and Malik, Fazley Bary and Jantsch, Erich},
 }
 
 
@@ -753,7 +753,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C05:G06:S01,
   crossref = {ICUS08},
   title = {Human Knowledge and Scientific Models},
-  author = {Wold, Herman and Marc, Alexandre},
+  author = {Wold, Herman Ole Andreaas and Marc, Alexandre},
 }
 
 
@@ -765,13 +765,13 @@ icus.data Data Version 0.9.2
   title = {Sociobiology and Value Systems},
   level = {3},
   editorctype={organizer},
-  editorc = {Pringle, J. W. S.},
+  editorc = {Pringle, John William Sutton},
 }
 
 @InProceedings{ICUS08:C05:G07:S01,
   crossref = {ICUS08},
   title = {Sociobiology and Value Systems},
-  author = {Shepard, Paul and Chance, M. R. A. and Caspari, Ernest W.},
+  author = {Shepard, Paul and Chance, Michael Robin Alexander and Caspari, Ernst Wolfgang},
 }
 
 
@@ -789,7 +789,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C05:G08:S01,
   crossref = {ICUS08},
   title = {The Becoming of a Human Person: Mother-Child Relations in the First Year of Life},
-  author = {Trevarthen, Colwyn and McGuiness, Diane},
+  author = {Trevarthen, Colwyn Boyd and McGuinness, Diane},
 }
 
 
@@ -807,7 +807,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C05:G09:S01,
   crossref = {ICUS08},
   title = {Man's Place in the World Eco-System},
-  author = {Mellanby, Kenneth and {de Reuck}, Anthony V. S.},
+  author = {Mellanby, Kenneth and {de Reuck}, Anthony Vivian Smith},
 }
 
 
@@ -819,13 +819,13 @@ icus.data Data Version 0.9.2
   title = {Prospects for Reducing World Hunger},
   level = {3},
   editorctype={organizer},
-  editorc = {Dewan, M. L.},
+  editorc = {Dewan, Madan Lal},
 }
 
 @InProceedings{ICUS08:C05:G10:S01,
   crossref = {ICUS08},
   title = {Assessment of immediate and foreseeable problem areas},
-  author = {Sukhatme, P. V.},
+  author = {Sukhatme, Pandurang Vasudeo},
 }
 
 @InProceedings{ICUS08:C05:G10:S02,
@@ -837,7 +837,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS08:C05:G10:S03,
   crossref = {ICUS08},
   title = {Economic dimensions of world hunger},
-  author = {Denman, D. R.},
+  author = {Denman, Donald Robert},
 }
 
 
