--- a/inst/extdata/icusbib-raw/icus09.bib
+++ b/inst/extdata/icusbib-raw/icus09.bib
@@ -5,7 +5,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS09,
   title = {Absolute Values and the Search for the Peace of Mankind},
   titleaddon = {The Eighth International Conference on the Unity of the Sciences},
-  editora = {Kaplan, Morton A. and Wigner, Eugene P.},
+  editora = {Kaplan, Morton Abraham and Wigner, Eugene Paul},
   editoratype = {chairperson},
   shorttitle = {ICUS IX},
   eventdate = {1980-11-27/1980-11-30},
@@ -27,7 +27,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS09:P02,
   crossref = {ICUS09},
   title = {Chairman's Address},
-  author = {Kaplan, Morton A.},
+  author = {Kaplan, Morton Abraham},
 }
 
 
@@ -40,7 +40,7 @@ icus.data Data Version 0.9.2
   title = {Values and Consciousness},
   level = {2},
   editorctype={organizer},
-  editorc = {Dougherty, Jude P.},
+  editorc = {Dougherty, Jude Patrick},
 }
 
 @Set{ICUS09:C01:G01,
@@ -51,13 +51,13 @@ icus.data Data Version 0.9.2
   title = {Religion and Values},
   level = {3},
   editorctype={organizer},
-  editorc = {Reck, Andrew J.},
+  editorc = {Reck, Andrew Joseph},
 }
 
 @InProceedings{ICUS09:C01:G01:S01,
   crossref = {ICUS09},
   title = {Religion and values},
-  author = {Kegley, Charles W.},
+  author = {Kegley, Charles William},
   commentator = {Donchin, Anne},
 }
 
@@ -78,7 +78,7 @@ icus.data Data Version 0.9.2
   title = {The Family and Values},
   level = {3},
   editorctype={organizer},
-  editorc = {Fichter, Joseph H.},
+  editorc = {Fichter, Joseph Henry},
 }
 
 @InProceedings{ICUS09:C01:G02:S01,
@@ -91,7 +91,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS09:C01:G02:S02,
   crossref = {ICUS09},
   title = {Secularized schools and family values},
-  author = {Stark, Rodney and Fichter, Joseph H.},
+  author = {Stark, Rodney and Fichter, Joseph Henry},
   commentator = {Cogswell, Betty E.},
 }
 
@@ -118,10 +118,10 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS09:C01:G03:S01,
   crossref = {ICUS09},
   title = {The economy and values},
-  author = {Wilfried, {Ver Eecke}},
+  author = {{Ver Eecke}, Wilfried},
   annotation={Ver Eecke's Georgetown Univ bio (https://gufaculty360.georgetown.edu/s/faculty-publications?id=00336000014Rt3IAAS)
   features this and other talks' titles, but not their venues.},
-  commentator = {Harriss, C. Lowell},
+  commentator = {Harriss, Clement Lowell},
 }
 
 @InProceedings{ICUS09:C01:G03:S02,
@@ -142,7 +142,7 @@ icus.data Data Version 0.9.2
   title = {The Policy and Values},
   level = {3},
   editorctype={organizer},
-  editorc = {Howard, A. E. Dick},
+  editorc = {Howard, Arthur Ellsworth Dick},
 }
 
 @InProceedings{ICUS09:C01:G04:S01,
@@ -160,7 +160,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS09:C01:G04:X03,
   crossref = {ICUS09},
   title = {Comments on {The Policy and Values}},
-  author = {Richards, David A. J.},
+  author = {Richards, David Armand Joseph},
 }
 
 @InProceedings{ICUS09:C01:G04:X04,
@@ -179,7 +179,7 @@ icus.data Data Version 0.9.2
   title = {Change and Development},
   level = {2},
   editorctype={organizer},
-  editorc = {Skinner, Elliott P.},
+  editorc = {Skinner, Elliott Percival},
 }
 
 @Set{ICUS09:C02:G01,
@@ -203,8 +203,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS09:C02:G01:S02,
   crossref = {ICUS09},
   title = {Traditional views of change and development},
-  author = {Dube, S. C.},
-  commentator = {Mahapatra, L. K.},
+  author = {Dube, Shyama Charan},
+  commentator = {Mahapatra, Lakshman Kumar},
 }
 
 
@@ -224,7 +224,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS09},
   title = {Toward a universal approach. Is East-West convergency at hand?},
   author = {Chen, Tsing-Fang},
-  commentator = {Bardis, Panos D.},
+  commentator = {Bardis, Panos Demetrios},
 }
 
 @InProceedings{ICUS09:C02:G02:S02,
@@ -251,13 +251,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS09},
   title = {Industrial societies and the biosphere},
   author = {Allen, Robert},
-  commentator = {Singer, S. Fred},
+  commentator = {Singer, Siegfried Fred},
 }
 
 @InProceedings{ICUS09:C02:G03:S02,
   crossref = {ICUS09},
   title = {Individual responsibility in face of the struggle between freedom and anarchy},
-  author = {Peperzak, Adriaan},
+  author = {Peperzak, Adriaan Theodoor},
   commentator = {Collinson, John},
 }
 
@@ -271,14 +271,14 @@ icus.data Data Version 0.9.2
   title = {Language and Development},
   level = {3},
   editorctype={organizer},
-  editorc = {Wescott, Roger W.},
+  editorc = {Wescott, Roger Williams},
 }
 
 @InProceedings{ICUS09:C02:G04:S01,
   crossref = {ICUS09},
   title = {Language policies and national development in Sub-Saharan Africa: Issues for the 80's},
-  author = {Bokamba, Eyamba G.},
-  commentator = {Wood, Richard},
+  author = {Bokamba, Eyamba Georges},
+  commentator = {Wood, Richard E.},
 }
 
 @InProceedings{ICUS09:C02:G04:S02,
@@ -315,8 +315,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS09:C03:G01:S01,
   crossref = {ICUS09},
   title = {Quality of life, self-realization and society},
-  author = {Madsen, K. B.},
-  commentator = {Moles, Abraham A.},
+  author = {Madsen, Kristen Bent},
+  commentator = {Moles, Abraham André},
 }
 
 @InProceedings{ICUS09:C03:G01:S02,
@@ -337,13 +337,13 @@ icus.data Data Version 0.9.2
   title = {Population and Values},
   level = {3},
   editorctype={organizer},
-  editorc = {Pringle, J. W. S.},
+  editorc = {Pringle, John William Sutton},
 }
 
 @InProceedings{ICUS09:C03:G02:S01,
   crossref = {ICUS09},
   title = {The effect of crowding in cities on the quality of life, with special reference to developing countries},
-  author = {Dwyer, D. J.},
+  author = {Dwyer, Denis John},
   commentator = {Galantay, Ervin Y.},
 }
 
@@ -351,7 +351,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS09},
   title = {Singapore's experience in family planning and its effect on the quality of life of the people},
   author = {Tan, Nalia},
-  commentator = {Samarawickrama, Gervin P.},
+  commentator = {Samarawickrama, Gervin Panduka},
 }
 
 @InProceedings{ICUS09:C03:G02:S03,
@@ -371,20 +371,20 @@ icus.data Data Version 0.9.2
   title = {Biotechnology and Values},
   level = {3},
   editorctype={organizer},
-  editorc = {Krebs, Hans A.},
+  editorc = {Krebs, Hans Adolf},
 }
 
 @InProceedings{ICUS09:C03:G03:S01,
   crossref = {ICUS09},
   title = {Biotechnology and values: how to arrive at sound value judgements},
-  author = {Krebs, Hans A.},
+  author = {Krebs, Hans Adolf},
   commentator = {Goble, Frank G.},
 }
 
 @InProceedings{ICUS09:C03:G03:S02,
   crossref = {ICUS09},
   title = {Man's own show, civilization},
-  author = {Johnson, B. Connor},
+  author = {Johnson, Bruce Connor},
   commentator = {Karlson, Peter},
 }
 
@@ -411,8 +411,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS09:C03:G04:S02,
   crossref = {ICUS09},
   title = {Education for moral values in developing nations},
-  author = {Jamali, Mohammed Fadhei},
-  commentator = {Herz, Martin F.},
+  author = {Jamali, Mohammed Fadhel},
+  commentator = {Herz, Martin Florian},
 }
 
 
@@ -425,7 +425,7 @@ icus.data Data Version 0.9.2
   title = {Vision and Direction of the Future},
   level = {2},
   editorctype={organizer},
-  editorc = {Weinberg, Alvin M.},
+  editorc = {Weinberg, Alvin Martin},
 }
 
 @Set{ICUS09:C04:G01,
@@ -490,14 +490,14 @@ icus.data Data Version 0.9.2
   title = {Impact of Government on the Conduct of Science},
   level = {3},
   editorctype={organizer},
-  editorc = {Weinberg, Alvin M.},
+  editorc = {Weinberg, Alvin Martin},
 }
 
 @InProceedings{ICUS09:C04:G03:S01,
   crossref = {ICUS09},
   title = {Freedom, science and civilization},
   author = {Bronwell, Arther B.},
-  commentator = {Seitz, Frederick and Silverman, Joseph and Gruner, Wayne},
+  commentator = {Seitz, Frederick and Silverman, Joseph and Gruner, Wayne R.},
 }
 
 
@@ -511,19 +511,19 @@ icus.data Data Version 0.9.2
   title = {Wealth and Society},
   level = {3},
   editorctype={organizer},
-  editorc = {Lewis, W. Bennett},
+  editorc = {Lewis, Wilfrid Bennett},
 }
 
 @InProceedings{ICUS09:C04:G04:S01,
   crossref = {ICUS09},
   title = {Wealth and society},
-  author = {Lewis, W. Bennett},
+  author = {Lewis, Wilfrid Bennett},
 }
 
 @InProceedings{ICUS09:C04:G04:S02,
   crossref = {ICUS09},
   title = {The central role of energy in Soddy's holistic and critical approach to nuclear science, economics and social responsibility},
-  author = {Trenn, Thaddeus J.},
+  author = {Trenn, Thaddeus Joseph},
 }
 
 @InProceedings{ICUS09:C04:G04:X03,
@@ -541,7 +541,7 @@ icus.data Data Version 0.9.2
   title = {Multilingualism in Developing Countries, Industrialized Countries and Future Human Communities},
   level = {3},
   editorctype={organizer},
-  editorc = {Wescott, Roger W.},
+  editorc = {Wescott, Roger Williams},
 }
 
 @InProceedings{ICUS09:C05:G01:S01,
@@ -560,13 +560,13 @@ icus.data Data Version 0.9.2
   title = {The Cultural Impact of Science and Technology on Developing Countries},
   level = {3},
   editorctype={organizer},
-  editorc = {Bhiday, M. R.},
+  editorc = {Bhiday, Madhav Ramchandra},
 }
 
 @InProceedings{ICUS09:C05:G02:S01,
   crossref = {ICUS09},
   title = {The Cultural Impact of Science and Technology on Developing Countries},
-  author = {Malik, F. Bary},
+  author = {Malik, Fazley Bary},
   commentator = {Aalami, Bijan and Deshpande, B. G.},
 }
 
@@ -580,7 +580,7 @@ icus.data Data Version 0.9.2
   title = {Geopolitics of European Security in the Nuclear Age and World Peace},
   level = {3},
   editorctype={organizer},
-  editorc = {{Ben-Dak}, Joseph},
+  editorc = {{Ben-Dak}, Joseph D.},
 }
 
 @InProceedings{ICUS09:C05:G03:S01,
@@ -601,14 +601,14 @@ icus.data Data Version 0.9.2
   title = {Ethology, Ecology and Philosophy of Traditional Health Care Delivery System of the Akamba},
   level = {3},
   editorctype={organizer},
-  editorc = {Pribram Karl H.},
+  editorc = {Pribram, Karl Harry},
 }
 
 @InProceedings{ICUS09:C05:G04:S01,
   crossref = {ICUS09},
   title = {Ethology, Ecology and Philosophy of Traditional Health Care Delivery System of the Akamba},
   author = {Ndeti, Kivuto},
-  commentator = {Chuke, P. O.}
+  commentator = {Chuke, Paul Okwudili}
 }
 
 
@@ -621,7 +621,7 @@ icus.data Data Version 0.9.2
   title = {The Matrifocal Family: From an Anthropological Curiosity to a World Problem},
   level = {3},
   editorctype={organizer},
-  editorc = {Dewan, M. L.},
+  editorc = {Dewan, Madan Lal},
 }
 
 @InProceedings{ICUS09:C05:G05:S01,
@@ -648,8 +648,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS09:C05:G06:S01,
   crossref = {ICUS09},
   title = {Sincerity, Rationality and Monitoring},
-  author = {Flew, Anthony},
-  commentator={Fraser, Stewart E.}
+  author = {Flew, Antony Garrard Newton},
+  commentator={Fraser, Stewart Erskine}
 }
 
 
@@ -662,14 +662,14 @@ icus.data Data Version 0.9.2
   title = {Science and the Clarification of Values: Implications of Recent Findings in Psychological and Psychic Research},
   level = {3},
   editorctype={organizer},
-  editorc = {Mitchell, Edgar D.},
+  editorc = {Mitchell, Edgar Dean},
 }
 
 @InProceedings{ICUS09:C06:G01:S01,
   crossref = {ICUS09},
   title = {Science and the Clarification of Values: Implications of Recent Findings in Psychological and Psychic Research},
-  author = {Harman, Willis},
-  commentator={Kurtz, Paul}
+  author = {Harman, Willis W.},
+  commentator={Kurtz, Paul Winter}
 }
 
 
@@ -682,13 +682,13 @@ icus.data Data Version 0.9.2
   title = {Rapid Economic and Social Change in Developing Nations and the Problem of Crime},
   level = {3},
   editorctype={organizer},
-  editorc = {Farracuti, Franco},
+  editorc = {Ferracuti, Franco},
 }
 
 @InProceedings{ICUS09:C06:G02:S01,
   crossref = {ICUS09},
   title = {Rapid Economic and Social Change in Developing Nations and the Problem of Crime},
-  author = {Lejins, Peter P.},
+  author = {Lejins, Peter Pierre},
   commentator={Zahedi, Hamid}
 }
 
@@ -708,7 +708,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS09:C06:G03:S01,
   crossref = {ICUS09},
   title = {The North-South Problem},
-  author = {Scalera, Garrett},
+  author = {Scalera, Garrett N.},
   commentator={Namiki, Nobuyoshi}
 }
 
@@ -759,7 +759,7 @@ icus.data Data Version 0.9.2
   title = {The Emerging Paradigm and its Contribution to the Unity of Sciences},
   level = {3},
   editorctype={organizer},
-  editorc = {Jaffe, Russel M.},
+  editorc = {Jaffe, Russell M.},
 }
 
 @InProceedings{ICUS09:C06:G06:S01,
