--- a/inst/extdata/icusbib-raw/icus10.bib
+++ b/inst/extdata/icusbib-raw/icus10.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -5,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS10,
   title = {The Search for Absolute Values and the Creation of the New World},
   titleaddon = {Tenth International Conference on the Unity of the Sciences},
-  editora = {Kaplan, Morton A. and {von Euler}, Ulfe Svante},
+  editora = {Kaplan, Morton Abraham and {von Euler}, Ulfe Svante},
   editoratype = {chairperson},
   shorttitle = {ICUS X},
   eventdate = {1981-11-09/1981-11-13},
@@ -58,14 +60,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS10},
   title = {Comparative development - with special reference to Japan},
   author = {Kurebayashi, Shigeo},
-  commentator = {Liu, Tai Ying},
+  commentator = {Liu, Taiying},
 }
 
 @InProceedings{ICUS10:C01:G01:S02,
   crossref = {ICUS10},
   title = {Comparative development - with special reference to Korea},
   author = {Koo, Bon Ho},
-  commentator = {Sandhu, K. S.},
+  commentator = {Sandhu, Kernial Singh},
 }
 
 
@@ -84,21 +86,21 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C01:G02:S01,
   crossref = {ICUS10},
   title = {Non-oil resource-exporting countries and the pattern of development in the Middle East},
-  author = {Katanani, Ahmed K.},
+  author = {Katanani, Ahmad K.},
   commentator = {Ahmad, Khurshid},
 }
 
 @InProceedings{ICUS10:C01:G02:S02,
   crossref = {ICUS10},
   title = {Oil and its impact on development of the oil-producing countries},
-  author = {Ali, Sultan Abou},
+  author = {{Abou-Ali}, Sultan},
   commentator = {Ahmed, Ziadeen},
 }
 
 @InProceedings{ICUS10:C01:G02:S03,
   crossref = {ICUS10},
   title = {African resource-exporting states: an examination of the periphery of the world periphery},
-  author = {Onwuka, R. I.},
+  author = {Onwuka, Ralph Iheanyi},
   commentator = {Golden, John},
 }
 
@@ -112,7 +114,7 @@ icus.data Data Version 0.9.2
   title = {The Industrial Veterans},
   level = {3},
   editorctype={organizer},
-  editorc = {Harriss, C. Lowell},
+  editorc = {Harriss, Clement Lowell},
 }
 
 @InProceedings{ICUS10:C01:G03:S01,
@@ -124,7 +126,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C01:G03:S02,
   crossref = {ICUS10},
   title = {The teachings of growth and development},
-  author = {Piatier, Andre},
+  author = {Piatier, André},
 }
 
 @InProceedings{ICUS10:C01:G03:S03,
@@ -136,7 +138,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C01:G03:X04,
   crossref = {ICUS10},
   title = {General discussant},
-  author = {Colander, David},
+  author = {Colander, David Charles},
 }
 
 
@@ -156,7 +158,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS10},
   title = {The less developed countries in risk of poverty with special reference to Latin America and the Caribbean},
   author = {Wiltshire, Winthrop},
-  commentator = {Lamberton, D. M.},
+  commentator = {Lamberton, Donald McLean},
 }
 
 @InProceedings{ICUS10:C01:G04:S02,
@@ -233,7 +235,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C02:G02:S01,
   crossref = {ICUS10},
   title = {Robots, sensors and the automatic factory},
-  author = {Wright, Paul K.},
+  author = {Wright, Paul Kenneth},
   commentator = {},
 }
 
@@ -246,7 +248,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C02:G02:X03,
   crossref = {ICUS10},
   title = {General discussant {Information}},
-  author = {Bennett, John M.},
+  author = {Bennett, John Makepeace},
 }
 
 
@@ -265,7 +267,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C02:G03:S01,
   crossref = {ICUS10},
   title = {Minerals availability: the challenge for science and technology},
-  author = {Tilton, John E.},
+  author = {Tilton, John Elvin},
 }
 
 @InProceedings{ICUS10:C02:G03:S02,
@@ -308,13 +310,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C02:G05:S03,
   crossref = {ICUS10},
   title = {Social impacts of changing technology: the question of approach},
-  author = {Stearns, Peter N.},
+  author = {Stearns, Peter Nathaniel},
 }
 
 @InProceedings{ICUS10:C02:G05:S04,
   crossref = {ICUS10},
   title = {Appropriate technology},
-  author = {Rohatgi, Pradeep K.},
+  author = {Rohatgi, Pradeep Kumar},
 }
 
 
@@ -339,13 +341,13 @@ icus.data Data Version 0.9.2
   title = {The Changing Role of Science},
   level = {3},
   editorctype={organizer},
-  editorc = {Gerholm, Tor Ragnor},
+  editorc = {Gerholm, Tor Ragnar},
 }
 
 @InProceedings{ICUS10:C03:G01:S01,
   crossref = {ICUS10},
   title = {The introduction of Western technology into China and Japan},
-  author = {Sorborn, Per},
+  author = {Sorbom, Per},
   commentator = {Koertge, Noretta},
 }
 
@@ -353,7 +355,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS10},
   title = {The complications of applied science},
   author = {Agazzi, Evandro},
-  commentator = {Wigner, Eugene P.},
+  commentator = {Wigner, Eugene Paul},
 }
 
 
@@ -380,8 +382,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C03:G02:S02,
   crossref = {ICUS10},
   title = {Information technology: are its impacts predictable?},
-  author = {Linstone, Harold},
-  commentator = {Stannett, V. T.},
+  author = {Linstone, Harold Adrian},
+  commentator = {Stannett, Vivian Thomas},
 }
 
 @InProceedings{ICUS10:C03:G02:S03,
@@ -402,7 +404,7 @@ icus.data Data Version 0.9.2
   title = {Population and Social Patterns},
   level = {3},
   editorctype={organizer},
-  editorc = {{Villee Jr}, Claude A.},
+  editorc = {Villee, Claude Alvin},
 }
 
 @InProceedings{ICUS10:C03:G04:S01,
@@ -414,19 +416,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C03:G04:S02,
   crossref = {ICUS10},
   title = {World population problem: its impact on the family and community},
-  author = {Samarawickrama, Gervin P.},
+  author = {Samarawickrama, Gervin Panduka},
 }
 
 @InProceedings{ICUS10:C03:G04:S03,
   crossref = {ICUS10},
   title = {Biomedical sciences and social patterns in the twenty-first century},
-  author = {{Villee Jr}, Claude A.},
+  author = {Villee, Claude Alvin},
 }
 
 @InProceedings{ICUS10:C03:G04:X04,
   crossref = {ICUS10},
   title = {General discussant {Population and Social Patterns}},
-  author = {Fraser, Stewart E.},
+  author = {Fraser, Stewart Erskine},
 }
 
 
@@ -457,14 +459,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C04:G01:S01,
   crossref = {ICUS10},
   title = {The holistic approach to health and healing: drugless therapy},
-  author = {Puri, Gopal},
+  author = {Puri, Gopal Singh},
   annotation = {https://theconversation.com/how-yoga-conquered-britain-the-feminist-legacy-of-yogini-sunita-and-kailash-puri-118780}
 }
 
 @InProceedings{ICUS10:C04:G01:S02,
   crossref = {ICUS10},
   title = {Mental health and dilemmas of psychotherapy: an Eastern perspective},
-  author = {Padmasiri {de Silva}},
+  author = {{De Silva}, Padmasiri},
   commentator = {Fort, Joel},
 }
 
@@ -479,7 +481,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS10},
   title = {A new treatment for malignant tumors},
   author = {Johnson, Fred M.},
-  commentator = {Feinendegen, Ludwig},
+  commentator = {Feinendegen, Ludwig E.},
 }
 
 
@@ -493,7 +495,7 @@ icus.data Data Version 0.9.2
   title = {The Resurgence of East Asia: Promises and Pitfalls of Modernization},
   level = {3},
   editorctype={organizer},
-  editorc = {Kim, Ilpyong J.},
+  editorc = {Kim, Ilpyong John},
 }
 
 @InProceedings{ICUS10:C04:G03:S01,
@@ -517,7 +519,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C04:G03:X04,
   crossref = {ICUS10},
   title = {General discussant {The Resurgence of East Asia: Promises and Pitfalls of Modernization}},
-  author = {Hsiung, James C. and Kau, Michael Y. M.},
+  author = {Hsiung, James Chieh and Kau, Michael Ying-mao},
 }
 
 
@@ -531,13 +533,13 @@ icus.data Data Version 0.9.2
   title = {The Resurgence of East Asia: Cultural and Spiritual Dimensions},
   level = {3},
   editorctype={organizer},
-  editorc = {Wescott, Roger W.},
+  editorc = {Wescott, Roger Williams},
 }
 
 @InProceedings{ICUS10:C04:G04:S01,
   crossref = {ICUS10},
   title = {The spirit of Japan: a thematic review of Japanese history},
-  author = {McFarland, H. Neill},
+  author = {McFarland, Horace Neill},
   commentator = {Rubenstein, Betty Rogers},
 }
 
@@ -545,14 +547,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS10},
   title = {National aesthetics: help or hindrance to the resurgence of East Asia},
   author = {Sullivan, Michael},
-  commentator = {Stokstad, Marilyn},
+  commentator = {Stokstad, Marilyn Jane},
 }
 
 @InProceedings{ICUS10:C04:G04:S03,
   crossref = {ICUS10},
   title = {The meaning of citizenship},
-  author = {Huang, Sung-mo},
-  commentator = {Hewes, Gordon W.},
+  author = {Huang, Sung-Mo},
+  commentator = {Hewes, Gordon Winant},
 }
 
 
@@ -566,13 +568,13 @@ icus.data Data Version 0.9.2
   title = {The Supranational Movements: Launch Point 1981},
   level = {3},
   editorctype={organizer},
-  editorc = {{Al Faruqi}, Isma'il R.},
+  editorc = {{Al-Faruqi}, Isma'il R.},
 }
 
 @InProceedings{ICUS10:C04:G05:S01,
   crossref = {ICUS10},
   title = {Catholic Christianity as a supranational movement},
-  author = {Gremillion, Joseph},
+  author = {Gremillion, Joseph Benjamin},
 }
 
 @InProceedings{ICUS10:C04:G05:S02,
@@ -604,7 +606,7 @@ icus.data Data Version 0.9.2
   title = {Transformations in Consciousness},
   level = {2},
   editorctype={organizer},
-  editorc = {Pribram, Karl H.},
+  editorc = {Pribram, Karl Harry},
 }
 
 @Set{ICUS10:C05:G02,
@@ -621,19 +623,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C05:G02:S01,
   crossref = {ICUS10},
   title = {Phenotypic 'windows' other than size in the evolution of the human brain},
-  author = {Holloway, Ralph},
+  author = {Holloway, Ralph L.},
 }
 
 @InProceedings{ICUS10:C05:G02:S02,
   crossref = {ICUS10},
   title = {Comments on psychology and genetics from an anti-reductionist},
-  author = {Scarr, Sandra},
+  author = {Scarr, Sandra Wood},
 }
 
 @InProceedings{ICUS10:C05:G02:X03,
   crossref = {ICUS10},
   title = {General discussant {The Origins of Human Thought}},
-  author = {Trivers, Robert},
+  author = {Trivers, Robert Ludlow},
 }
 
 
@@ -647,7 +649,7 @@ icus.data Data Version 0.9.2
   title = {The Transformations of Philosophical Thought: Recent Contributions},
   level = {3},
   editorctype={organizer},
-  editorc = {Bartley, William Warren III},
+  editorc = {{Bartley III}, William Warren},
 }
 
 @InProceedings{ICUS10:C05:G03:S01,
@@ -671,7 +673,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C05:G03:X04,
   crossref = {ICUS10},
   title = {General discussion {The Transformations of Philosophical Thought: Recent Contributions}},
-  author = {Flew, Antony and Kim, Yersa and Bartley, William Warren III},
+  author = {Flew, Antony Garrard Newton and Kim, Yersu and {Bartley III}, William Warren},
 }
 
 
@@ -703,13 +705,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C05:G04:S03,
   crossref = {ICUS10},
   title = {Quantum mechanics and irreversibility},
-  author = {Sussmann, Georg},
+  author = {Suessmann, Georg},
 }
 
 @InProceedings{ICUS10:C05:G04:X01,
   crossref = {ICUS10},
   title = {General discussion {Transformation of Scientific Thought: Recent Contributions}},
-  author = {Enz, Charles},
+  author = {Enz, Charles Paul},
 }
 
 
@@ -729,18 +731,18 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS10:C05:G05:S01,
   crossref = {ICUS10},
   title = {Non-locality and localization: a review of the holographic hypothesis of brain function in perception and memory},
-  author = {Pribram, Karl},
+  author = {Pribram, Karl Harry},
 }
 
 @InProceedings{ICUS10:C05:G05:S02,
   crossref = {ICUS10},
   title = {Conceptual changes in reality models from new discoveries in physics},
-  author = {Hiley, Basil J.},
+  author = {Hiley, Basil James},
 }
 
 @InProceedings{ICUS10:C05:G05:X03,
   crossref = {ICUS10},
   title = {General discussion {The Future of Consciousness}},
-  author = {Finkelstein, David and Rauscher, Elizabeth A.},
+  author = {Finkelstein, David Ritz and Rauscher, Elizabeth A.},
 }
 
