--- a/inst/extdata/icusbib-raw/icus11.bib
+++ b/inst/extdata/icusbib-raw/icus11.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -5,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS11,
   title = {The Search for Absolute Values and the Creation of the New World},
   titleaddon = {Eleventh International Conference on the Unity of the Sciences},
-  editora = {Kaplan, Morton A. and Weinberg, Alvin M.},
+  editora = {Kaplan, Morton Abraham and Weinberg, Alvin Martin},
   editoratype = {chairperson},
   shorttitle = {ICUS XI},
   eventdate = {1982-11-25/1982-11-28},
@@ -75,7 +77,7 @@ icus.data Data Version 0.9.2
   title = {Politics and Contemporary Society},
   level = {3},
   editorctype={organizer},
-  editorc = {Kim, Ilpyong J.},
+  editorc = {Kim, Ilpyong John},
 }
 
 @InProceedings{ICUS11:C01:G02:S01,
@@ -93,7 +95,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C01:G02:X03,
   crossref = {ICUS11},
   title = {General discussion {Politics and Contemporary Society}},
-  author = {Esposito, Bruce J. and Lovell, John P. and Huang, Sung Mo},
+  author = {Esposito, Bruce J. and Lovell, John Philip and Huang, Sung-Mo},
 }
 
 
@@ -119,7 +121,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C01:G03:S02,
   crossref = {ICUS11},
   title = {Religious pluralism and social order},
-  author = {Hammond, Phillip E.},
+  author = {Hammond, Phillip Everett},
 }
 
 @InProceedings{ICUS11:C01:G03:S03,
@@ -156,8 +158,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C02:G01:S01,
   crossref = {ICUS11},
   title = {Natural resources scarcity in the 21st century? The role of technology},
-  author = {Singer, S. Fred},
-  commentator={Segre, Dan V.}
+  author = {Singer, Siegfried Fred},
+  commentator={Segre, Dan Vittorio}
 }
 
 @InProceedings{ICUS11:C02:G01:S02,
@@ -189,13 +191,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C02:G02:S01,
   crossref = {ICUS11},
   title = {Technology-related issues in the context of the North-South debate},
-  author = {Adjangba, A. M.},
+  author = {Adjangba, Anoumou M.},
 }
 
 @InProceedings{ICUS11:C02:G02:S02,
   crossref = {ICUS11},
   title = {The relocation of industry on the American continent},
-  author = {Wanderly, Milton de Barros},
+  author = {Wanderley, Milton de Barros},
 }
 
 @InProceedings{ICUS11:C02:G02:S03,
@@ -208,14 +210,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C02:G02:S04,
   crossref = {ICUS11},
   title = {Technology and science for development},
-  author = {Rohatgi, Pradeep and Rohatgi, Kalpana},
+  author = {Rohatgi, Pradeep Kumar and Rohatgi, Kalpana},
   commentator={}
 }
 
 @InProceedings{ICUS11:C02:G02:S05,
   crossref = {ICUS11},
   title = {Panel discussion},
-  author = {Sivaraman, K. N. and Bhattacharyya, Asit Kumar and Padmasiri {de Silva}},
+  author = {Sivaraman, K. N. and Bhattacharyya, Asit Kumar and {De Silva}, Padmasiri},
 }
 
 
@@ -228,21 +230,21 @@ icus.data Data Version 0.9.2
   title = {Technology and Space: Pie in the Sky or New Frontiers?},
   level = {3},
   editorctype={organizer},
-  editorc = {Singer, S. Fred},
+  editorc = {Singer, Siegfried Fred},
 }
 
 @InProceedings{ICUS11:C02:G04:S01,
   crossref = {ICUS11},
   title = {Should space be colonized?},
-  author = {O'Leary, Brian T.},
-  commentator={Meyer, Thomas and Srinivasan, Mangalam and Maruyama, Magoroh}
+  author = {O'Leary, Brian Todd},
+  commentator={Meyer, Thomas R. and Srinivasan, Mangalam and Maruyama, Magoroh}
 }
 
 @InProceedings{ICUS11:C02:G04:S02,
   crossref = {ICUS11},
   title = {Can space be industrialized?},
   author = {Criswell, David R.},
-  commentator={Higatsberger, Michael and Nakagawa, Manabu}
+  commentator={Higatsberger, Michael J. and Nakagawa, Manabu}
 }
 
 
@@ -256,7 +258,7 @@ icus.data Data Version 0.9.2
   title = {Human Populations in the Future},
   level = {2},
   editorctype={organizer},
-  editorc = {{Villee Jr}, Claude A.},
+  editorc = {Villee, Claude Alvin},
 }
 
 @Set{ICUS11:C03:G01,
@@ -279,13 +281,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C03:G01:S02,
   crossref = {ICUS11},
   title = {How to persuade governments to pursue population control policy},
-  author = {Samarawickrama, Gervin P.},
+  author = {Samarawickrama, Gervin Panduka},
 }
 
 @InProceedings{ICUS11:C03:G01:S03,
   crossref = {ICUS11},
   title = {Panel discussion},
-  author = {Johnson, B. Connor and Fraser, Stewart E. and Stanhill, Gerald and Sukhatme, P. V. and Lim, Ung-Kyu},
+  author = {Johnson, Bruce Connor and Fraser, Stewart Erskine and
+  Stanhill, Gerald and Sukhatme, Pandurang Vasudeo and Lim, Ungkyu},
 }
 
 
@@ -305,7 +308,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C03:G03:S01,
   crossref = {ICUS11},
   title = {General biology of ageing},
-  author = {Strehler, Bernhard L.},
+  author = {Strehler, Bernard Louis},
   commentator={Hofecker, Gerhard}
 }
 
@@ -378,19 +381,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C04:G02:S02,
   crossref = {ICUS11},
   title = {The challenge of evolutionary epistemology},
-  author = {Bartley, William Warren III},
+  author = {{Bartley III}, William Warren},
 }
 
 @InProceedings{ICUS11:C04:G02:S03,
   crossref = {ICUS11},
   title = {Evolutionary epistemology, objective knowledge, and rationality: the evolutionary approach in man's search for himself},
-  author = {Wuketits, Franz M.},
+  author = {Wuketits, Franz Manfred},
 }
 
 @InProceedings{ICUS11:C04:G02:S04,
   crossref = {ICUS11},
   title = {Panel discussion},
-  author = {O'Hear, Anthony and Kanitscheider, Bernulf and Biando, Rosaria Egidi and Lowenhard, Percy and Kaspar, Robert},
+  author = {O'Hear, Anthony and Kanitscheider, Bernulf and Bianco, Rosaria Egidi and Lowenhard, Percy and Kaspar, Robert},
 }
 
 
@@ -410,7 +413,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C04:G03:S01,
   crossref = {ICUS11},
   title = {The concept of rationality},
-  author = {Kaplan, Morton A.},
+  author = {Kaplan, Morton Abraham},
 }
 
 @InProceedings{ICUS11:C04:G03:S02,
@@ -428,7 +431,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C04:G03:S04,
   crossref = {ICUS11},
   title = {Panel discussion},
-  author = {Cassel, Dieter and Koford, Kenneth and Schmidt, Christian and Block, Walter and Moldofsky, Naomi},
+  author = {Cassel, Dieter and Koford, Kenneth J. and Schmidt, Christian and Block, Walter and Moldofsky, Naomi},
   commentator={}
 }
 
@@ -443,26 +446,26 @@ icus.data Data Version 0.9.2
   title = {Philosophical Theories of Rationality},
   level = {3},
   editorctype={organizer},
-  editorc = {Bartley, William Warren III},
+  editorc = {{Bartley III}, William Warren},
 }
 
 @InProceedings{ICUS11:C04:G04:S01,
   crossref = {ICUS11},
   title = {Must naturalism discredit naturalism?},
-  author = {Flew, Antony},
-  commentator={Hübner, Adolf and Petroni, Angelo Maria and Sawade, Nobusige}
+  author = {Flew, Antony Garrard Newton},
+  commentator={Hübner, Adolf and Petroni, Angelo Maria and Sawada, Nobushige}
 }
 
 @InProceedings{ICUS11:C04:G04:S02,
   crossref = {ICUS11},
-  title = {A Gödelian theorm for theories of rationality},
-  author = {Post, John F.},
+  title = {A Gödelian theorem for theories of rationality},
+  author = {Post, John Frederick},
 }
 
 @InProceedings{ICUS11:C04:G04:S03,
   crossref = {ICUS11},
   title = {What has become of CCR?},
-  author = {Watkins, J. W. N.},
+  author = {Watkins, John William Nevill},
 }
 
 @InProceedings{ICUS11:C04:G04:S04,
@@ -474,7 +477,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C04:G04:S05,
   crossref = {ICUS11},
   title = {Panel discussion},
-  author = {Weimer, Walter B. and Bartley, William Warren III and Hattiangadi, Jagdish},
+  author = {Weimer, Walter B. and {Bartley III}, William Warren and Hattiangadi, Jagdish N.},
 }
 
 
@@ -488,7 +491,7 @@ icus.data Data Version 0.9.2
   title = {Self, Society, and the Cosmos},
   level = {2},
   editorctype={organizer},
-  editorc = {Pribram, Karl H.},
+  editorc = {Pribram, Karl Harry},
 }
 
 @Set{ICUS11:C05:G01,
@@ -499,13 +502,13 @@ icus.data Data Version 0.9.2
   title = {Evolution of Moral and Ethical Behavior},
   level = {3},
   editorctype={organizer},
-  editorc = {Scarr, Sandra},
+  editorc = {Scarr, Sandra Wood},
 }
 
 @InProceedings{ICUS11:C05:G01:S01,
   crossref = {ICUS11},
   title = {The evolution of a sense of fairness},
-  author = {Trivers, Robert},
+  author = {Trivers, Robert Ludlow},
 }
 
 @InProceedings{ICUS11:C05:G01:S02,
@@ -523,7 +526,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C05:G01:S04,
   crossref = {ICUS11},
   title = {Panel discussion},
-  author = {Hahn, Sung Joe K. S.},
+  author = {Han, Sung-joo},
 }
 
 
@@ -543,19 +546,20 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C05:G02:S01,
   crossref = {ICUS11},
   title = {Evolution of the juvenile period of the human life cycle},
-  author = {Lancaster, Jane B.},
+  author = {Lancaster, Jane Beckman},
 }
 
-@InProceedings{ICUS11:C05:G02:S01,
+@InProceedings{ICUS11:C05:G02:S02,
   crossref = {ICUS11},
   title = {The evaluation of human social systems},
-  author = {Lancaster, Chet S.},
+  author = {Lancaster, Chesley Stevens},
 }
 
-@InProceedings{ICUS11:C05:G02:S01,
+@InProceedings{ICUS11:C05:G02:S03,
   crossref = {ICUS11},
   title = {Panel discussion},
-  author = {Reynolds, Peter and Holloway, Ralph L. and Cohen, Mark N. and {Hess-Haeser}, Jorg and Shepher, Joseph and Scarr, Sandra},
+  author = {Reynolds, Peter and Holloway, Ralph L. and
+  Cohen, Mark Nathan and Hess, Jörg and Shepher, Joseph and Scarr, Sandra Wood},
 }
 
 
@@ -575,19 +579,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C05:G03:S01,
   crossref = {ICUS11},
   title = {The limitations of determinism},
-  author = {Wigner, Eugene P.},
+  author = {Wigner, Eugene Paul},
 }
 
 @InProceedings{ICUS11:C05:G03:S02,
   crossref = {ICUS11},
   title = {Some insights into quantum physics and the organization of conscious processes},
-  author = {Stapp, Henry},
+  author = {Stapp, Henry Pierce},
 }
 
 @InProceedings{ICUS11:C05:G03:S03,
   crossref = {ICUS11},
   title = {Brain and the new physics},
-  author = {Pribram, Karl H.},
+  author = {Pribram, Karl Harry},
 }
 
 @InProceedings{ICUS11:C05:G03:S04,
@@ -630,7 +634,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C05:G04:S04,
   crossref = {ICUS11},
   title = {General discussion},
-  author = {Charon, Jean E.},
+  author = {Charon, Jean Émile},
 }
 
 
@@ -642,13 +646,13 @@ icus.data Data Version 0.9.2
   title = {The Anatomy of Peace},
   level = {3},
   editorctype={organizer},
-  editorc = {{Ben-Dak}, Joseph},
+  editorc = {{Ben-Dak}, Joseph D.},
 }
 
 @InProceedings{ICUS11:C06:G01:S01,
   crossref = {ICUS11},
   title = {The Anatomy of Peace},
-  author = {Puri, Gopal S.},
+  author = {Puri, Gopal Singh},
   commentator = {{van den Dungen}, Peter},
 }
 
@@ -686,7 +690,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C06:G03:S01,
   crossref = {ICUS11},
   title = {Organization of Matter: Is It an Accident or a Scheme?},
-  author = {Ali, M. Shamsar},
+  author = {Ali, M. Shamsher},
   commentator = {Motz, Lloyd},
   abstract ={Many scientists think that creation evolved out of chaos and that
   we are living in a chancy world. They tend to neglect the thinking of the
@@ -716,7 +720,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS11},
   title = {Family: Past, Present, Future},
   author = {Bettis, Lynne Masland},
-  commentator = {Puri, Kallash and Christian, Jane M.},
+  commentator = {Puri, Kailash and Christian, Jane M.},
 }
 
 
