--- a/inst/extdata/icusbib-raw/icus13.bib
+++ b/inst/extdata/icusbib-raw/icus13.bib
@@ -5,7 +5,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS13,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Thirteenth International Conference on the Unity of the Sciences},
-  editora = {Mellanby, Kenneth and King, Alexander and {Villee Jr.}, Claude A.},
+  editora = {Mellanby, Kenneth and King, Alexander and Villee, Claude Alvin},
   editoratype = {chairperson},
   shorttitle = {ICUS XIII},
   eventdate = {1984-09-02/1984-09-05},
@@ -21,13 +21,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:P01,
   crossref = {ICUS13},
   title = {Values in Science},
-  author = {Weinberg, Alvin M.},
+  author = {Weinberg, Alvin Martin},
 }
 
 @InProceedings{ICUS13:P02,
   crossref = {ICUS13},
   title = {Unity of the Sciences},
-  author = {Wigner, Eugene P.},
+  author = {Wigner, Eugene Paul},
 }
 
 @Set{ICUS13:C01,
@@ -38,7 +38,7 @@ icus.data Data Version 0.9.2
   title = {Unity of the Sciences},
   level = {2},
   editorctype={organizer},
-  editorc = {Weinberg, Alvin M. and Radnitzky, Gerard},
+  editorc = {Weinberg, Alvin Martin and Radnitzky, Gerard},
 }
 
 @Set{ICUS13:C01:G01,
@@ -63,7 +63,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Reductionism in biology and in the social sciences},
   author = {Leinfellner, Werner},
-  commentator = {Briskman, Laurence B.},
+  commentator = {Briskman, Laurence Barry},
 }
 
 @InProceedings{ICUS13:C01:G01:S03,
@@ -96,7 +96,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C01:G02:S02,
   crossref = {ICUS13},
   title = {Order and chaos},
-  author = {Sexl, Roman},
+  author = {Sexl, Roman Ulrich},
   commentator = {Schopper, Erwin},
 }
 
@@ -116,7 +116,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C01:G03:S01,
   crossref = {ICUS13},
   title = {A biomedical researcher casts a side-glance at the principle of self-organization},
-  author = {Petrovic, Alexandre},
+  author = {Petrovic, Alexandre G.},
   commentator = {Akos, Karoly},
 }
 
@@ -124,7 +124,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Mind and brain: reduction or correlation?},
   author = {Lowenhard, Percy},
-  commentator = {Wuketits, Franz M.},
+  commentator = {Wuketits, Franz Manfred},
 }
 
 @InProceedings{ICUS13:C01:G03:S03,
@@ -180,7 +180,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Explanation, reduction and the sociological turn in the philosophy of science,
   or Kuhn as ideologue for Merton's theory of science},
-  author = {Jarvie, Ian C.},
+  author = {Jarvie, Ian Charles},
   commentator = {Cavanaugh, Michael},
 }
 
@@ -194,7 +194,7 @@ icus.data Data Version 0.9.2
   title = {Theoretical Empiricism: A General Rationale for Scientific Model-Building},
   level = {2},
   editorctype={organizer},
-  editorc = {Robinson, Enders A. and Wold, Herman},
+  editorc = {Robinson, Enders A. and Wold, Herman Ole Andreaas},
 }
 
 @Set{ICUS13:C02:G01,
@@ -211,8 +211,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C02:G01:S01,
   crossref = {ICUS13},
   title = {The basic principles of model-building},
-  author = {Lohmoeller, Jan-Bernd},
-  commentator = {Poch, Francisco Azorin and Njock, G. Edward},
+  author = {Lohmöller, Jan-Bernd},
+  commentator = {{Azorín Poch}, Francisco and Njock, G. Edward},
 }
 
 @InProceedings{ICUS13:C02:G01:S02,
@@ -239,15 +239,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C02:G02:S01,
   crossref = {ICUS13},
   title = {Evaluation of school systems using partial least squares (PLS): an application in the analysis of open systems},
-  author = {Noonan, Richard},
-  commentator = {Sellin, Norbert and Rogowski, Josef},
+  author = {Noonan, Richard D.},
+  commentator = {Sellin, Norbert and Rogowski, Józef},
 }
 
 @InProceedings{ICUS13:C02:G02:S02,
   crossref = {ICUS13},
   title = {Estimation of re-models and some remarks on model specification in econometrics},
   author = {Schips, Bernd},
-  commentator = {Muth, John F. and May, Sidney},
+  commentator = {Muth, John Fraser and May, Sidney},
 }
 
 
@@ -268,14 +268,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Scientific model-building: principles, methods and history},
   author = {Dagum, Camilo},
-  commentator = {Sussman, Georg and Kryspin, Jan},
+  commentator = {Suessmann, Georg and Kryspin, Jan},
 }
 
 @InProceedings{ICUS13:C02:G03:S02,
   crossref = {ICUS13},
   title = {Blood flow in the brain, and adulthood aging of cognitive functions},
-  author = {Horn, John},
-  commentator = {Gruzilier, John and Luchins, Abraham S.},
+  author = {Horn, John L.},
+  commentator = {Gruzilier, John H. and Luchins, Abraham Samuel},
 }
 
 
@@ -296,7 +296,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Soft modeling and the measurement of biological shape},
   author = {Bookstein, Fred L.},
-  commentator = {Kochen, Manfred and Friedman, Jerome},
+  commentator = {Kochen, Manfred and Friedman, Jerome Isaac},
 }
 
 @InProceedings{ICUS13:C02:G04:S02,
@@ -338,7 +338,7 @@ icus.data Data Version 0.9.2
   title = {Human Beings and the Urban Environment: The Future Metropolis},
   level = {2},
   editorctype={organizer},
-  editorc = {{Johnson-Marshall}, Percy and Galantay, Ervin Y.},
+  editorc = {{Johnson-Marshall}, Percy Edwin Alan and Galantay, Ervin Y.},
 }
 
 @Set{ICUS13:C03:G01,
@@ -362,7 +362,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C03:G01:S02,
   crossref = {ICUS13},
   title = {The metropolis and tropical Africa},
-  author = {O'Connor, Anthony},
+  author = {O'Connor, Anthony Michael},
   commentator = {Laszlo, Ervin},
 }
 
@@ -370,14 +370,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Toward megalopolis},
   author = {Psomopoulos, Panayis},
-  commentator = {Leaker, Dudley and Mackay, William},
+  commentator = {Leaker, Dudley Roberts and Mackay, William},
 }
 
 @InProceedings{ICUS13:C03:G01:S04,
   crossref = {ICUS13},
   title = {The world system of cities in transformation},
   author = {Dyckman, John W.},
-  commentator = {Penfold, Anthony and Gallagher, Glen},
+  commentator = {Penfold, Anthony H. and Gallagher, Glen},
 }
 
 
@@ -398,14 +398,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {The European metropolis},
   author = {{Mueller-Ibold}, Klaus},
-  commentator = {Bassand, Michel and Constandse, Adriaan},
+  commentator = {Bassand, Michel and Constandse, Adriaan Kees},
 }
 
 @InProceedings{ICUS13:C03:G02:S02,
   crossref = {ICUS13},
   title = {The North American metropolis},
   author = {Robertson, Rebecca},
-  commentator = {Blumenfeld, Hans and Krivatsky, Adam},
+  commentator = {Blumenfeld, Hans and Krivatsy, Adam},
 }
 
 
@@ -425,7 +425,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C03:G03:S01,
   crossref = {ICUS13},
   title = {The Latin American metropolis},
-  author = {Kunckel, Dieter},
+  author = {Kunckel, Dietrich},
   commentator = {Batista, Geraldo Sá Nogueira and {Gomez Azcarate Ramirez}, Elias},
 }
 
@@ -461,14 +461,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {The metropolis in socialist countries},
   author = {Vidor, Ferenc},
-  commentator = {Pawlowski, Krzysztof and Perovic, Milos},
+  commentator = {Pawlowski, Krzysztof Kazimierz and Perović, Miloš R.},
 }
 
 @InProceedings{ICUS13:C03:G04:S02,
   crossref = {ICUS13},
   title = {Utopian paradigms of metropolis},
   author = {Kikutake, Kiyonori},
-  commentator = {Soleri, Paolo and Ramirez, J. Martin},
+  commentator = {Soleri, Paolo and Ramirez, Jesus Martin},
 }
 
 
@@ -482,7 +482,7 @@ icus.data Data Version 0.9.2
   title = {Crises in Education in the 1980's: A Survey of Educational Values and Systems},
   level = {2},
   editorctype={organizer},
-  editorc = {Ryan, John W. and Fukuda, Nobuyuki},
+  editorc = {Ryan, John William and Fukuda, Nobuyuki},
 }
 
 @Set{ICUS13:C04:G01,
@@ -507,7 +507,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Continuity and change in mid-nineteenth century Japanese education},
   author = {Rubinger, Richard},
-  commentator = {Hong, Woong Sun},
+  commentator = {Hong, Woong-sun},
 }
 
 @InProceedings{ICUS13:C04:G01:S03,
@@ -535,7 +535,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {The school in an achievement-oriented society: crisis and remedies},
   author = {Husen, Torsten},
-  commentator = {Beauchamp, Edward},
+  commentator = {Beauchamp, Edward Robert},
 }
 
 @InProceedings{ICUS13:C04:G02:S02,
@@ -563,7 +563,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Educational development in the Asian countries: issues and coping strategies},
   author = {Kuo, Wei-Fan},
-  commentator = {Masatsugu, Mitsuyuki and Chang, Sang Ho},
+  commentator = {Masatsugu, Mitsuyuki and Chang, Sang-ho},
 }
 
 @InProceedings{ICUS13:C04:G03:S02,
@@ -598,7 +598,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Education and instruction in Romania},
   author = {Bogdan, Radu I. C.},
-  commentator = {Mitter, Wolfgang and Kozma, Tamas and Shtromas, Alexander},
+  commentator = {Mitter, Wolfgang and Kozma, Tamás and Shtromas, Alexander},
 }
 
 @InProceedings{ICUS13:C04:G04:S02,
@@ -624,15 +624,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C04:G05:S01,
   crossref = {ICUS13},
   title = {University international relations: what lies ahead?},
-  author = {Ryan, John W.},
-  commentator = {Cowan, James W. and Lombardi, John V.},
+  author = {Ryan, John William},
+  commentator = {Cowan, James W. and Lombardi, John Vincent},
 }
 
 @InProceedings{ICUS13:C04:G05:S02,
   crossref = {ICUS13},
   title = {The international flow of students: a vehicle for international cooperation and cross-cultural understanding?},
   author = {Selvaratnam, Viswanathan},
-  commentator = {Pikas, Anatol and Bey, Arifin and Yoon, Se Won},
+  commentator = {Pikas, Anatol and Bey, Arifin and Yoon, Se-won},
 }
 
 
@@ -663,15 +663,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C05:G01:S01,
   crossref = {ICUS13},
   title = {Early history of earth and ocean},
-  author = {Rasool, S. Ishtiaque},
-  commentator = {Nanda, J. N.},
+  author = {Rasool, Saiyed Ichtiaque},
+  commentator = {Nanda, Jatinder Nath},
 }
 
 @InProceedings{ICUS13:C05:G01:S02,
   crossref = {ICUS13},
   title = {The ocean as the cradle of life},
-  author = {Ponnampueruma, Cyril},
-  commentator = {Soffen, Gerald and Claude A. {Villee Jr}},
+  author = {Ponnamperuma, Cyril},
+  commentator = {Soffen, Gerald A. and Villee, Claude Alvin},
 }
 
 @InProceedings{ICUS13:C05:G01:S03,
@@ -697,15 +697,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C05:G02:S01,
   crossref = {ICUS13},
   title = {Long-term climate control},
-  author = {Oeschger, H.},
-  commentator = {Gat, Joel},
+  author = {Oeschger, Hans},
+  commentator = {Gat, Joel Robert},
 }
 
 @InProceedings{ICUS13:C05:G02:S02,
   crossref = {ICUS13},
   title = {Ocean control of atmospheric processes},
-  author = {Kraus, Eric B.},
-  commentator = {Ellsaessar, Hugh W. and Landsberg, Helmut},
+  author = {Kraus, Eric Bradshaw},
+  commentator = {Ellsaessar, Hugh W. and Landsberg, Helmut Erich},
 }
 
 
@@ -733,7 +733,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Ocean observations},
   author = {Abel, Robert},
-  commentator = {Kullenberg, Gunnar and Niskin, Shale},
+  commentator = {Kullenberg, Gunnar and Niskin, Shale Jack},
 }
 
 @InProceedings{ICUS13:C05:G03:S03,
@@ -773,7 +773,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C05:G04:S03,
   crossref = {ICUS13},
   title = {Ocean tunnel and highway},
-  author = {Machida, Yutaka},
+  author = {Mochida, Yutaka},
   commentator = {Melamed, Avraham},
 }
 
@@ -788,7 +788,7 @@ icus.data Data Version 0.9.2
   title = {Spirit and Science: Imaginary and Reality},
   level = {2},
   editorctype={organizer},
-  editorc = {Charon, Jean E.},
+  editorc = {Charon, Jean Émile},
 }
 
 @Set{ICUS13:C06:G01,
@@ -811,13 +811,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C06:G01:S02,
   crossref = {ICUS13},
   title = {Biological bases on reality and imaginary},
-  author = {Delgado, Jose M. R.},
+  author = {Delgado, José Manuel Rodríguez},
 }
 
 @InProceedings{ICUS13:C06:G01:S03,
   crossref = {ICUS13},
   title = {The paradox of values},
-  author = {Cousineau, Diane},
+  author = {{Cousineau Brutsche}, Diane},
 }
 
 
@@ -837,13 +837,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C06:G02:S01,
   crossref = {ICUS13},
   title = {Universal relativity: meditation, mind and matter},
-  author = {Gangadean, Ashok K.},
+  author = {Gangadean, Ashok Kumar},
 }
 
 @InProceedings{ICUS13:C06:G02:S02,
   crossref = {ICUS13},
   title = {The search of the lost reality},
-  author = {Lerede, Jean},
+  author = {Lerède, Jean},
 }
 
 
@@ -862,7 +862,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C06:G03:S01,
   crossref = {ICUS13},
   title = {Imaginary and reality in complex relativity},
-  author = {Charon, Jean E.},
+  author = {Charon, Jean Émile},
 }
 
 @InProceedings{ICUS13:C06:G03:S02,
@@ -874,7 +874,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C06:G03:S03,
   crossref = {ICUS13},
   title = {Externalization of knowledge and the humanization of man},
-  author = {Wojciechowski, Jerzy A.},
+  author = {Wojciechowski, Jerzy Antoni},
 }
 
 
@@ -938,7 +938,7 @@ icus.data Data Version 0.9.2
   title = {The Search for Global Ideology},
   level = {2},
   editorctype={organizer},
-  editorc = {Sontag, Frederick E. and Mavrodes, George I. and Sharkey, Paul W.},
+  editorc = {Sontag, Frederick Earl and Mavrodes, George I. and Sharkey, Paul W.},
 }
 
 @Set{ICUS13:C07:G01,
@@ -955,7 +955,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C07:G01:S01,
   crossref = {ICUS13},
   title = {Responses to questions on unification thought},
-  author = {Lee, Sang Hun},
+  author = {Lee, Sang-Hun},
 }
 
 @InProceedings{ICUS13:C07:G01:S02,
@@ -967,7 +967,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C07:G01:S03,
   crossref = {ICUS13},
   title = {Towards a general theory of education in unification thought},
-  author = {Chaves, Eduardo O. C.},
+  author = {Chaves, Eduardo Oscar de Campos},
 }
 
 
@@ -1011,19 +1011,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C07:G03:S01,
   crossref = {ICUS13},
   title = {Must we become relativists?},
-  author = {Wallner, Friedrich},
+  author = {Wallner, Friedrich G.},
 }
 
 @InProceedings{ICUS13:C07:G03:S02,
   crossref = {ICUS13},
   title = {Philosophy of culture in unification thought},
-  author = {Woo, Peter K. Y.},
+  author = {Woo, Peter Kun Yu},
 }
 
 @InProceedings{ICUS13:C07:G03:S03,
   crossref = {ICUS13},
   title = {Relation between ethics and religious belief},
-  author = {Reyes, Ramon C.},
+  author = {Reyes, Ramon Castillo},
 }
 
 
@@ -1067,12 +1067,12 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS13:C07:G05:S01,
   crossref = {ICUS13},
   title = {Reason and heart: a comparison between Hegel's philosophy and unification thought},
-  author = {Perry, Paul},
+  author = {Perry, Paul J.},
 }
 
 @InProceedings{ICUS13:C07:G05:S02,
   crossref = {ICUS13},
   title = {Philosophy East and West: unification or unity},
-  author = {Brunn, Emilie Zum},
+  author = {{Zum Brunn}, Emilie},
 }
 
