--- a/inst/extdata/icusbib-raw/icus15.bib
+++ b/inst/extdata/icusbib-raw/icus15.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -5,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS15,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Fifteenth International Conference on the Unity of the Sciences},
-  editora = {Mellanby, Kenneth and Weinberg, Alvin M. and King, Alexander},
+  editora = {Mellanby, Kenneth and Weinberg, Alvin Martin and King, Alexander},
   editoratype = {chairperson},
   shorttitle = {ICUS XV},
   eventdate = {1986-11-27/1986-11-30},
@@ -38,7 +40,7 @@ icus.data Data Version 0.9.2
   title = {Unifying Principles in the Science},
   level = {2},
   editorctype={organizer},
-  editorc = {Wigner, Eugene P. and Alonso, Marcelo},
+  editorc = {Wigner, Eugene Paul and Alonso, Marcelo},
 }
 
 @Set{ICUS15:C01:G01,
@@ -67,13 +69,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C01:G01:S03,
   crossref = {ICUS15},
   title = {Symmetry in art and nature},
-  author = {Atalay, Bulent I.},
+  author = {Atalay, Bülent},
 }
 
 @InProceedings{ICUS15:C01:G01:S04,
   crossref = {ICUS15},
   title = {(untitled discussion)},
-  author = {Covian, Miguel R. and Ellsaesser, Inge and Rau, Carl},
+  author = {Covian, Miguel Rolando and Ellsaesser, Inge and Rau, Carl},
 }
 
 
@@ -97,7 +99,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C01:G02:S02,
   crossref = {ICUS15},
   title = {Psychobiology of space and time},
-  author = {Delgado, Jose M. R.},
+  author = {Delgado, José Manuel Rodríguez},
 }
 
 @InProceedings{ICUS15:C01:G02:S03,
@@ -109,7 +111,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C01:G02:S04,
   crossref = {ICUS15},
   title = {(untitled discussion)},
-  author = {Marx, George and Lauikainen, K. V. and Victor {La Torre}},
+  author = {Marx, George and Laurikainen, Kalervo Vihtori and Latorre, Victor},
 }
 
 
@@ -139,13 +141,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C01:G03:S03,
   crossref = {ICUS15},
   title = {Energy in living systems},
-  author = {{Villee Jr}, Claude A.},
+  author = {Villee, Claude Alvin},
 }
 
 @InProceedings{ICUS15:C01:G03:S04,
   crossref = {ICUS15},
   title = {(untitled discussion)},
-  author = {Bauer, Mariano and Kurti, Nicholas and Otero, Efraim and Takeda, Shuzaburo},
+  author = {Bauer, Mariano and Kurti, Nicholas and {Otero Ruiz}, Efraim and Takeda, Shuzaburo},
 }
 
 
@@ -163,7 +165,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C01:G04:S01,
   crossref = {ICUS15},
   title = {The genesis of the concept of entropy},
-  author = {Higatsburger, Michael J.},
+  author = {Higatsberger, Michael J.},
 }
 
 @InProceedings{ICUS15:C01:G04:S02,
@@ -181,7 +183,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C01:G04:S04,
   crossref = {ICUS15},
   title = {(untitled discussion)},
-  author = {Romo, Luis A. and Sussmann, Georg and Reck, Andrew J.},
+  author = {{Romo Saltos}, Luis A. and Suessmann, Georg and Reck, Andrew Joseph},
 }
 
 
@@ -199,7 +201,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C01:G05:S01,
   crossref = {ICUS15},
   title = {Special discussion},
-  author = {{Georgescu-Roegen}, Nicholas and Pribram, Karl H. and Radnitzky, Gerard and {von Weizsacker}, C. F.},
+  author = {{Georgescu-Roegen}, Nicholas and
+  Pribram, Karl Harry and Radnitzky, Gerard and Weizsäcker, Carl Friedrich von},
 }
 
 
@@ -212,7 +215,7 @@ icus.data Data Version 0.9.2
   title = {The Value of Human Life},
   level = {2},
   editorctype={organizer},
-  editorc = {{Villee Jr}, Claude A. and Badham, Paul},
+  editorc = {Villee, Claude Alvin and Badham, Paul},
 }
 
 @Set{ICUS15:C02:G01,
@@ -230,14 +233,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS15},
   title = {The present state of research on pre-embryonic material},
   author = {Fishel, Simon},
-  commentator = {Trounson, Alan and Winston, Robert},
+  commentator = {Trounson, Alan O. and Winston, Robert Maurice Lipson},
 }
 
 @InProceedings{ICUS15:C02:G01:S02,
   crossref = {ICUS15},
   title = {The concept of ''person'' in American legal theory},
-  author = {Dougherty, Jude},
-  commentator = {Flew, Antony},
+  author = {Dougherty, Jude Patrick},
+  commentator = {Flew, Antony Garrard Newton},
 }
 
 
@@ -256,14 +259,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS15},
   title = {Birth control and the value of human life},
   author = {Kono, Shigemi},
-  commentator = {Cassell, Dieter},
+  commentator = {Cassel, Dieter},
 }
 
 @InProceedings{ICUS15:C02:G02:S02,
   crossref = {ICUS15},
   title = {How people argue about abortion and capital punishment in Europe and America and why},
   author = {Davies, Christie},
-  commentator = {Coughlan, Michael},
+  commentator = {Coughlan, Michael J.},
 }
 
 
@@ -281,8 +284,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C02:G03:S01,
   crossref = {ICUS15},
   title = {The high tech and the ''wanted life'' or ''whose life is it, anyway?''},
-  author = {Kittrie, Nicholas},
-  commentator = {Sundberg, Jacob},
+  author = {Kittrie, Nicholas Nehemiah},
+  commentator = {Sundberg, Jacob W. F.},
 }
 
 @InProceedings{ICUS15:C02:G03:S02,
@@ -307,7 +310,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C02:G04:S01,
   crossref = {ICUS15},
   title = {Hard choices: ethical questions raised by the birth of handicapped infants},
-  author = {Khuse, Helga},
+  author = {Kuhse, Helga},
   commentator = {Mori, Takahide and Akos, Karoly},
 }
 
@@ -341,7 +344,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS15},
   title = {Justified warfare and the relative value of human life},
   author = {Peter {Van den Dungen}},
-  commentator = {Brogger, Jan},
+  commentator = {Brøgger, Jan},
 }
 
 
@@ -360,7 +363,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS15},
   title = {Christian belief and the ethics of in vitro fertilisation and abortion},
   author = {Badham, Paul},
-  commentator = {Gaba, Christian},
+  commentator = {Gaba, Christian R.},
 }
 
 @InProceedings{ICUS15:C02:G06:S02,
@@ -380,7 +383,7 @@ icus.data Data Version 0.9.2
   title = {Toward Ecumenism in World Philosophy},
   level = {2},
   editorctype={organizer},
-  editorc = {Lee, Sang Hun and Foster, A. Durwood},
+  editorc = {Lee, Sang-Hun and Foster, A. Durwood},
 }
 
 @Set{ICUS15:C03:G01,
@@ -397,8 +400,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C03:G01:S01,
   crossref = {ICUS15},
   title = {The tradition of Advaita Vedanta},
-  author = {Balasubramanian, R.},
-  commentator = {Cousings, Ewert},
+  author = {Balasubramanian, Rajangam},
+  commentator = {Cousins, Ewert Hilary},
 }
 
 @InProceedings{ICUS15:C03:G01:S02,
@@ -429,8 +432,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C03:G02:S02,
   crossref = {ICUS15},
   title = {Ti'en T'ai Buddhism and the unity of knowledge},
-  author = {Chappell, David W.},
-  commentator = {Selover, Tom},
+  author = {Chappell, David Wellington},
+  commentator = {Selover, Thomas Whitfield},
 }
 
 
@@ -448,7 +451,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C03:G03:S01,
   crossref = {ICUS15},
   title = {The fusion of fact and value in Jamesean pragmatism},
-  author = {Kalupahana, David},
+  author = {Kalupahana, David J.},
   commentator = {Mullins, Philip},
 }
 
@@ -493,13 +496,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS15},
   title = {Simone de Beauvoir: a philosopher in dialogue},
   author = {Hansen, Linda},
-  commentator = {Bettis, Joseph},
+  commentator = {Bettis, Joseph Dabney},
 }
 
 @InProceedings{ICUS15:C03:G05:S02,
   crossref = {ICUS15},
   title = {H. Richard Niebuhr's radical monotheism as a ''world theology''},
-  author = {Kliever, Lonnie},
+  author = {Kliever, Lonnie D.},
   commentator = {Gelwick, Richard},
 }
 
@@ -519,13 +522,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS15},
   title = {Jacques Derrida: the dominance of unity},
   author = {Bolin, Nona R.},
-  commentator = {Scharlemann, Robert P.},
+  commentator = {Scharlemann, Robert Paul},
 }
 
 @InProceedings{ICUS15:C03:G06:S02,
   crossref = {ICUS15},
   title = {Unification thought},
-  author = {Shimmyo, Theodore},
+  author = {Shimmyo, Theodore Tadaaki},
   commentator = {Singh, Avtar},
 }
 
@@ -539,7 +542,7 @@ icus.data Data Version 0.9.2
   title = {The Relationship Between Science and the Arts and its Relevance to Cultural Transformation},
   level = {2},
   editorctype={organizer},
-  editorc = {Gerholm, Tor Ragnor and Goldsmith, Maurice},
+  editorc = {Gerholm, Tor Ragnar and Goldsmith, Maurice},
 }
 
 @Set{ICUS15:C04:G01,
@@ -610,7 +613,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C04:G03:S02,
   crossref = {ICUS15},
   title = {Music vs. science: the contemporary quest for the unity of musical time},
-  author = {Charles, Daniel},
+  author = {Charles, Daniel Paul},
 }
 
 
@@ -628,7 +631,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C04:G04:S01,
   crossref = {ICUS15},
   title = {Art and its new interface},
-  author = {Berger, Rene},
+  author = {Berger, René},
 }
 
 @InProceedings{ICUS15:C04:G04:S02,
@@ -737,7 +740,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS15},
   title = {Water for development in Africa},
   author = {Obeng, Letitia},
-  commentator = {MacKinnon, John},
+  commentator = {MacKinnon, John Ramsay},
 }
 
 
@@ -755,13 +758,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C05:G03:S01,
   crossref = {ICUS15},
   title = {Deserts in Africa},
-  author = {Ghabbour, Samir L.},
+  author = {Ghabbour, Samir Ibrahim},
 }
 
 @InProceedings{ICUS15:C05:G03:S02,
   crossref = {ICUS15},
   title = {The illegal trade in rhinoceros horn in Africa},
-  author = {Martin, Esmond B.},
+  author = {Martin, Esmond Bradley},
   commentator = {Capone, Donald L.},
 }
 
@@ -806,14 +809,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C05:G05:S01,
   crossref = {ICUS15},
   title = {The problems of women in Egypt},
-  author = {Effat, Ragia M.},
+  author = {Effat, Ragia Mohamed},
 }
 
 @InProceedings{ICUS15:C05:G05:S02,
   crossref = {ICUS15},
   title = {African women: their health and their future},
   author = {Thompson, Joyce E.},
-  commentator = {Ohin, Alexandre},
+  commentator = {Ohin, Alexandre J.},
 }
 
 
@@ -831,7 +834,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C05:G06:S01,
   crossref = {ICUS15},
   title = {Education in developing Africa: an assessment of post-independence achievements and problems},
-  author = {Ishumi, Abel G.},
+  author = {Ishumi, Abel G. M.},
   commentator = {Toyoda, Toshio and Abouegl, M. I.},
 }
 
@@ -839,7 +842,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS15},
   title = {Problems of Africa today: the waterpot on the woman's head or automation?},
   author = {Wanekaya, Alice N.},
-  commentator = {Ishumi, Abel G.},
+  commentator = {Ishumi, Abel G. M.},
 }
 
 
@@ -857,21 +860,21 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C05:G07:S01,
   crossref = {ICUS15},
   title = {Political impediments to development in southern Africa},
-  author = {Roy, William Theo},
+  author = {Roy, William Theodore},
   commentator = {Oosthuizen, Gerhard},
 }
 
 @InProceedings{ICUS15:C05:G07:S02,
   crossref = {ICUS15},
   title = {On the relative fitness of democracy and communism in their rivalry in the third world},
-  author = {Andreski, Stanislaz},
+  author = {Andreski, Stanislav},
   commentator = {Hiskett, Mervyn},
 }
 
 @InProceedings{ICUS15:C05:G07:S03,
   crossref = {ICUS15},
   title = {Refugees in Africa},
-  author = {Greenfield, Richard D.},
+  author = {Greenfield, Richard David},
   commentator = {Unwin, Thomas},
 }
 
@@ -902,8 +905,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C06:G01:S01,
   crossref = {ICUS15},
   title = {The human psyche: perspective from the East},
-  author = {Jordens, Joseph T. F.},
-  commentator = {Ellison, Arthur J.},
+  author = {Jordens, Joseph Teresa Florent},
+  commentator = {Ellison, Arthur James},
 }
 
 
@@ -928,7 +931,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C06:G02:S02,
   crossref = {ICUS15},
   title = {Qi thought of the Orient},
-  author = {Lee, Hang Nyong},
+  author = {Lee, Hang-Nyong},
   commentator = {Miyuki, Mokusen},
 }
 
@@ -966,15 +969,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C06:G04:S01,
   crossref = {ICUS15},
   title = {Techne and Qi: West encountering East},
-  author = {Flinn, Frank},
-  commentator = {Lagmay, Alfredo},
+  author = {Flinn, Frank K.},
+  commentator = {Lagmay, Alfredo Villagracia},
 }
 
 @InProceedings{ICUS15:C06:G04:S02,
   crossref = {ICUS15},
   title = {''The mechanistic clock and the dancing shiva'' (Reconciling Eastern and Western approaches to knowledge)},
   author = {Skolimowski, Henryk},
-  commentator = {Lagmay, Leticia},
+  commentator = {Lagmay, Leticia Amante},
 }
 
 
@@ -999,8 +1002,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C06:G05:S02,
   crossref = {ICUS15},
   title = {The Chinese theory of Qi and modern science},
-  author = {Pei, Wu Huan},
-  commentator = {Kim, Yong Woon},
+  author = {Pei, Wu-Huan},
+  commentator = {Kim, Yong-un},
 }
 
 
@@ -1033,7 +1036,7 @@ icus.data Data Version 0.9.2
   title = {Global 2000 Revisited: Reassessing Man's Impact on Spaceship Earth},
   level = {2},
   editorctype={organizer},
-  editorc = {Singer, S. Fred and Ellsaesser, Hugh},
+  editorc = {Singer, Siegfried Fred and Ellsaesser, Hugh},
 }
 
 @Set{ICUS15:C07:G01,
@@ -1057,7 +1060,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS15},
   title = {Study of changes of paleo-coastal environment of Fujian (Southeast China) caused by sea-level variations},
   author = {Lin, David K.},
-  commentator = {Sun, Heng Lun},
+  commentator = {Sun, Heng-Lun},
 }
 
 
@@ -1082,14 +1085,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C07:G02:S02,
   crossref = {ICUS15},
   title = {Importance of biogeochemical processes and weathering for Norwegian streamwater chemistry},
-  author = {Rosenqvist, Ivan Th.},
+  author = {Rosenqvist, Ivan Thoralf},
   commentator = {Komaki, Hisatoki},
 }
 
 @InProceedings{ICUS15:C07:G02:S03,
   crossref = {ICUS15},
   title = {Our present understanding of acid rain},
-  author = {Schindler, D. W.},
+  author = {Schindler, David W.},
 }
 
 
@@ -1107,14 +1110,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C07:G03:S01,
   crossref = {ICUS15},
   title = {Forest conservation in tropical Asia: the individual dimension},
-  author = {Brockelman, Warren},
-  commentator = {Clawson, Marion},
+  author = {Brockelman, Warren Y.},
+  commentator = {Clawson, Robert Marion},
 }
 
 @InProceedings{ICUS15:C07:G03:S02,
   crossref = {ICUS15},
   title = {Affluence versus effluents - marine water pollution control in the USA and in developing countries},
-  author = {Ludwig, Harvey},
+  author = {Ludwig, Harvey F.},
   commentator = {Bascom, Willard},
 }
 
@@ -1133,7 +1136,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C07:G04:S01,
   crossref = {ICUS15},
   title = {Hormesis and nurture with ionizing radiation},
-  author = {Luckey, T. Don},
+  author = {Luckey, Thomas Donnell},
   commentator = {Kato, Hiroo and Liu, Shu-Zheng},
 }
 
@@ -1165,7 +1168,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C07:G05:S02,
   crossref = {ICUS15},
   title = {Replacements for fossil fuels and comparative environmental impacts},
-  author = {Mills, Mark},
+  author = {Mills, Mark P.},
 }
 
 
@@ -1183,7 +1186,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS15:C07:G06:S01,
   crossref = {ICUS15},
   title = {Cancer: a result of incidental exposure or of senescence, or of both?},
-  author = {Totter, John R.},
+  author = {Totter, John Randolph},
   commentator = {Gori, Gio Batta},
 }
 
@@ -1191,7 +1194,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS15},
   title = {Managing toxic materials: bio-ethical perspective},
   author = {Maxey, Margaret N.},
-  commentator = {Dunn, James R.},
+  commentator = {Dunn, James Robert},
 }
 
 
