--- a/inst/extdata/icusbib-raw/icus18.bib
+++ b/inst/extdata/icusbib-raw/icus18.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -5,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS18,
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Eighteenth International Conference on the Unity of the Sciences},
-  editora = {Weinberg, Alvin M. and Higatsberger, Michael and Gerholm, Tor Ragnar and Yoon, Se Won},
+  editora = {Weinberg, Alvin Martin and Higatsberger, Michael J. and Gerholm, Tor Ragnar and Yoon, Se-won},
   editoratype = {chairperson},
   shorttitle = {ICUS XVIII},
   eventdate = {1991-08-23/1991-08-26},
@@ -21,13 +23,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:P01,
   crossref = {ICUS18},
   title = {East-West Discussion of the Public Perception of Science},
-  author = {Kapitza, Serguel P.},
+  author = {Kapitza, Sergeĭ Petrovich},
 }
 
 @InProceedings{ICUS18:P02,
   crossref = {ICUS18},
   title = {Unity and Harmony of Science},
-  author = {Yoon, Se Won},
+  author = {Yoon, Se-won},
 }
 
 
@@ -62,13 +64,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C01:G01:S02,
   crossref = {ICUS18},
   title = {Is there an ultimate goal to the whole process of cosmic evolution?},
-  author = {Papagiannis, Michael d.},
+  author = {Papagiannis, Michael Demetrius},
 }
 
 @InProceedings{ICUS18:C01:G01:S03,
   crossref = {ICUS18},
   title = {Chaos beyond our cosmological quest},
-  author = {Chou, Kyong-Chul},
+  author = {Chou, Kyong-Chol},
 }
 
 @InProceedings{ICUS18:C01:G01:S04,
@@ -144,7 +146,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C01:G04:S02,
   crossref = {ICUS18},
   title = {On pathological science},
-  author = {Fleming, James R.},
+  author = {Fleming, James Rodger},
   commentator = {Wickramasinghe, Nalin Chandra},
 }
 
@@ -163,14 +165,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C01:G05:S01,
   crossref = {ICUS18},
   title = {Limits on science for policy and policy for science},
-  author = {Weinberg, Alvin M.},
+  author = {Weinberg, Alvin Martin},
 }
 
 @InProceedings{ICUS18:C01:G05:S02,
   crossref = {ICUS18},
   title = {Policy consequences of the limits of science},
   author = {Holmfeld, John},
-  commentator = {LePair, Cornelius},
+  commentator = {Le Pair, Cornelius},
 }
 
 
@@ -202,7 +204,7 @@ icus.data Data Version 0.9.2
   title = {Agricultural Genetic Engineering and Society},
   level = {2},
   editorctype={organizer},
-  editorc = {{Villee Jr}, Claude A.},
+  editorc = {Villee, Claude Alvin and Pimentel, David},
 }
 
 @Set{ICUS18:C02:G01,
@@ -220,7 +222,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS18},
   title = {Genetic engineering within the biosphere: hierarchical levels and values},
   author = {Giampietro, Mario},
-  commentator = {Han, Moon Hi},
+  commentator = {Han, Moon-Hi},
 
 }
 
@@ -228,7 +230,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS18},
   title = {The history and limits of genetic engineering},
   author = {Wells, Jonathan},
-  commentator = {Han, Moon Hi},
+  commentator = {Han, Moon-Hi},
 }
 
 
@@ -246,15 +248,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C02:G02:S01,
   crossref = {ICUS18},
   title = {Genetic engineering and energy efficiency in human food systems},
-  author = {Dazhong, Wen},
-  commentator = {Paoletti, Maurizio},
+  author = {Wen, Dazhong},
+  commentator = {Paoletti, Maurizio Guido},
 }
 
 @InProceedings{ICUS18:C02:G02:S02,
   crossref = {ICUS18},
   title = {Environmental and agricultural risks of gene transfer between species},
   author = {Mellanby, Kenneth},
-  commentator = {Post, Stephen G.},
+  commentator = {Post, Stephen Garrard},
 }
 
 
@@ -273,7 +275,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS18},
   title = {Genetic engineering, possible, plausible and probable pathways for environmental protection},
   author = {Stanhill, Gerald},
-  commentator = {Post, Stephen G.},
+  commentator = {Post, Stephen Garrard},
 }
 
 @InProceedings{ICUS18:C02:G03:S02,
@@ -306,7 +308,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS18},
   title = {Biological control of pests employing the new r-DNA technology},
   author = {Hokkanen, Heikki M. T.},
-  commentator = {Paoletti, Maurizio},
+  commentator = {Paoletti, Maurizio Guido},
 }
 
 
@@ -350,8 +352,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C02:G06:S01,
   crossref = {ICUS18},
   title = {Biodiversity and biotechnology in agriculture},
-  author = {Stachow, Ulrich E.},
-  commentator = {Paolette, Maurizio},
+  author = {Stachow, Ulrich},
+  commentator = {Paoletti, Maurizio Guido},
 }
 
 @InProceedings{ICUS18:C02:G06:S02,
@@ -371,7 +373,7 @@ icus.data Data Version 0.9.2
   title = {Nationalism and World Unity: Educating for the 21st Century},
   level = {2},
   editorctype={organizer},
-  editorc = {Schleicher, Klaus and Kozma, Tamas},
+  editorc = {Schleicher, Klaus and Kozma, Tamás},
 }
 
 @Set{ICUS18:C03:G01,
@@ -406,7 +408,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C03:G02:S01,
   crossref = {ICUS18},
   title = {Nationalism and internationalism - a need for balanced identities (a political science perspective)},
-  author = {Ruegg, Walter H.},
+  author = {Ruegg, Walter Heinrich},
 }
 
 @InProceedings{ICUS18:C03:G02:S02,
@@ -418,7 +420,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C03:G02:S03,
   crossref = {ICUS18},
   title = {The national in the international: contradictions of North American relations and scholarly communication (an educational perspective)},
-  author = {Lawson, Robert F.},
+  author = {Lawson, Robert Frederic},
 }
 
 @InProceedings{ICUS18:C03:G02:S04,
@@ -447,13 +449,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C03:G03:S02,
   crossref = {ICUS18},
   title = {Meeting the various ethnic, cultural, and national requirements in the sphere of education: state policy of the Soviet Union in the sphere of education, practical implementation in the past and at present},
-  author = {Shadrikov, Vladimir D.},
+  author = {Shadrikov, Vladimir Dmitrievich},
 }
 
 @InProceedings{ICUS18:C03:G03:S03,
   crossref = {ICUS18},
   title = {The practice of nationalism and internationalism in education: the case of Korea and Japan},
-  author = {Kim, Jongshol},
+  author = {Kim, Jong-Chol},
 }
 
 @InProceedings{ICUS18:C03:G03:S04,
@@ -477,7 +479,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C03:G04:S01,
   crossref = {ICUS18},
   title = {Nationalism and regionalism in South America: implications and consequences for education},
-  author = {Romo, Luis A.},
+  author = {{Romo Saltos}, Luis A.},
 }
 
 @InProceedings{ICUS18:C03:G04:S02,
@@ -531,13 +533,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C03:G05:S02,
   crossref = {ICUS18},
   title = {Japan: case study on Japanese educational nationalism},
-  author = {Nishimura, Shun-ichi},
+  author = {Nishimura, Shun'ichi},
 }
 
 @InProceedings{ICUS18:C03:G05:S03,
   crossref = {ICUS18},
   title = {Session IV discussant},
-  author = {Kim, Tae Chang},
+  author = {Kim, Tae-Chang},
 }
 
 
@@ -555,7 +557,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C03:G06:S01,
   crossref = {ICUS18},
   title = {Egypt: nationalism and world unity: educating for the 21st century, the case of the Arab world},
-  author = {Mina, Fayez M.},
+  author = {Mina, Fayez Mourad},
 }
 
 @InProceedings{ICUS18:C03:G06:S02,
@@ -567,13 +569,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C03:G06:S03,
   crossref = {ICUS18},
   title = {Hungary: the revival of conservative nationalism: Hungary and Eastern Europe},
-  author = {Kozma, Tamas},
+  author = {Kozma, Tamás},
 }
 
 @InProceedings{ICUS18:C03:G06:S04,
   crossref = {ICUS18},
   title = {Session V discussant},
-  author = {Beauchamp, Edward R.},
+  author = {Beauchamp, Edward Robert},
 }
 
 
@@ -591,7 +593,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C03:G07:S01,
   crossref = {ICUS18},
   title = {Bulgaria: nationalism and education: the case of Bulgaria},
-  author = {Behar, Nansen},
+  author = {Behar, Nansen Alfred},
 }
 
 @InProceedings{ICUS18:C03:G07:S02,
@@ -609,7 +611,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C03:G07:S04,
   crossref = {ICUS18},
   title = {Session VI discussion},
-  author = {Kozma, Tamas},
+  author = {Kozma, Tamás},
 }
 
 
@@ -627,7 +629,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C03:G08:S01,
   crossref = {ICUS18},
   title = {Nationalism in education: a comparative view},
-  author = {Kozma, Tamas},
+  author = {Kozma, Tamás},
 }
 
 
@@ -690,8 +692,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C04:G02:S02,
   crossref = {ICUS18},
   title = {U.S. Hispanics and their families: a sociocultural portrait},
-  author = {Soriano, Fernando L.},
-  commentator = {Armando {de la Torre}},
+  author = {Soriano, Fernando I.},
+  commentator = {Torre, Armando de la},
 }
 
 
@@ -710,7 +712,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS18},
   title = {Families of the fourth world: ideological similarities and structural convergences},
   author = {Staples, Robert},
-  commentator = {Jerome, Norge},
+  commentator = {Jerome, Norge Winifred},
 }
 
 @InProceedings{ICUS18:C04:G03:S02,
@@ -742,7 +744,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C04:G04:S02,
   crossref = {ICUS18},
   title = {Persistent family functions and social harmony through creative education},
-  author = {Bardis, Panos D.},
+  author = {Bardis, Panos Demetrios},
   commentator = {Scott, A. Kieran},
 }
 
@@ -788,7 +790,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS18},
   title = {The Impact of Immigration on Hispanic Families},
   author = {Sotomayor, Marta},
-  commentator = {Armando {de la Torre}},
+  commentator = {Torre, Armando de la},
 }
 
 
@@ -842,7 +844,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C05:G02:S02,
   crossref = {ICUS18},
   title = {Neurobiological basis of time and consciousness},
-  author = {Rakic, Ljubisa},
+  author = {Rakic, Ljubisav M.},
 }
 
 @InProceedings{ICUS18:C05:G02:S03,
@@ -854,7 +856,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C05:G02:S04,
   crossref = {ICUS18},
   title = {Session I discussion},
-  author = {{Dy Jr}, Manuel B. and Lagmay, Alfredo and Quadens, Olga},
+  author = {{Dy Jr}, Manuel B. and Lagmay, Alfredo Villagracia and Quadens, Olga},
   commentator = {},
 }
 
@@ -879,19 +881,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C05:G03:S02,
   crossref = {ICUS18},
   title = {Time in physics and time in awareness},
-  author = {Sudarsham, E. C. George},
+  author = {Sudarshan, Ennackel Chandy George},
 }
 
 @InProceedings{ICUS18:C05:G03:S03,
   crossref = {ICUS18},
   title = {Substitutional relationships between energy, time and information},
-  author = {Spreng, Daniel},
+  author = {Spreng, Daniel Theodor},
 }
 
 @InProceedings{ICUS18:C05:G03:S04,
   crossref = {ICUS18},
   title = {Session II discussion},
-  author = {Pincheira, Guido and Gerholm, Tor Ragnar and Park, Choong-suh},
+  author = {Pincheira, Guido and Gerholm, Tor Ragnar and Park, Choong-Suh},
 }
 
 
@@ -915,19 +917,19 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C05:G04:S02,
   crossref = {ICUS18},
   title = {The Japanese view of time},
-  author = {Nagasaka, Francis G.},
+  author = {Nagasaka, Francis Gen-ichiro},
 }
 
 @InProceedings{ICUS18:C05:G04:S03,
   crossref = {ICUS18},
   title = {Some basic metaphors of time: contextualizing the Buddhist perspectives on temporality},
-  author = {{de Silva}, M. W. Padmasiri},
+  author = {{De Silva}, Padmasiri},
 }
 
 @InProceedings{ICUS18:C05:G04:S04,
   crossref = {ICUS18},
   title = {Discussion},
-  author = {Guerra, Anthony and Sudarshan, E. C. George and Bytchikhina, Luba},
+  author = {Guerra, Anthony J. and Sudarshan, Ennackel Chandy George and {Zubkova (Bytchikhina)}, Luba},
 }
 
 
@@ -945,13 +947,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C05:G05:S01,
   crossref = {ICUS18},
   title = {Music, poetry and zero time},
-  author = {Charles, Daniel},
+  author = {Charles, Daniel Paul},
 }
 
 @InProceedings{ICUS18:C05:G05:S02,
   crossref = {ICUS18},
   title = {Coming to terms with time: the case of the visual arts in India},
-  author = {Goswamy, B. N.},
+  author = {Goswamy, Brijinder Nath},
 }
 
 @InProceedings{ICUS18:C05:G05:S03,
@@ -981,7 +983,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C05:G06:S01,
   crossref = {ICUS18},
   title = {The unification view of time},
-  author = {Guerra, Anthony},
+  author = {Guerra, Anthony J.},
 }
 
 @InProceedings{ICUS18:C05:G06:S02,
@@ -993,13 +995,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C05:G06:S03,
   crossref = {ICUS18},
   title = {The arrow and the cycle},
-  author = {Emilie {Zum Brunn}},
+  author = {{Zum Brunn}, Emilie},
 }
 
 @InProceedings{ICUS18:C05:G06:S04,
   crossref = {ICUS18},
   title = {Discussion},
-  author = {Murray, Priscilla and Bryant, M. Darrol and {de Silva}, M. W. Padmasiri},
+  author = {Murray, Priscilla and Bryant, Marcus Darrol and {De Silva}, Padmasiri},
 }
 
 
@@ -1030,7 +1032,7 @@ icus.data Data Version 0.9.2
   title = {Unification Thought and the Global Transformation of Consciousness},
   level = {2},
   editorctype={organizer},
-  editorc = {Lee, Sang Hun and Rubenstein, Richard L.},
+  editorc = {Lee, Sang-Hun and Rubenstein, Richard L.},
 }
 
 @Set{ICUS18:C06:G01,
@@ -1047,15 +1049,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C06:G01:S01,
   crossref = {ICUS18},
   title = {Original image},
-  author = {Sontag, Frederick},
-  commentator = {Tanabe, Jennifer},
+  author = {Sontag, Frederick Earl},
+  commentator = {Tanabe, Jennifer P.},
 }
 
 @InProceedings{ICUS18:C06:G01:S02,
   crossref = {ICUS18},
   title = {Ontology - Creation in the context of an evolutionary world view: a juxtaposition of the Christian idea of continual creation and unification principles},
   author = {Rohmann, Klaus},
-  commentator = {Wilson, Andrew},
+  commentator = {Wilson, Andrew Murray},
 }
 
 
@@ -1073,15 +1075,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C06:G02:S01,
   crossref = {ICUS18},
   title = {Human nature - human being and being human},
-  author = {Roth, John K.},
-  commentator = {Seidel, Dietrich},
+  author = {Roth, John King},
+  commentator = {Seidel, Dietrich Friedmar},
 }
 
 @InProceedings{ICUS18:C06:G02:S02,
   crossref = {ICUS18},
   title = {Epistemology},
-  author = {Harrison, Frank R. III},
-  commentator = {Tanabe, Jennifer},
+  author = {{Harrison III}, Frank R.},
+  commentator = {Tanabe, Jennifer P.},
 }
 
 
@@ -1099,15 +1101,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C06:G03:S01,
   crossref = {ICUS18},
   title = {Logic - the logic of unification thought},
-  author = {Flew, Antony},
-  commentator = {Carlson, David},
+  author = {Flew, Antony Garrard Newton},
+  commentator = {Carlson, David Allen},
 }
 
 @InProceedings{ICUS18:C06:G03:S02,
   crossref = {ICUS18},
   title = {History - the meaning and purpose of history},
   author = {Sass, Hans-Martin},
-  commentator = {Mickler, Michael},
+  commentator = {Mickler, Michael L.},
 }
 
 
@@ -1125,15 +1127,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS18:C06:G04:S01,
   crossref = {ICUS18},
   title = {Axiology - a critical examination of Dr. Sang Hun Lee's unification axiology},
-  author = {James, Gene},
-  commentator = {Carlson, David},
+  author = {James, Gene G.},
+  commentator = {Carlson, David Allen},
 }
 
 @InProceedings{ICUS18:C06:G04:S02,
   crossref = {ICUS18},
   title = {Education - education and the global transformation of consciousness},
   author = {Courtney, Charles},
-  commentator = {Wilson, Andrew},
+  commentator = {Wilson, Andrew Murray},
 }
 
 
@@ -1152,7 +1154,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS18},
   title = {Asthetic theory - unification aesthetics},
   author = {Rubenstein, Betty Rogers},
-  commentator = {Seidel, Dietrich},
+  commentator = {Seidel, Dietrich Friedmar},
 }
 
 @InProceedings{ICUS18:C06:G05:S02,
@@ -1178,14 +1180,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS18},
   title = {Philosophical methodology},
   author = {Kelsay, John},
-  commentator = {Shimmyo, Theodore},
+  commentator = {Shimmyo, Theodore Tadaaki},
 }
 
 @InProceedings{ICUS18:C06:G06:S02,
   crossref = {ICUS18},
   title = {Critique of Marxism - from cold war ideology to global praxis: the unification critique of Marxism},
-  author = {Garrett, William R.},
-  commentator = {Mickler, Michael},
+  author = {Garrett, William Robertson},
+  commentator = {Mickler, Michael L.},
 }
 
 
