--- a/inst/extdata/icusbib-raw/icus19.bib
+++ b/inst/extdata/icusbib-raw/icus19.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.9.3
+2024-02-06 Standardize names on VIAF
 icus.data Data Version 0.9.2
 2024-01-31 Add editora and editoratype fields to Proceedings 
   entry for conference chairpersons
@@ -5,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS19,
   title = {Absolute Values and the New World Order},
   titleaddon = {Nineteenth International Conference on the Unity of the Sciences},
-  editora = {Gerholm, Tor Ragnar and Pincheira, Guido and Yoon, Se Won},
+  editora = {Gerholm, Tor Ragnar and Pincheira, Guido and Yoon, Se-won},
   editoratype = {chairperson},
   shorttitle = {ICUS XIX},
   eventdate = {1992-08-19/1992-08-22},
@@ -21,7 +23,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:P01,
   crossref = {ICUS19},
   title = {Social Institutions and Nuclear Energy II},
-  author = {Weinberg, Alvin M.},
+  author = {Weinberg, Alvin Martin},
 }
 
 @InProceedings{ICUS19:P02,
@@ -45,7 +47,7 @@ icus.data Data Version 0.9.2
   title = {The Nuclear Option in the Past, Present and in the Future},
   level = {2},
   editorctype={organizer},
-  editorc = {Weinberg, Alvin M. and Higatsberger, Michael J.},
+  editorc = {Weinberg, Alvin Martin and Higatsberger, Michael J.},
 }
 
 @Set{ICUS19:C01:G01,
@@ -63,7 +65,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {A promise unfulfilled},
   author = {Cohen, Karl P.},
-  commentator = {Weinberg, Alvin M. and Gerholm, Tor Ragnar}
+  commentator = {Weinberg, Alvin Martin and Gerholm, Tor Ragnar}
 }
 
 
@@ -93,7 +95,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C01:G02:S03,
   crossref = {ICUS19},
   title = {Fear, trust and the future of nuclear power},
-  author = {Hettema, Jack},
+  author = {Hettema, John (Jack)},
 }
 
 @InProceedings{ICUS19:C01:G02:S04,
@@ -117,7 +119,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C01:G03:S01,
   crossref = {ICUS19},
   title = {Safety of nuclear power plants in Bulgaria and East-European countries?},
-  author = {Ovtcharov, Roumen},
+  author = {Ovtcharov, Rumen},
 }
 
 @InProceedings{ICUS19:C01:G03:S02,
@@ -135,7 +137,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C01:G03:S04,
   crossref = {ICUS19},
   title = {Session discussion},
-  author = {Atalay, Bulent I.},
+  author = {Atalay, Bülent},
 }
 
 
@@ -159,13 +161,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C01:G04:S02,
   crossref = {ICUS19},
   title = {Lesson of Chernobyl: psychological and social aspects},
-  author = {Kapitza, Sergui},
+  author = {Kapitza, Sergeĭ Petrovich},
 }
 
 @InProceedings{ICUS19:C01:G04:S03,
   crossref = {ICUS19},
   title = {Session discussion},
-  author = {Zebrowski, Edwin L.},
+  author = {Zebroski, Edwin Leopold},
 }
 
 
@@ -184,7 +186,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {Implications of the 1990 recommendations of the ICRP},
   author = {Lim, Yong-Kyu},
-  commentator = {Radkowsky, Annette and Sinclair, Warren K.}
+  commentator = {Radkowsky, Annette Eisenberg and Sinclair, Warren Keith}
 }
 
 
@@ -203,7 +205,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {Nuclear proliferation: past, present and future},
   author = {Alonso, Marcelo},
-  commentator = {Zaleski, Pierre},
+  commentator = {Zaleski, Casimir Pierre},
 }
 
 
@@ -233,15 +235,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C02:G01:S01,
   crossref = {ICUS19},
   title = {Negotiating virtue: families and mass media},
-  author = {Cofer, Lynette Friedrich},
+  author = {Friedrich-Cofer, Lynette},
   commentator = {Spring, Anita}
 }
 
 @InProceedings{ICUS19:C02:G01:S02,
   crossref = {ICUS19},
   title = {Transforming the self, transforming the family},
-  author = {Jimenez, Maria C. C.},
-  commentator = {Sotomayer, Marta}
+  author = {Jimenez, Maria Carmen C.},
+  commentator = {Sotomayor, Marta}
 }
 
 
@@ -293,7 +295,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {Caregiving: empowerment for community problem solving},
   author = {Sotomayer, Marta},
-  commentator = {Armando {de la Torre}}
+  commentator = {Torre, Armando de la}
 }
 
 
@@ -318,7 +320,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C02:G04:S02,
   crossref = {ICUS19},
   title = {Strategies for empowering the African-American family},
-  author = {Tucker, Carolyn},
+  author = {Tucker, Carolyn M.},
   commentator = {Pogue, Delores}
 }
 
@@ -338,14 +340,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {Support systems for rural families in the United States: rationale, strategies, and examples},
   author = {Thurston, Linda P.},
-  commentator = {Cofer, Lynette Friedrich}
+  commentator = {Friedrich-Cofer, Lynette}
 }
 
 @InProceedings{ICUS19:C02:G05:S02,
   crossref = {ICUS19},
   title = {The home as workplace: family, dilemmas and policy solutions},
   author = {Weidemann, C. Jean and Weidemann, Wesley},
-  commentator = {Jerome, Norge Wilifried}
+  commentator = {Jerome, Norge Winifred}
 }
 
 
@@ -364,7 +366,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {Religious systems and the family: strategies and programs for empowerment},
   author = {Winings, Kathy},
-  commentator = {Armando {de la Torre}}
+  commentator = {Torre, Armando de la}
 }
 
 
@@ -377,7 +379,7 @@ icus.data Data Version 0.9.2
   title = {Theoria and Praxis in Unification Thought},
   level = {2},
   editorctype={organizer},
-  editorc = {Lee, Sang Hun and Rubenstein, Richard L.},
+  editorc = {Lee, Sang-Hun and Rubenstein, Richard L.},
 }
 
 @Set{ICUS19:C03:G01,
@@ -395,14 +397,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {Original image},
   author = {Berenbaum, Michael},
-  commentator = {Wilson, Andrew}
+  commentator = {Wilson, Andrew Murray}
 }
 
 @InProceedings{ICUS19:C03:G01:S02,
   crossref = {ICUS19},
   title = {Ontology},
   author = {Foster, A. Durwood},
-  commentator = {Shimmyo, Theodore}
+  commentator = {Shimmyo, Theodore Tadaaki}
 }
 
 
@@ -420,15 +422,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C03:G02:S01,
   crossref = {ICUS19},
   title = {Original human nature},
-  author = {Roth, John},
-  commentator = {Carlson, David}
+  author = {Roth, John King},
+  commentator = {Carlson, David Allen}
 }
 
 @InProceedings{ICUS19:C03:G02:S02,
   crossref = {ICUS19},
   title = {Axiology},
-  author = {James, Gene},
-  commentator = {Ward, Thomas J.}
+  author = {James, Gene G.},
+  commentator = {Ward, Thomas Joseph}
 }
 
 
@@ -446,15 +448,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C03:G03:S01,
   crossref = {ICUS19},
   title = {Education},
-  author = {Voisin, Carole},
-  commentator = {Seidel, Dietrich}
+  author = {Voisin, Carol},
+  commentator = {Seidel, Dietrich Friedmar}
 }
 
 @InProceedings{ICUS19:C03:G03:S02,
   crossref = {ICUS19},
   title = {Ethics},
   author = {Kelsay, John},
-  commentator = {Walsh, Thomas}
+  commentator = {Walsh, Thomas G.}
 }
 
 
@@ -472,15 +474,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C03:G04:S01,
   crossref = {ICUS19},
   title = {Art},
-  author = {Rubenstein, Betty},
+  author = {Rubenstein, Betty Rogers},
   commentator = {Saunders, Brian}
 }
 
 @InProceedings{ICUS19:C03:G04:S02,
   crossref = {ICUS19},
   title = {History},
-  author = {Garrett, William},
-  commentator = {Mickler, Michael}
+  author = {Garrett, William Robertson},
+  commentator = {Mickler, Michael L.}
 }
 
 
@@ -498,8 +500,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C03:G05:S01,
   crossref = {ICUS19},
   title = {Epistemology},
-  author = {Bolin, Nona},
-  commentator = {Tanabe, Jennifer}
+  author = {Bolin, Nona R.},
+  commentator = {Tanabe, Jennifer P.}
 }
 
 @InProceedings{ICUS19:C03:G05:S02,
@@ -519,7 +521,7 @@ icus.data Data Version 0.9.2
   title = {The Modern University in Transition},
   level = {2},
   editorctype={organizer},
-  editorc = {Kozma, Tamas},
+  editorc = {Kozma, Tamás},
 }
 
 @Set{ICUS19:C04:G01,
@@ -572,7 +574,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C04:G02:S01,
   crossref = {ICUS19},
   title = {Governance in American universities},
-  author = {Beauchamp, Edward},
+  author = {Beauchamp, Edward Robert},
 }
 
 @InProceedings{ICUS19:C04:G02:S02,
@@ -602,7 +604,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C04:G03:S01,
   crossref = {ICUS19},
   title = {Educational renovation needed for Korean universities},
-  author = {Chou, Kyong Chol},
+  author = {Chou, Kyong-Chol},
 }
 
 @InProceedings{ICUS19:C04:G03:S02,
@@ -614,7 +616,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C04:G03:X03,
   crossref = {ICUS19},
   title = {Session discussion},
-  author = {Beauchamp, Edward},
+  author = {Beauchamp, Edward Robert},
 }
 
 
@@ -632,13 +634,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C04:G04:S01,
   crossref = {ICUS19},
   title = {The classical university and its transition: the case of the Arab world},
-  author = {Mina, Fayez M.},
+  author = {Mina, Fayez Mourad},
 }
 
 @InProceedings{ICUS19:C04:G04:S02,
   crossref = {ICUS19},
   title = {African universities: ideals and realities},
-  author = {Adjangba, A. M.},
+  author = {Adjangba, Anoumou M.},
 }
 
 
@@ -656,7 +658,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C04:G05:S01,
   crossref = {ICUS19},
   title = {Radical movements at the universities of Latin America},
-  author = {Romo, Luis A.},
+  author = {{Romo Saltos}, Luis A.},
 }
 
 @InProceedings{ICUS19:C04:G05:S02,
@@ -692,7 +694,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C04:G06:S02,
   crossref = {ICUS19},
   title = {The university at the cross-roads: the case of Yugoslavia},
-  author = {Rakic, Ljubisa},
+  author = {Rakic, Ljubisav M.},
 }
 
 @InProceedings{ICUS19:C04:G06:X03,
@@ -711,7 +713,7 @@ icus.data Data Version 0.9.2
   title = {Cross-Culturization: The Role of Transportation and Communication},
   level = {2},
   editorctype={organizer},
-  editorc = {Seitz, Frederick and Singer, S. Fred},
+  editorc = {Seitz, Frederick and Singer, Siegfried Fred},
 }
 
 @Set{ICUS19:C05:G01,
@@ -754,8 +756,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C05:G02:S01,
   crossref = {ICUS19},
   title = {Air transport},
-  author = {Machol, Robert},
-  commentator = {Muto, Paul T.}
+  author = {Machol, Robert Engel},
+  commentator = {Muto, Paul Tadao}
 }
 
 @InProceedings{ICUS19:C05:G02:S02,
@@ -781,14 +783,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {Communication advances promote cross-culturization},
   author = {Medved, David},
-  commentator = {O'Brien, Brian}
+  commentator = {O'Brien, Brian J.}
 }
 
 @InProceedings{ICUS19:C05:G03:S02,
   crossref = {ICUS19},
   title = {International capital flows},
-  author = {Lee, Dwight},
-  commentator = {Moore, John H. and Elahwal, Abdul Karim A.}
+  author = {Lee, Dwight Ryndle},
+  commentator = {Moore, John H. and Elahwal, Abdel Karim Aly}
 }
 
 
@@ -806,14 +808,14 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C05:G04:S01,
   crossref = {ICUS19},
   title = {Technology transfer: historical and cross-cultural perspective},
-  author = {Fleming, James},
+  author = {Fleming, James Rodger},
   commentator = {Silverman, Joseph}
 }
 
 @InProceedings{ICUS19:C05:G04:S02,
   crossref = {ICUS19},
   title = {Migration as a cross-culture phenomenon},
-  author = {Soyfer, Valery N.},
+  author = {Soyfer, Valery Nikolayevich},
   commentator = {Vachani, Mochan}
 }
 
@@ -864,14 +866,14 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {The deontological factor in the writing of history},
   author = {Munz, Peter},
-  commentator = {Flew, Antony}
+  commentator = {Flew, Antony Garrard Newton}
 }
 
 @InProceedings{ICUS19:C06:G01:S02,
   crossref = {ICUS19},
   title = {Good faith: academic and political},
-  author = {Flew, Antony},
-  commentator = {Post, Stephen}
+  author = {Flew, Antony Garrard Newton},
+  commentator = {Post, Stephen Garrard}
 }
 
 
@@ -889,8 +891,8 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C06:G02:S01,
   crossref = {ICUS19},
   title = {Genetics and euthanasia in a free society: an application of Flew's good faith},
-  author = {Post, Stephen},
-  commentator = {Wilfried {von Studnitz}}
+  author = {Post, Stephen Garrard},
+  commentator = {Studnitz, Wilfried von}
 }
 
 @InProceedings{ICUS19:C06:G02:S02,
@@ -915,15 +917,15 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C06:G03:S01,
   crossref = {ICUS19},
   title = {Values and the social order},
-  author = {Anthony {de Jasay}},
-  commentator = {Kukathas, Chandran and Petroni, Angelo M.}
+  author = {{De Jasay}, Anthony},
+  commentator = {Kukathas, Chandran and Petroni, Angelo Maria}
 }
 
 @InProceedings{ICUS19:C06:G03:S02,
   crossref = {ICUS19},
   title = {Freedom, knowledge, and law as social capital},
-  author = {Weede, Erich},
-  commentator = {Anthony {de Jasay}}
+  author = {Weede, Erich H.},
+  commentator = {{De Jasay}, Anthony}
 }
 
 
@@ -941,7 +943,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C06:G04:S01,
   crossref = {ICUS19},
   title = {The evolution of values and institutions in a free society: the under-pinnings of a market economy},
-  author = {Benson, Bruce L.},
+  author = {Benson, Bruce Lowell},
   commentator = {Tullock, Gordon}
 }
 
@@ -949,7 +951,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {Efficiency, political-economic organization and international competition between states},
   author = {Bernholz, Peter},
-  commentator = {Weede, Erich}
+  commentator = {Weede, Erich H.}
 }
 
 
@@ -975,7 +977,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {On values of socialism},
   author = {Block, Walter},
-  commentator = {Winterberger, Andreas K.}
+  commentator = {Winterberger, Andreas Kaspar}
 }
 
 
@@ -1001,13 +1003,13 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {In search for a transition to a free society},
   author = {Radnitzky, Gerard},
-  commentator = {Hoppe, Hans Herrmann}
+  commentator = {Hoppe, Hans-Hermann}
 }
 
 @InProceedings{ICUS19:C06:G06:S03,
   crossref = {ICUS19},
   title = {The proposals of Wa-ism and the Japanese way of looking at the free, private market order},
-  author = {Kato, Peter E.},
+  author = {Kato, Peter Eiichi},
 }
 
 
