--- a/inst/extdata/icusbib-raw/icus22.bib
+++ b/inst/extdata/icusbib-raw/icus22.bib
@@ -5,7 +5,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS22,
   title = {Absolute Values and the Unity of the Sciences: Science for the Benefit of Humanity},
   titleaddon = {Twenty-second International Conference on the Unity of the Sciences},
-  editora = {Gerholm, Tor Ragnar and Rubenstein, Richard L. and Higatsberger, Michael},
+  editora = {Gerholm, Tor Ragnar and Rubenstein, Richard L. and Higatsberger, Michael J.},
   editoratype = {chairperson},
   shorttitle = {ICUS XXII},
   eventdate = {2000-02-09/2000-02-13},
@@ -26,7 +26,7 @@ icus.data Data Version 0.9.2
   title = {Symmetry in its Various Aspects},
   level = {2},
   editorctype={organizer},
-  editorc = {Nagy, Denes and Atalay, Bulent I.},
+  editorc = {Nagy, Denes and Atalay, Bülent},
 }
 
 @Set{ICUS22:C01:G01,
@@ -115,7 +115,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C01:G05:S01,
   crossref = {ICUS22},
   title = {Various forms of symmetry and beauty},
-  author = {Ricketts, Robert},
+  author = {Ricketts, Robert Murray},
 }
 
 @InProceedings{ICUS22:C01:G05:S02,
@@ -145,7 +145,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C01:G06:S02,
   crossref = {ICUS22},
   title = {The two Leonardos, Part I. Nature's numbers: Leonardo Fibonacci di Pisa},
-  author = {Atalay, Bulent I.},
+  author = {Atalay, Bülent},
 }
 
 
@@ -163,7 +163,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C01:G07:S01,
   crossref = {ICUS22},
   title = {The two Leonardos, Part I. Leonardo da Vinci},
-  author = {Atalay, Bulent I.},
+  author = {Atalay, Bülent},
 }
 
 
@@ -176,7 +176,7 @@ icus.data Data Version 0.9.2
   title = {Holistic Medicine in Modern Health Care},
   level = {2},
   editorctype={organizer},
-  editorc = {Jerome, Norge W. and Becker, Carl},
+  editorc = {Jerome, Norge Winifred and Becker, Carl B.},
 }
 
 @Set{ICUS22:C02:G01,
@@ -293,6 +293,12 @@ icus.data Data Version 0.9.2
   author = {Kim, Tae-Soo},
 }
 
+@InProceedings{ICUS22:C02:G06:X03,
+  crossref = {ICUS22},
+  title = {Commentators/discussants},
+  author = {Chareonthaitewee, Pradit and Lau, Cheryl and Chin, Kyung-Hee
+  and Watanabe, Hisayoshi and Koh, Byung-Hee},
+}
 
 
 @Set{ICUS22:C03,
@@ -344,7 +350,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C03:G02:S01,
   crossref = {ICUS22},
   title = {The ancestral homeland of plague and the black death's area of origin},
-  author = {Benedictow, Ole J.},
+  author = {Benedictow, Ole Jørgen},
 }
 
 @InProceedings{ICUS22:C03:G02:S02,
@@ -488,13 +494,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C04:G03:S01,
   crossref = {ICUS22},
   title = {Mercenaries, guerillas, militias, and the defense of minimal states and free societies},
-  author = {Stromberg, Joseph R.},
+  author = {Stromberg, Joseph Robert},
 }
 
 @InProceedings{ICUS22:C04:G03:S02,
   crossref = {ICUS22},
   title = {Storms, strikes, and surveillance: a case study in the militarization of economy and society},
-  author = {Fleming, James R.},
+  author = {Fleming, James Rodger},
 }
 
 
@@ -512,13 +518,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C04:G05:S01,
   crossref = {ICUS22},
   title = {Secession and the production of defense},
-  author = {Hülsmann, Guido},
+  author = {Hülsmann, Jörg Guido},
 }
 
 @InProceedings{ICUS22:C04:G05:S02,
   crossref = {ICUS22},
   title = {The will to be free. The role of ideology in national defense},
-  author = {Hummel, Jeffrey},
+  author = {Hummel, Jeffrey Rogers},
 }
 
 
@@ -542,7 +548,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C04:G06:S02,
   crossref = {ICUS22},
   title = {Police, adjudication, and arbitration. Public or private?},
-  author = {Kinsella, Stephan},
+  author = {Kinsella, Norman Stephan},
 }
 
 
@@ -563,6 +569,12 @@ icus.data Data Version 0.9.2
   author = {Hoppe, Hans-Hermann},
 }
 
+@InProceedings{ICUS22:C04:G07:X02,
+  crossref = {ICUS22},
+  title = {On government and the private production of defense},
+  author = {Comănescu, Dan Cristian and Sima, Josef},
+}
+
 
 
 @Set{ICUS22:C05,
@@ -573,7 +585,7 @@ icus.data Data Version 0.9.2
   title = {Non-linear Structures in Natural Science and Economics},
   level = {2},
   editorctype={organizer},
-  editorc = {Alonso, Marcelo and Kingsep, Alexander},
+  editorc = {Alonso, Marcelo and Kingsep, Aleksandr Sergeevič},
 }
 
 @Set{ICUS22:C05:G01,
@@ -590,13 +602,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C05:G01:S01,
   crossref = {ICUS22},
   title = {Non-linear structures and dynamics in nontrivial chemical systems},
-  author = {Rambidi, Nicholas G.},
+  author = {Rambidi, Nicholas George},
 }
 
 @InProceedings{ICUS22:C05:G01:S02,
   crossref = {ICUS22},
   title = {Patterns, waves and solitons in fluids},
-  author = {Velarde, Manuel},
+  author = {Velarde, Manuel García},
 }
 
 
@@ -614,7 +626,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C05:G02:S01,
   crossref = {ICUS22},
   title = {Non-linear dynamics of astrophysical disks},
-  author = {Fridman, Alexei M.},
+  author = {Fridman, Alexei Maksimovich},
 }
 
 @InProceedings{ICUS22:C05:G02:S02,
@@ -638,7 +650,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C05:G03:S01,
   crossref = {ICUS22},
   title = {Non-linear phenomena in the model of blood coagulation},
-  author = {Lobanov, A. I.},
+  author = {Lobanov, Aleksei Ivanovich},
 }
 
 @InProceedings{ICUS22:C05:G03:S02,
@@ -668,7 +680,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C05:G04:S02,
   crossref = {ICUS22},
   title = {Non-linear processes of accelerated destruction of the earth's crust},
-  author = {Artyushkov, Evgeny V.},
+  author = {Artyushkov, Evgeniĭ Viktorovich},
 }
 
 
@@ -686,7 +698,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C05:G05:S01,
   crossref = {ICUS22},
   title = {Non-linear dissipative structures in hot plasmas},
-  author = {Razumova, Ksenia A.},
+  author = {Razumova, Ksenia Aleksandrovna},
 }
 
 @InProceedings{ICUS22:C05:G05:S02,
@@ -716,7 +728,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C05:G06:S02,
   crossref = {ICUS22},
   title = {A firm model in a transitional Russian economy},
-  author = {Pospelov, Igor G.},
+  author = {Pospelov, Igorʹ Germogenovich},
 }
 
 
@@ -753,7 +765,7 @@ icus.data Data Version 0.9.2
   title = {Science and Music: A Unifying Concept},
   level = {2},
   editorctype={organizer},
-  editorc = {Daudel, Raymond and Maruani, Jean and Rantanen, Marja},
+  editorc = {Daudel, Raymond and Maruani, Jean and {Arvola-Rantanen}, Marja},
 }
 
 @Set{ICUS22:C06:G01,
@@ -770,7 +782,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C06:G01:S01,
   crossref = {ICUS22},
   title = {Musical patterns at the various levels of complexity in nature},
-  author = {Maruani, Jean and Rantanen, Marja},
+  author = {Maruani, Jean and {Arvola-Rantanen}, Marja},
 }
 
 @InProceedings{ICUS22:C06:G01:S02,
@@ -884,13 +896,13 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C06:G06:S01,
   crossref = {ICUS22},
   title = {Musical patterns in molecular spectra and structures},
-  author = {Lefebvre, Roland and Rantanen, Marja},
+  author = {Lefebvre, Roland and {Arvola-Rantanen}, Marja},
 }
 
 @InProceedings{ICUS22:C06:G06:S02,
   crossref = {ICUS22},
   title = {The human body as a crossroad between inner and outer vibrations: examples of biological rhythms},
-  author = {{Gaudeau de Gerlicz}, Claude},
+  author = {Gaudeau, Claude},
 }
 
 
@@ -939,6 +951,12 @@ icus.data Data Version 0.9.2
   crossref = {ICUS22},
   title = {Music and values in Western and Eastern cultures},
   author = {Eaton, David},
+}
+
+@InProceedings{ICUS22:C06:G08:X03,
+  crossref = {ICUS22},
+  title = {Discussant},
+  author = {Delchev, Yavor},
 }
 
 
